@@ -1,16 +1,19 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.ingest.common;
 
+import org.elasticsearch.common.Strings;
 import org.elasticsearch.ingest.IngestDocument;
 import org.elasticsearch.ingest.Processor;
 import org.elasticsearch.ingest.RandomDocumentPicks;
+import org.elasticsearch.ingest.TestIngestDocument;
 import org.elasticsearch.test.ESTestCase;
 
 import java.util.ArrayList;
@@ -19,11 +22,14 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.stream.Stream;
 
 import static org.elasticsearch.ingest.IngestDocumentMatcher.assertIngestDocument;
 import static org.elasticsearch.ingest.common.ConvertProcessor.Type;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.everyItem;
+import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.sameInstance;
 
@@ -91,17 +97,15 @@ public class ConvertProcessorTests extends ESTestCase {
         try {
             processor.execute(ingestDocument);
             fail("processor execute should have failed");
-        } catch(IllegalArgumentException e) {
+        } catch (IllegalArgumentException e) {
             assertThat(e.getMessage(), equalTo("unable to convert [" + value + "] to integer"));
         }
     }
 
     public void testConvertLong() throws Exception {
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random());
-        Map<String, Long> expectedResult = new HashMap<>();
         long randomLong = randomLong();
         String fieldName = RandomDocumentPicks.addRandomField(random(), ingestDocument, randomLong);
-        expectedResult.put(fieldName, randomLong);
 
         Processor processor = new ConvertProcessor(randomAlphaOfLength(10), null, fieldName, fieldName, Type.LONG, false);
         processor.execute(ingestDocument);
@@ -161,17 +165,15 @@ public class ConvertProcessorTests extends ESTestCase {
         try {
             processor.execute(ingestDocument);
             fail("processor execute should have failed");
-        } catch(IllegalArgumentException e) {
+        } catch (IllegalArgumentException e) {
             assertThat(e.getMessage(), equalTo("unable to convert [" + value + "] to long"));
         }
     }
 
     public void testConvertDouble() throws Exception {
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random());
-        Map<String, Double> expectedResult = new HashMap<>();
         double randomDouble = randomDouble();
         String fieldName = RandomDocumentPicks.addRandomField(random(), ingestDocument, randomDouble);
-        expectedResult.put(fieldName, randomDouble);
 
         Processor processor = new ConvertProcessor(randomAlphaOfLength(10), null, fieldName, fieldName, Type.DOUBLE, false);
         processor.execute(ingestDocument);
@@ -204,17 +206,15 @@ public class ConvertProcessorTests extends ESTestCase {
         try {
             processor.execute(ingestDocument);
             fail("processor execute should have failed");
-        } catch(IllegalArgumentException e) {
+        } catch (IllegalArgumentException e) {
             assertThat(e.getMessage(), equalTo("unable to convert [" + value + "] to double"));
         }
     }
 
     public void testConvertFloat() throws Exception {
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random());
-        Map<String, Float> expectedResult = new HashMap<>();
         float randomFloat = randomFloat();
         String fieldName = RandomDocumentPicks.addRandomField(random(), ingestDocument, randomFloat);
-        expectedResult.put(fieldName, randomFloat);
 
         Processor processor = new ConvertProcessor(randomAlphaOfLength(10), null, fieldName, fieldName, Type.FLOAT, false);
         processor.execute(ingestDocument);
@@ -247,7 +247,7 @@ public class ConvertProcessorTests extends ESTestCase {
         try {
             processor.execute(ingestDocument);
             fail("processor execute should have failed");
-        } catch(IllegalArgumentException e) {
+        } catch (IllegalArgumentException e) {
             assertThat(e.getMessage(), equalTo("unable to convert [" + value + "] to float"));
         }
     }
@@ -293,7 +293,7 @@ public class ConvertProcessorTests extends ESTestCase {
         if (randomBoolean()) {
             fieldValue = "string-" + randomAlphaOfLengthBetween(1, 10);
         } else {
-            //verify that only proper boolean values are supported and we are strict about it
+            // verify that only proper boolean values are supported and we are strict about it
             fieldValue = randomFrom("on", "off", "yes", "no", "0", "1");
         }
         ingestDocument.setFieldValue(fieldName, fieldValue);
@@ -302,33 +302,45 @@ public class ConvertProcessorTests extends ESTestCase {
         try {
             processor.execute(ingestDocument);
             fail("processor execute should have failed");
-        } catch(Exception e) {
+        } catch (Exception e) {
             assertThat(e.getMessage(), equalTo("[" + fieldValue + "] is not a boolean value, cannot convert to boolean"));
         }
     }
 
     public void testConvertIpV4() throws Exception {
-        // valid ipv4 address
-        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>());
-        String fieldName = RandomDocumentPicks.randomFieldName(random());
-        String targetField = randomValueOtherThan(fieldName, () -> RandomDocumentPicks.randomFieldName(random()));
-        String validIpV4 = "192.168.1.1";
-        ingestDocument.setFieldValue(fieldName, validIpV4);
+        {
+            // valid ipv4 address
+            IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>());
+            String fieldName = RandomDocumentPicks.randomFieldName(random());
+            // We can't have targetField be a nested field under fieldName since we're going to set a top-level value for fieldName:
+            String targetField = randomValueOtherThanMany(
+                targetFieldName -> fieldName.equals(targetFieldName) || targetFieldName.startsWith(fieldName + "."),
+                () -> RandomDocumentPicks.randomFieldName(random())
+            );
+            String validIpV4 = "192.168.1.1";
+            ingestDocument.setFieldValue(fieldName, validIpV4);
 
-        Processor processor = new ConvertProcessor(randomAlphaOfLength(10), null, fieldName, targetField, Type.IP, false);
-        processor.execute(ingestDocument);
-        assertThat(ingestDocument.getFieldValue(targetField, String.class), equalTo(validIpV4));
+            Processor processor = new ConvertProcessor(randomAlphaOfLength(10), null, fieldName, targetField, Type.IP, false);
+            processor.execute(ingestDocument);
+            assertThat(ingestDocument.getFieldValue(targetField, String.class), equalTo(validIpV4));
+        }
 
-        // invalid ipv4 address
-        IngestDocument ingestDocument2 = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>());
-        fieldName = RandomDocumentPicks.randomFieldName(random());
-        targetField = randomValueOtherThan(fieldName, () -> RandomDocumentPicks.randomFieldName(random()));
-        String invalidIpV4 = "192.168.1.256";
-        ingestDocument2.setFieldValue(fieldName, invalidIpV4);
+        {
+            // invalid ipv4 address
+            IngestDocument ingestDocument2 = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>());
+            String fieldName = RandomDocumentPicks.randomFieldName(random());
+            // We can't have targetField be a nested field under fieldName since we're going to set a top-level value for fieldName:
+            String targetField = randomValueOtherThanMany(
+                targetFieldName -> fieldName.equals(targetFieldName) || targetFieldName.startsWith(fieldName + "."),
+                () -> RandomDocumentPicks.randomFieldName(random())
+            );
+            String invalidIpV4 = "192.168.1.256";
+            ingestDocument2.setFieldValue(fieldName, invalidIpV4);
 
-        Processor processor2 = new ConvertProcessor(randomAlphaOfLength(10), null, fieldName, targetField, Type.IP, false);
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> processor2.execute(ingestDocument2));
-        assertThat(e.getMessage(), containsString("'" + invalidIpV4 + "' is not an IP string literal."));
+            Processor processor2 = new ConvertProcessor(randomAlphaOfLength(10), null, fieldName, targetField, Type.IP, false);
+            IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> processor2.execute(ingestDocument2));
+            assertThat(e.getMessage(), containsString("'" + invalidIpV4 + "' is not an IP string literal."));
+        }
     }
 
     public void testConvertIpV6() throws Exception {
@@ -382,24 +394,23 @@ public class ConvertProcessorTests extends ESTestCase {
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random());
         Object fieldValue;
         String expectedFieldValue;
-        switch(randomIntBetween(0, 2)) {
-            case 0:
+        switch (randomIntBetween(0, 2)) {
+            case 0 -> {
                 float randomFloat = randomFloat();
                 fieldValue = randomFloat;
                 expectedFieldValue = Float.toString(randomFloat);
-                break;
-            case 1:
+            }
+            case 1 -> {
                 int randomInt = randomInt();
                 fieldValue = randomInt;
                 expectedFieldValue = Integer.toString(randomInt);
-                break;
-            case 2:
+            }
+            case 2 -> {
                 boolean randomBoolean = randomBoolean();
                 fieldValue = randomBoolean;
                 expectedFieldValue = Boolean.toString(randomBoolean);
-                break;
-            default:
-                throw new UnsupportedOperationException();
+            }
+            default -> throw new UnsupportedOperationException();
         }
         String fieldName = RandomDocumentPicks.addRandomField(random(), ingestDocument, fieldValue);
 
@@ -416,34 +427,33 @@ public class ConvertProcessorTests extends ESTestCase {
         for (int j = 0; j < numItems; j++) {
             Object randomValue;
             String randomValueString;
-            switch(randomIntBetween(0, 2)) {
-                case 0:
+            switch (randomIntBetween(0, 4)) {
+                case 0 -> {
                     float randomFloat = randomFloat();
                     randomValue = randomFloat;
                     randomValueString = Float.toString(randomFloat);
-                    break;
-                case 1:
+                }
+                case 1 -> {
                     int randomInt = randomInt();
                     randomValue = randomInt;
                     randomValueString = Integer.toString(randomInt);
-                    break;
-                case 2:
+                }
+                case 2 -> {
                     boolean randomBoolean = randomBoolean();
                     randomValue = randomBoolean;
                     randomValueString = Boolean.toString(randomBoolean);
-                    break;
-                case 3:
+                }
+                case 3 -> {
                     long randomLong = randomLong();
                     randomValue = randomLong;
                     randomValueString = Long.toString(randomLong);
-                    break;
-                case 4:
+                }
+                case 4 -> {
                     double randomDouble = randomDouble();
                     randomValue = randomDouble;
                     randomValueString = Double.toString(randomDouble);
-                    break;
-                default:
-                    throw new UnsupportedOperationException();
+                }
+                default -> throw new UnsupportedOperationException();
             }
             fieldValue.add(randomValue);
             expectedList.add(randomValueString);
@@ -500,23 +510,19 @@ public class ConvertProcessorTests extends ESTestCase {
 
     public void testAutoConvertNotString() throws Exception {
         Object randomValue;
-        switch(randomIntBetween(0, 2)) {
-            case 0:
-                float randomFloat = randomFloat();
-                randomValue = randomFloat;
-                break;
-            case 1:
-                int randomInt = randomInt();
-                randomValue = randomInt;
-                break;
-            case 2:
-                boolean randomBoolean = randomBoolean();
-                randomValue = randomBoolean;
-                break;
-            default:
-                throw new UnsupportedOperationException();
+        switch (randomIntBetween(0, 2)) {
+            case 0 -> {
+                randomValue = randomFloat();
+            }
+            case 1 -> {
+                randomValue = randomInt();
+            }
+            case 2 -> {
+                randomValue = randomBoolean();
+            }
+            default -> throw new UnsupportedOperationException();
         }
-        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), Collections.singletonMap("field", randomValue));
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>(Map.of("field", randomValue)));
         Processor processor = new ConvertProcessor(randomAlphaOfLength(10), null, "field", "field", Type.AUTO, false);
         processor.execute(ingestDocument);
         Object convertedValue = ingestDocument.getFieldValue("field", Object.class);
@@ -525,7 +531,7 @@ public class ConvertProcessorTests extends ESTestCase {
 
     public void testAutoConvertStringNotMatched() throws Exception {
         String value = "notAnIntFloatOrBool";
-        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), Collections.singletonMap("field", value));
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>(Map.of("field", value)));
         Processor processor = new ConvertProcessor(randomAlphaOfLength(10), null, "field", "field", Type.AUTO, false);
         processor.execute(ingestDocument);
         Object convertedValue = ingestDocument.getFieldValue("field", Object.class);
@@ -535,8 +541,7 @@ public class ConvertProcessorTests extends ESTestCase {
     public void testAutoConvertMatchBoolean() throws Exception {
         boolean randomBoolean = randomBoolean();
         String booleanString = Boolean.toString(randomBoolean);
-        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(),
-            Collections.singletonMap("field", booleanString));
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>(Map.of("field", booleanString)));
         Processor processor = new ConvertProcessor(randomAlphaOfLength(10), null, "field", "field", Type.AUTO, false);
         processor.execute(ingestDocument);
         Object convertedValue = ingestDocument.getFieldValue("field", Object.class);
@@ -546,7 +551,7 @@ public class ConvertProcessorTests extends ESTestCase {
     public void testAutoConvertMatchInteger() throws Exception {
         int randomInt = randomInt();
         String randomString = Integer.toString(randomInt);
-        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), Collections.singletonMap("field", randomString));
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>(Map.of("field", randomString)));
         Processor processor = new ConvertProcessor(randomAlphaOfLength(10), null, "field", "field", Type.AUTO, false);
         processor.execute(ingestDocument);
         Object convertedValue = ingestDocument.getFieldValue("field", Object.class);
@@ -556,7 +561,7 @@ public class ConvertProcessorTests extends ESTestCase {
     public void testAutoConvertMatchLong() throws Exception {
         long randomLong = randomLong();
         String randomString = Long.toString(randomLong);
-        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), Collections.singletonMap("field", randomString));
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>(Map.of("field", randomString)));
         Processor processor = new ConvertProcessor(randomAlphaOfLength(10), null, "field", "field", Type.AUTO, false);
         processor.execute(ingestDocument);
         Object convertedValue = ingestDocument.getFieldValue("field", Object.class);
@@ -566,8 +571,8 @@ public class ConvertProcessorTests extends ESTestCase {
     public void testAutoConvertDoubleNotMatched() throws Exception {
         double randomDouble = randomDouble();
         String randomString = Double.toString(randomDouble);
-        float randomFloat  = Float.parseFloat(randomString);
-        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), Collections.singletonMap("field", randomString));
+        float randomFloat = Float.parseFloat(randomString);
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>(Map.of("field", randomString)));
         Processor processor = new ConvertProcessor(randomAlphaOfLength(10), null, "field", "field", Type.AUTO, false);
         processor.execute(ingestDocument);
         Object convertedValue = ingestDocument.getFieldValue("field", Object.class);
@@ -578,7 +583,7 @@ public class ConvertProcessorTests extends ESTestCase {
     public void testAutoConvertMatchFloat() throws Exception {
         float randomFloat = randomFloat();
         String randomString = Float.toString(randomFloat);
-        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), Collections.singletonMap("field", randomString));
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>(Map.of("field", randomString)));
         Processor processor = new ConvertProcessor(randomAlphaOfLength(10), null, "field", "field", Type.AUTO, false);
         processor.execute(ingestDocument);
         Object convertedValue = ingestDocument.getFieldValue("field", Object.class);
@@ -586,7 +591,7 @@ public class ConvertProcessorTests extends ESTestCase {
     }
 
     public void testTargetField() throws Exception {
-        IngestDocument ingestDocument = new IngestDocument(new HashMap<>(), new HashMap<>());
+        IngestDocument ingestDocument = TestIngestDocument.emptyIngestDocument();
         int randomInt = randomInt();
         String fieldName = RandomDocumentPicks.addRandomField(random(), ingestDocument, String.valueOf(randomInt));
         String targetField = fieldName + randomAlphaOfLength(5);
@@ -594,5 +599,328 @@ public class ConvertProcessorTests extends ESTestCase {
         processor.execute(ingestDocument);
         assertThat(ingestDocument.getFieldValue(fieldName, String.class), equalTo(String.valueOf(randomInt)));
         assertThat(ingestDocument.getFieldValue(targetField, Integer.class), equalTo(randomInt));
+    }
+
+    /**
+     * This class encapsulates a matrix of tests for converting between different numeric types, including string representations of
+     * numbers, and including conversion to {@link Type#AUTO}.
+     *
+     * <p>The {@link #streamTests()} returns a stream of test cases. The {@link TestCase#run()} method of each case runs that test.
+     *
+     * <p>N.B. The purpose of this test matrix is at least partly to describe the current behaviour, to prevent changes being made
+     * accidentally. The presence of a test case in this list is not intended as a statement that this is actually the intended behaviour.
+     */
+    private static class NumericConversionTestMatrix {
+
+        private static final String TEST_CASES_CSV = """
+            Integer,123,STRING,String,123
+            Long,123,STRING,String,123
+            Float,123.0,STRING,String,123.0
+            Double,123.0,STRING,String,123.0
+            String,123,STRING,String,123
+            String,0x7b,STRING,String,0x7b
+            String,123.0,STRING,String,123.0
+            String,1.230000e+02,STRING,String,1.230000e+02
+            Float,123.45,STRING,String,123.45
+            Double,123.45,STRING,String,123.45
+            String,123.45,STRING,String,123.45
+            String,1.234500e+02,STRING,String,1.234500e+02
+            String,0x1.edcdp6,STRING,String,0x1.edcdp6
+            Integer,16777217,STRING,String,16777217
+            Long,16777217,STRING,String,16777217
+            Double,1.6777217E7,STRING,String,1.6777217E7
+            String,16777217,STRING,String,16777217
+            String,16777217.0,STRING,String,16777217.0
+            Long,2147483648,STRING,String,2147483648
+            Double,2.147483648E9,STRING,String,2.147483648E9
+            String,2147483648,STRING,String,2147483648
+            String,2147483648.0,STRING,String,2147483648.0
+            Long,9007199254740993,STRING,String,9007199254740993
+            String,9007199254740993,STRING,String,9007199254740993
+            String,9007199254740993.0,STRING,String,9007199254740993.0
+            String,9223372036854775808,STRING,String,9223372036854775808
+            String,9223372036854775808.0,STRING,String,9223372036854775808.0
+            String,680564693277057720000000000000000000000,STRING,String,680564693277057720000000000000000000000
+            String,680564693277057720000000000000000000000.0,STRING,String,680564693277057720000000000000000000000.0
+            Integer,123,INTEGER,Integer,123
+            Long,123,INTEGER,Integer,123
+            Float,123.0,INTEGER,THROWS,
+            Double,123.0,INTEGER,THROWS,
+            String,123,INTEGER,Integer,123
+            String,0x7b,INTEGER,Integer,123
+            String,123.0,INTEGER,THROWS,
+            String,1.230000e+02,INTEGER,THROWS,
+            Float,123.45,INTEGER,THROWS,
+            Double,123.45,INTEGER,THROWS,
+            String,123.45,INTEGER,THROWS,
+            String,1.234500e+02,INTEGER,THROWS,
+            String,0x1.edcdp6,INTEGER,THROWS,
+            Integer,16777217,INTEGER,Integer,16777217
+            Long,16777217,INTEGER,Integer,16777217
+            Double,1.6777217E7,INTEGER,THROWS,
+            String,16777217,INTEGER,Integer,16777217
+            String,16777217.0,INTEGER,THROWS,
+            Long,2147483648,INTEGER,THROWS,
+            Double,2.147483648E9,INTEGER,THROWS,
+            String,2147483648,INTEGER,THROWS,
+            String,2147483648.0,INTEGER,THROWS,
+            Long,9007199254740993,INTEGER,THROWS,
+            String,9007199254740993,INTEGER,THROWS,
+            String,9007199254740993.0,INTEGER,THROWS,
+            String,9223372036854775808,INTEGER,THROWS,
+            String,9223372036854775808.0,INTEGER,THROWS,
+            String,680564693277057720000000000000000000000,INTEGER,THROWS,
+            String,680564693277057720000000000000000000000.0,INTEGER,THROWS,
+            Integer,123,LONG,Long,123
+            Long,123,LONG,Long,123
+            Float,123.0,LONG,THROWS,
+            Double,123.0,LONG,THROWS,
+            String,123,LONG,Long,123
+            String,0x7b,LONG,Long,123
+            String,123.0,LONG,THROWS,
+            String,1.230000e+02,LONG,THROWS,
+            Float,123.45,LONG,THROWS,
+            Double,123.45,LONG,THROWS,
+            String,123.45,LONG,THROWS,
+            String,1.234500e+02,LONG,THROWS,
+            String,0x1.edcdp6,LONG,THROWS,
+            Integer,16777217,LONG,Long,16777217
+            Long,16777217,LONG,Long,16777217
+            Double,1.6777217E7,LONG,THROWS,
+            String,16777217,LONG,Long,16777217
+            String,16777217.0,LONG,THROWS,
+            Long,2147483648,LONG,Long,2147483648
+            Double,2.147483648E9,LONG,THROWS,
+            String,2147483648,LONG,Long,2147483648
+            String,2147483648.0,LONG,THROWS,
+            Long,9007199254740993,LONG,Long,9007199254740993
+            String,9007199254740993,LONG,Long,9007199254740993
+            String,9007199254740993.0,LONG,THROWS,
+            String,9223372036854775808,LONG,THROWS,
+            String,9223372036854775808.0,LONG,THROWS,
+            String,680564693277057720000000000000000000000,LONG,THROWS,
+            String,680564693277057720000000000000000000000.0,LONG,THROWS,
+            Integer,123,DOUBLE,Double,123.0
+            Long,123,DOUBLE,Double,123.0
+            Float,123.0,DOUBLE,Double,123.0
+            Double,123.0,DOUBLE,Double,123.0
+            String,123,DOUBLE,Double,123.0
+            String,0x7b,DOUBLE,THROWS,
+            String,123.0,DOUBLE,Double,123.0
+            String,1.230000e+02,DOUBLE,Double,123.0
+            Float,123.45,DOUBLE,Double,123.45
+            Double,123.45,DOUBLE,Double,123.45
+            String,123.45,DOUBLE,Double,123.45
+            String,1.234500e+02,DOUBLE,Double,123.45
+            String,0x1.edcdp6,DOUBLE,Double,123.4501953125
+            Integer,16777217,DOUBLE,Double,1.6777217E7
+            Long,16777217,DOUBLE,Double,1.6777217E7
+            Double,1.6777217E7,DOUBLE,Double,1.6777217E7
+            String,16777217,DOUBLE,Double,1.6777217E7
+            String,16777217.0,DOUBLE,Double,1.6777217E7
+            Long,2147483648,DOUBLE,Double,2.147483648E9
+            Double,2.147483648E9,DOUBLE,Double,2.147483648E9
+            String,2147483648,DOUBLE,Double,2.147483648E9
+            String,2147483648.0,DOUBLE,Double,2.147483648E9
+            Long,9007199254740993,DOUBLE,Double,9.007199254740992E15
+            String,9007199254740993,DOUBLE,Double,9.007199254740992E15
+            String,9007199254740993.0,DOUBLE,Double,9.007199254740992E15
+            String,9223372036854775808,DOUBLE,Double,9.223372036854776E18
+            String,9223372036854775808.0,DOUBLE,Double,9.223372036854776E18
+            String,680564693277057720000000000000000000000,DOUBLE,Double,6.805646932770577E38
+            String,680564693277057720000000000000000000000.0,DOUBLE,Double,6.805646932770577E38
+            Integer,123,FLOAT,Float,123.0
+            Long,123,FLOAT,Float,123.0
+            Float,123.0,FLOAT,Float,123.0
+            Double,123.0,FLOAT,Float,123.0
+            String,123,FLOAT,Float,123.0
+            String,0x7b,FLOAT,THROWS,
+            String,123.0,FLOAT,Float,123.0
+            String,1.230000e+02,FLOAT,Float,123.0
+            Float,123.45,FLOAT,Float,123.45
+            Double,123.45,FLOAT,Float,123.45
+            String,123.45,FLOAT,Float,123.45
+            String,1.234500e+02,FLOAT,Float,123.45
+            String,0x1.edcdp6,FLOAT,Float,123.450195
+            Integer,16777217,FLOAT,Float,1.6777216E7
+            Long,16777217,FLOAT,Float,1.6777216E7
+            Double,1.6777217E7,FLOAT,Float,1.6777216E7
+            String,16777217,FLOAT,Float,1.6777216E7
+            String,16777217.0,FLOAT,Float,1.6777216E7
+            Long,2147483648,FLOAT,Float,2.1474836E9
+            Double,2.147483648E9,FLOAT,Float,2.1474836E9
+            String,2147483648,FLOAT,Float,2.1474836E9
+            String,2147483648.0,FLOAT,Float,2.1474836E9
+            Long,9007199254740993,FLOAT,Float,9.007199E15
+            String,9007199254740993,FLOAT,Float,9.007199E15
+            String,9007199254740993.0,FLOAT,Float,9.007199E15
+            String,9223372036854775808,FLOAT,Float,9.223372E18
+            String,9223372036854775808.0,FLOAT,Float,9.223372E18
+            String,680564693277057720000000000000000000000,FLOAT,Float,Infinity
+            String,680564693277057720000000000000000000000.0,FLOAT,Float,Infinity
+            Integer,123,AUTO,Integer,123
+            Long,123,AUTO,Long,123
+            Float,123.0,AUTO,Float,123.0
+            Double,123.0,AUTO,Double,123.0
+            String,123,AUTO,Integer,123
+            String,0x7b,AUTO,Integer,123
+            String,123.0,AUTO,Float,123.0
+            String,1.230000e+02,AUTO,Float,123.0
+            Float,123.45,AUTO,Float,123.45
+            Double,123.45,AUTO,Double,123.45
+            String,123.45,AUTO,Float,123.45
+            String,1.234500e+02,AUTO,Float,123.45
+            String,0x1.edcdp6,AUTO,Float,123.450195
+            Integer,16777217,AUTO,Integer,16777217
+            Long,16777217,AUTO,Long,16777217
+            Double,1.6777217E7,AUTO,Double,1.6777217E7
+            String,16777217,AUTO,Integer,16777217
+            String,16777217.0,AUTO,Float,1.6777216E7
+            Long,2147483648,AUTO,Long,2147483648
+            Double,2.147483648E9,AUTO,Double,2.147483648E9
+            String,2147483648,AUTO,Long,2147483648
+            String,2147483648.0,AUTO,Float,2.1474836E9
+            Long,9007199254740993,AUTO,Long,9007199254740993
+            String,9007199254740993,AUTO,Long,9007199254740993
+            String,9007199254740993.0,AUTO,Float,9.007199E15
+            String,9223372036854775808,AUTO,Float,9.223372E18
+            String,9223372036854775808.0,AUTO,Float,9.223372E18
+            String,680564693277057720000000000000000000000,AUTO,Float,Infinity
+            String,680564693277057720000000000000000000000.0,AUTO,Float,Infinity
+            """;
+
+        static Stream<TestCase> streamTests() {
+            return Stream.of(TEST_CASES_CSV.split("\n")).map(NumericConversionTestMatrix::parseTestCaseFromCsv);
+        }
+
+        private static TestCase parseTestCaseFromCsv(String csv) {
+            String[] fields = csv.split(",");
+            return switch (fields.length) {
+                case 5 -> new ExpectConvertsTestCase(
+                    parseObjectOfType(fields[0], fields[1]),
+                    Type.valueOf(fields[2]),
+                    parseObjectOfType(fields[3], fields[4])
+                );
+                case 4 -> {
+                    if (fields[3].equals("THROWS")) {
+                        yield new ExpectThrowsTestCase(parseObjectOfType(fields[0], fields[1]), Type.valueOf(fields[2]));
+                    } else {
+                        throw new IllegalArgumentException("With 4 comma-delimited fields, expected 4th to be THROWS, was " + fields[3]);
+                    }
+                }
+                default -> throw new IllegalArgumentException("Expected 4 or 5 comma-delimited fields, got " + csv);
+            };
+        }
+
+        private static Object parseObjectOfType(String type, String string) {
+            return switch (type) {
+                case "Integer" -> Integer.decode(string);
+                case "Long" -> Long.decode(string);
+                case "Float" -> Float.valueOf(string);
+                case "Double" -> Double.valueOf(string);
+                case "String" -> string;
+                default -> throw new IllegalArgumentException("Unexpected type " + type);
+            };
+        }
+
+        interface TestCase {
+
+            Object input();
+
+            Type targetType();
+
+            TestResult run();
+
+            default Object attemptConversion() throws Exception {
+                IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>(Map.of("field", input())));
+                Processor processor = new ConvertProcessor(randomAlphaOfLength(10), null, "field", "field", targetType(), false);
+                processor.execute(ingestDocument);
+                return ingestDocument.getFieldValue("field", Object.class);
+            }
+
+            default String describeTest() {
+                return Strings.format("converting (%s) %s to %s", input().getClass().getSimpleName(), input(), targetType());
+            }
+        }
+
+        record ExpectConvertsTestCase(Object input, Type targetType, Object expectedOutput) implements TestCase {
+
+            @Override
+            public TestResult run() {
+                try {
+                    Object actualOutput = attemptConversion();
+                    if (expectedOutput.equals(actualOutput)) {
+                        return new TestPass(this);
+                    } else {
+                        return new TestFailureWrongValue(this, expectedOutput, actualOutput);
+                    }
+                } catch (Exception e) {
+                    return new TestFailureUnexpectedException(this, expectedOutput, e);
+                }
+            }
+
+            @Override
+            public String toString() {
+                return Strings.format(
+                    "Expected %s to give (%s) %s",
+                    describeTest(),
+                    expectedOutput.getClass().getSimpleName(),
+                    expectedOutput
+                );
+            }
+        }
+
+        record ExpectThrowsTestCase(Object input, Type targetType) implements TestCase {
+
+            @Override
+            public TestResult run() {
+                try {
+                    Object actualOutput = attemptConversion();
+                    return new TestFailureMissingException(this, actualOutput);
+                } catch (Exception e) {
+                    return new TestPass(this);
+                }
+            }
+
+            @Override
+            public String toString() {
+                return Strings.format("Expected %s to throw", describeTest());
+            }
+        }
+
+        interface TestResult {}
+
+        record TestPass(TestCase testCase) implements TestResult {}
+
+        record TestFailureWrongValue(TestCase testCase, Object expected, Object actual) implements TestResult {
+
+            @Override
+            public String toString() {
+                return Strings.format("%s but got (%s) %s", testCase, actual.getClass().getSimpleName(), actual);
+            }
+        }
+
+        record TestFailureUnexpectedException(TestCase testCase, Object expected, Exception threw) implements TestResult {
+
+            @Override
+            public String toString() {
+                return Strings.format("%s but threw (%s) %s", testCase, threw.getClass().getSimpleName(), threw.getMessage());
+            }
+        }
+
+        record TestFailureMissingException(TestCase testCase, Object actual) implements TestResult {
+
+            @Override
+            public String toString() {
+                return Strings.format("%s but got (%s) %s", testCase, actual.getClass().getSimpleName(), actual);
+            }
+        }
+    }
+
+    public void testNumericConversionMatrix() {
+        List<NumericConversionTestMatrix.TestResult> testResults = NumericConversionTestMatrix.streamTests()
+            .map(NumericConversionTestMatrix.TestCase::run)
+            .toList();
+        assertThat(testResults, everyItem(instanceOf(NumericConversionTestMatrix.TestPass.class)));
     }
 }
