@@ -1,31 +1,35 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.ingest.common;
 
 import org.elasticsearch.common.bytes.BytesReference;
-import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentHelper;
-import org.elasticsearch.common.xcontent.XContentType;
-import org.elasticsearch.common.xcontent.json.JsonXContent;
 import org.elasticsearch.ingest.IngestDocument;
+import org.elasticsearch.ingest.IngestPipelineTestUtils;
 import org.elasticsearch.ingest.RandomDocumentPicks;
 import org.elasticsearch.test.ESTestCase;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentType;
+import org.elasticsearch.xcontent.json.JsonXContent;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static org.elasticsearch.ingest.common.JsonProcessor.ConflictStrategy.MERGE;
 import static org.elasticsearch.ingest.common.JsonProcessor.ConflictStrategy.REPLACE;
+import static org.hamcrest.Matchers.closeTo;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.instanceOf;
 
 public class JsonProcessorTests extends ESTestCase {
 
@@ -55,8 +59,12 @@ public class JsonProcessorTests extends ESTestCase {
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
 
         Exception exception = expectThrows(IllegalArgumentException.class, () -> jsonProcessor.execute(ingestDocument));
-        assertThat(exception.getCause().getMessage(), containsString("Unrecognized token 'blah': " +
-            "was expecting (JSON String, Number, Array, Object or token 'null', 'true' or 'false')"));
+        assertThat(
+            exception.getCause().getMessage(),
+            containsString(
+                "Unrecognized token 'blah': " + "was expecting (JSON String, Number, Array, Object or token 'null', 'true' or 'false')"
+            )
+        );
     }
 
     public void testByteArray() {
@@ -68,9 +76,7 @@ public class JsonProcessorTests extends ESTestCase {
         Exception exception = expectThrows(IllegalArgumentException.class, () -> jsonProcessor.execute(ingestDocument));
         assertThat(
             exception.getCause().getMessage(),
-            containsString(
-                "Unrecognized token 'B': was expecting (JSON String, Number, Array, Object or token 'null', 'true' or 'false')"
-            )
+            containsString("Unrecognized token 'B': was expecting (JSON String, Number, Array, Object or token 'null', 'true' or 'false')")
         );
     }
 
@@ -126,7 +132,7 @@ public class JsonProcessorTests extends ESTestCase {
     public void testArray() throws Exception {
         JsonProcessor jsonProcessor = new JsonProcessor("tag", null, "field", "target_field", false, REPLACE, false);
         Map<String, Object> document = new HashMap<>();
-        List<Boolean> value = Arrays.asList(true, true, false);
+        List<Boolean> value = List.of(true, true, false);
         document.put("field", value.toString());
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
         jsonProcessor.execute(ingestDocument);
@@ -161,16 +167,35 @@ public class JsonProcessorTests extends ESTestCase {
         assertEquals("see", sourceAndMetadata.get("c"));
     }
 
+    public void testAddToRootNestedField() throws Exception {
+        String processorTag = randomAlphaOfLength(3);
+        String randomTargetField = randomAlphaOfLength(2);
+        JsonProcessor jsonProcessor = new JsonProcessor(processorTag, null, "a.b", randomTargetField, true, REPLACE, false);
+
+        String json = "{\"a\": 1, \"b\": 2}";
+        Map<String, Object> subfield = new HashMap<>();
+        subfield.put("b", json);
+
+        Map<String, Object> document = new HashMap<>();
+        document.put("a", subfield);
+        document.put("c", "see");
+
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
+        ingestDocument = IngestPipelineTestUtils.runWithRandomAccessPattern(ingestDocument, jsonProcessor);
+
+        Map<String, Object> sourceAndMetadata = ingestDocument.getSourceAndMetadata();
+        assertEquals(1, sourceAndMetadata.get("a"));
+        assertEquals(2, sourceAndMetadata.get("b"));
+        assertEquals("see", sourceAndMetadata.get("c"));
+    }
+
     public void testDuplicateKeys() throws Exception {
         String processorTag = randomAlphaOfLength(3);
         JsonProcessor lenientJsonProcessor = new JsonProcessor(processorTag, null, "a", null, true, REPLACE, true);
 
-        Map<String, Object> document = new HashMap<>();
-        String json = "{\"a\": 1, \"a\": 2}";
-        document.put("a", json);
-        document.put("c", "see");
+        Map<String, Object> document = Map.of("a", "{\"a\": 1, \"a\": 2}", "c", "see");
 
-        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
+        IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>(document));
         lenientJsonProcessor.execute(ingestDocument);
 
         Map<String, Object> sourceAndMetadata = ingestDocument.getSourceAndMetadata();
@@ -178,8 +203,10 @@ public class JsonProcessorTests extends ESTestCase {
         assertEquals("see", sourceAndMetadata.get("c"));
 
         JsonProcessor strictJsonProcessor = new JsonProcessor(processorTag, null, "a", null, true, REPLACE, false);
-        Exception exception = expectThrows(IllegalArgumentException.class, () ->
-            strictJsonProcessor.execute(RandomDocumentPicks.randomIngestDocument(random(), document)));
+        Exception exception = expectThrows(
+            IllegalArgumentException.class,
+            () -> strictJsonProcessor.execute(RandomDocumentPicks.randomIngestDocument(random(), new HashMap<>(document)))
+        );
         assertThat(exception.getMessage(), containsString("Duplicate field 'a'"));
     }
 
@@ -188,7 +215,8 @@ public class JsonProcessorTests extends ESTestCase {
         JsonProcessor jsonProcessor = new JsonProcessor(processorTag, null, "json", null, true, MERGE, false);
 
         Map<String, Object> document = new HashMap<>();
-        String json = "{\"foo\": {\"bar\": \"baz\"}}";
+        String json = """
+            {"foo": {"bar": "baz"}}""";
         document.put("json", json);
         Map<String, Object> inner = new HashMap<>();
         inner.put("bar", "override_me");
@@ -207,7 +235,8 @@ public class JsonProcessorTests extends ESTestCase {
         JsonProcessor jsonProcessor = new JsonProcessor(processorTag, null, "json", null, true, REPLACE, false);
 
         Map<String, Object> document = new HashMap<>();
-        String json = "{\"foo\": {\"bar\": \"baz\"}}";
+        String json = """
+            {"foo": {"bar": "baz"}}""";
         document.put("json", json);
         Map<String, Object> inner = new HashMap<>();
         inner.put("bar", "override_me");
@@ -228,5 +257,87 @@ public class JsonProcessorTests extends ESTestCase {
         IngestDocument ingestDocument = RandomDocumentPicks.randomIngestDocument(random(), document);
         Exception exception = expectThrows(IllegalArgumentException.class, () -> jsonProcessor.execute(ingestDocument));
         assertThat(exception.getMessage(), containsString("cannot add non-map fields to root of document"));
+    }
+
+    @SuppressWarnings({ "unchecked", "rawtypes" })
+    public void testApply() {
+        {
+            Object result = JsonProcessor.apply("{\"foo\":\"bar\"}", true, true);
+            assertThat(result, instanceOf(Map.class));
+            Map resultMap = (Map) result;
+            assertThat(resultMap.size(), equalTo(1));
+            assertThat(resultMap.get("foo"), equalTo("bar"));
+        }
+        {
+            Object result = JsonProcessor.apply("\"foo\"", true, true);
+            assertThat(result, instanceOf(String.class));
+            assertThat(result, equalTo("foo"));
+        }
+        {
+            boolean boolValue = randomBoolean();
+            Object result = JsonProcessor.apply(Boolean.toString(boolValue), true, true);
+            assertThat(result, instanceOf(Boolean.class));
+            assertThat(result, equalTo(boolValue));
+        }
+        {
+            double value = randomDouble();
+            Object result = JsonProcessor.apply(Double.toString(value), true, true);
+            assertThat(result, instanceOf(Double.class));
+            assertThat((double) result, closeTo(value, .001));
+        }
+        {
+            List<Double> list = randomList(10, ESTestCase::randomDouble);
+            String value = list.stream().map(val -> Double.toString(val)).collect(Collectors.joining(",", "[", "]"));
+            Object result = JsonProcessor.apply(value, true, true);
+            assertThat(result, instanceOf(List.class));
+            List<Double> resultList = (List<Double>) result;
+            assertThat(resultList.size(), equalTo(list.size()));
+            for (int i = 0; i < list.size(); i++) {
+                assertThat(resultList.get(i), closeTo(list.get(i), .001));
+            }
+        }
+    }
+
+    @SuppressWarnings({ "unchecked", "rawtypes" })
+    public void testApplyWithInvalidJson() {
+        /*
+         * The following fail whether strictJsonParsing is set to true or false. The reason is that even the first token cannot be parsed
+         *  as JSON (since the first token is a not a primitive or an object -- just characters not in quotes).
+         */
+        expectThrows(IllegalArgumentException.class, () -> JsonProcessor.apply("foo", true, true));
+        expectThrows(IllegalArgumentException.class, () -> JsonProcessor.apply("foo", true, false));
+        expectThrows(IllegalArgumentException.class, () -> JsonProcessor.apply("foo [360113.865822] wbrdg-0afe001ce", true, true));
+        expectThrows(IllegalArgumentException.class, () -> JsonProcessor.apply("foo [360113.865822] wbrdg-0afe001ce", true, false));
+
+        /*
+         * The following are examples of malformed json but the first part of each is valid json. Previously apply parsed just the first
+         * token and ignored the rest, but it now throw an IllegalArgumentException unless strictJsonParsing is set to false. See
+         * https://github.com/elastic/elasticsearch/issues/92898.
+         */
+        expectThrows(IllegalArgumentException.class, () -> JsonProcessor.apply("123 foo", true, true));
+        expectThrows(IllegalArgumentException.class, () -> JsonProcessor.apply("45 this is {\"a\": \"json\"}", true, true));
+
+        {
+            expectThrows(IllegalArgumentException.class, () -> JsonProcessor.apply("[360113.865822] wbrdg-0afe001ce", true, true));
+            Object result = JsonProcessor.apply("[360113.865822] wbrdg-0afe001ce", true, false);
+            assertThat(result, instanceOf(List.class));
+            List<Double> resultList = (List<Double>) result;
+            assertThat(resultList.size(), equalTo(1));
+            assertThat(resultList.get(0), closeTo(360113.865822, .001));
+        }
+        {
+            expectThrows(IllegalArgumentException.class, () -> JsonProcessor.apply("{\"foo\":\"bar\"} wbrdg-0afe00e", true, true));
+            Object result = JsonProcessor.apply("{\"foo\":\"bar\"} wbrdg-0afe00e", true, false);
+            assertThat(result, instanceOf(Map.class));
+            Map resultMap = (Map) result;
+            assertThat(resultMap.size(), equalTo(1));
+            assertThat(resultMap.get("foo"), equalTo("bar"));
+        }
+        {
+            expectThrows(IllegalArgumentException.class, () -> JsonProcessor.apply(" 1268 : TimeOut = 123 : a", true, true));
+            Object result = JsonProcessor.apply(" 1268 : TimeOut = 123 : a", true, false);
+            assertThat(result, instanceOf(Integer.class));
+            assertThat(result, equalTo(1268));
+        }
     }
 }
