@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.painless.symbol;
@@ -12,7 +13,6 @@ import org.elasticsearch.painless.lookup.PainlessLookupUtility;
 import org.objectweb.asm.commons.Method;
 
 import java.lang.invoke.MethodType;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -40,17 +40,28 @@ public class FunctionTable {
         protected final Method asmMethod;
 
         public LocalFunction(
-                String functionName, Class<?> returnType, List<Class<?>> typeParameters, boolean isInternal, boolean isStatic) {
+            String functionName,
+            Class<?> returnType,
+            List<Class<?>> typeParameters,
+            boolean isInternal,
+            boolean isStatic
+        ) {
             this(functionName, "", returnType, typeParameters, isInternal, isStatic);
         }
 
-        private LocalFunction(String functionName, String mangle,
-                Class<?> returnType, List<Class<?>> typeParameters, boolean isInternal, boolean isStatic) {
+        private LocalFunction(
+            String functionName,
+            String mangle,
+            Class<?> returnType,
+            List<Class<?>> typeParameters,
+            boolean isInternal,
+            boolean isStatic
+        ) {
 
             this.functionName = Objects.requireNonNull(functionName);
             this.mangledName = Objects.requireNonNull(mangle) + this.functionName;
             this.returnType = Objects.requireNonNull(returnType);
-            this.typeParameters = Collections.unmodifiableList(Objects.requireNonNull(typeParameters));
+            this.typeParameters = List.copyOf(typeParameters);
             this.isInternal = isInternal;
             this.isStatic = isStatic;
 
@@ -58,8 +69,10 @@ public class FunctionTable {
             Class<?>[] javaTypeParameters = typeParameters.stream().map(PainlessLookupUtility::typeToJavaType).toArray(Class<?>[]::new);
 
             this.methodType = MethodType.methodType(javaReturnType, javaTypeParameters);
-            this.asmMethod = new org.objectweb.asm.commons.Method(mangledName,
-                    MethodType.methodType(javaReturnType, javaTypeParameters).toMethodDescriptorString());
+            this.asmMethod = new org.objectweb.asm.commons.Method(
+                mangledName,
+                MethodType.methodType(javaReturnType, javaTypeParameters).toMethodDescriptorString()
+            );
         }
 
         public String getMangledName() {
@@ -104,7 +117,12 @@ public class FunctionTable {
     protected Map<String, LocalFunction> localFunctions = new HashMap<>();
 
     public LocalFunction addFunction(
-            String functionName, Class<?> returnType, List<Class<?>> typeParameters, boolean isInternal, boolean isStatic) {
+        String functionName,
+        Class<?> returnType,
+        List<Class<?>> typeParameters,
+        boolean isInternal,
+        boolean isStatic
+    ) {
 
         String functionKey = buildLocalFunctionKey(functionName, typeParameters.size());
         LocalFunction function = new LocalFunction(functionName, returnType, typeParameters, isInternal, isStatic);
@@ -112,11 +130,22 @@ public class FunctionTable {
         return function;
     }
 
-    public LocalFunction addMangledFunction(String functionName,
-            Class<?> returnType, List<Class<?>> typeParameters, boolean isInternal, boolean isStatic) {
+    public LocalFunction addMangledFunction(
+        String functionName,
+        Class<?> returnType,
+        List<Class<?>> typeParameters,
+        boolean isInternal,
+        boolean isStatic
+    ) {
         String functionKey = buildLocalFunctionKey(functionName, typeParameters.size());
-        LocalFunction function =
-                new LocalFunction(functionName, MANGLED_FUNCTION_NAME_PREFIX, returnType, typeParameters, isInternal, isStatic);
+        LocalFunction function = new LocalFunction(
+            functionName,
+            MANGLED_FUNCTION_NAME_PREFIX,
+            returnType,
+            typeParameters,
+            isInternal,
+            isStatic
+        );
         localFunctions.put(functionKey, function);
         return function;
     }
