@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.action.termvectors;
@@ -16,17 +17,21 @@ import org.apache.lucene.index.Terms;
 import org.apache.lucene.index.TermsEnum;
 import org.apache.lucene.util.BytesRef;
 import org.elasticsearch.action.ActionFuture;
+import org.elasticsearch.action.admin.cluster.shards.ClusterSearchShardsRequest;
 import org.elasticsearch.action.admin.cluster.shards.ClusterSearchShardsResponse;
+import org.elasticsearch.action.admin.cluster.shards.TransportClusterSearchShardsAction;
 import org.elasticsearch.action.admin.indices.alias.Alias;
 import org.elasticsearch.action.index.IndexRequestBuilder;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.lucene.uid.Versions;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.ToXContent;
-import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.core.IOUtils;
 import org.elasticsearch.index.engine.VersionConflictEngineException;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.test.MockKeywordPlugin;
+import org.elasticsearch.xcontent.ToXContent;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentType;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -39,12 +44,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
-import static org.elasticsearch.common.xcontent.XContentFactory.jsonBuilder;
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertAcked;
-import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertRequestBuilderThrows;
+import static org.elasticsearch.xcontent.XContentFactory.jsonBuilder;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
 
@@ -56,17 +60,19 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
     }
 
     public void testNoSuchDoc() throws Exception {
-        XContentBuilder mapping = jsonBuilder().startObject().startObject("_doc")
-                .startObject("properties")
-                        .startObject("field")
-                            .field("type", "text")
-                            .field("term_vector", "with_positions_offsets_payloads")
-                        .endObject()
-                .endObject()
-                .endObject().endObject();
+        XContentBuilder mapping = jsonBuilder().startObject()
+            .startObject("_doc")
+            .startObject("properties")
+            .startObject("field")
+            .field("type", "text")
+            .field("term_vector", "with_positions_offsets_payloads")
+            .endObject()
+            .endObject()
+            .endObject()
+            .endObject();
         assertAcked(prepareCreate("test").addAlias(new Alias("alias")).setMapping(mapping));
 
-        client().prepareIndex("test").setId("666").setSource("field", "foo bar").execute().actionGet();
+        prepareIndex("test").setId("666").setSource("field", "foo bar").get();
         refresh();
         for (int i = 0; i < 20; i++) {
             ActionFuture<TermVectorsResponse> termVector = client().termVectors(new TermVectorsRequest(indexOrAlias(), "" + i));
@@ -80,21 +86,24 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
     }
 
     public void testExistingFieldWithNoTermVectorsNoNPE() throws Exception {
-        XContentBuilder mapping = jsonBuilder().startObject().startObject("_doc")
-                .startObject("properties")
-                        .startObject("existingfield")
-                            .field("type", "text")
-                            .field("term_vector", "with_positions_offsets_payloads")
-                        .endObject()
-                .endObject()
-                .endObject().endObject();
+        XContentBuilder mapping = jsonBuilder().startObject()
+            .startObject("_doc")
+            .startObject("properties")
+            .startObject("existingfield")
+            .field("type", "text")
+            .field("term_vector", "with_positions_offsets_payloads")
+            .endObject()
+            .endObject()
+            .endObject()
+            .endObject();
         assertAcked(prepareCreate("test").addAlias(new Alias("alias")).setMapping(mapping));
 
         // when indexing a field that simply has a question mark, the term vectors will be null
-        client().prepareIndex("test").setId("0").setSource("existingfield", "?").execute().actionGet();
+        prepareIndex("test").setId("0").setSource("existingfield", "?").get();
         refresh();
-        ActionFuture<TermVectorsResponse> termVector = client().termVectors(new TermVectorsRequest(indexOrAlias(), "0")
-                .selectedFields(new String[]{"existingfield"}));
+        ActionFuture<TermVectorsResponse> termVector = client().termVectors(
+            new TermVectorsRequest(indexOrAlias(), "0").selectedFields(new String[] { "existingfield" })
+        );
 
         // lets see if the null term vectors are caught...
         TermVectorsResponse actionGet = termVector.actionGet();
@@ -105,23 +114,26 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
     }
 
     public void testExistingFieldButNotInDocNPE() throws Exception {
-        XContentBuilder mapping = jsonBuilder().startObject().startObject("_doc")
-                .startObject("properties")
-                        .startObject("existingfield")
-                            .field("type", "text")
-                            .field("term_vector", "with_positions_offsets_payloads")
-                        .endObject()
-                .endObject()
-                .endObject().endObject();
+        XContentBuilder mapping = jsonBuilder().startObject()
+            .startObject("_doc")
+            .startObject("properties")
+            .startObject("existingfield")
+            .field("type", "text")
+            .field("term_vector", "with_positions_offsets_payloads")
+            .endObject()
+            .endObject()
+            .endObject()
+            .endObject();
         assertAcked(prepareCreate("test").addAlias(new Alias("alias")).setMapping(mapping));
 
         // when indexing a field that simply has a question mark, the term vectors will be null
-        client().prepareIndex("test").setId("0").setSource("anotherexistingfield", 1).execute().actionGet();
+        prepareIndex("test").setId("0").setSource("anotherexistingfield", 1).get();
         refresh();
-        ActionFuture<TermVectorsResponse> termVectors = client().termVectors(new TermVectorsRequest(indexOrAlias(), "0")
-                .selectedFields(randomBoolean() ? new String[]{"existingfield"} : null)
+        ActionFuture<TermVectorsResponse> termVectors = client().termVectors(
+            new TermVectorsRequest(indexOrAlias(), "0").selectedFields(randomBoolean() ? new String[] { "existingfield" } : null)
                 .termStatistics(true)
-                .fieldStatistics(true));
+                .fieldStatistics(true)
+        );
 
         // lets see if the null term vectors are caught...
         TermVectorsResponse actionGet = termVectors.actionGet();
@@ -133,29 +145,32 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
 
     public void testNotIndexedField() throws Exception {
         // must be of type string and indexed.
-        assertAcked(prepareCreate("test")
-                .addAlias(new Alias("alias"))
+        assertAcked(
+            prepareCreate("test").addAlias(new Alias("alias"))
                 .setMapping(
-                        "field0", "type=integer,", // no tvs
-                        "field1", "type=text,index=false", // no tvs
-                        "field2", "type=text,index=false,store=true",  // no tvs
-                        "field3", "type=text,index=false,term_vector=yes", // no tvs
-                        "field4", "type=keyword", // yes tvs
-                        "field5", "type=text,index=true")); // yes tvs
+                    "field0",
+                    "type=integer,", // no tvs
+                    "field1",
+                    "type=text,index=false", // no tvs
+                    "field2",
+                    "type=text,index=false,store=true",  // no tvs
+                    "field3",
+                    "type=text,index=false,term_vector=yes", // no tvs
+                    "field4",
+                    "type=keyword", // yes tvs
+                    "field5",
+                    "type=text,index=true"
+                )
+        ); // yes tvs
 
         List<IndexRequestBuilder> indexBuilders = new ArrayList<>();
         for (int i = 0; i < 6; i++) {
-            indexBuilders.add(client().prepareIndex()
-                    .setIndex("test")
-                    .setId(String.valueOf(i))
-                    .setSource("field" + i, i));
+            indexBuilders.add(prepareIndex("test").setId(String.valueOf(i)).setSource("field" + i, i));
         }
         indexRandom(true, indexBuilders);
 
         for (int i = 0; i < 4; i++) {
-            TermVectorsResponse resp = client().prepareTermVectors(indexOrAlias(), String.valueOf(i))
-                    .setSelectedFields("field" + i)
-                    .get();
+            TermVectorsResponse resp = client().prepareTermVectors(indexOrAlias(), String.valueOf(i)).setSelectedFields("field" + i).get();
             assertThat(resp, notNullValue());
             assertThat(resp.isExists(), equalTo(true));
             assertThat(resp.getIndex(), equalTo("test"));
@@ -163,41 +178,53 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         }
 
         for (int i = 4; i < 6; i++) {
-            TermVectorsResponse resp = client().prepareTermVectors(indexOrAlias(), String.valueOf(i))
-                    .setSelectedFields("field" + i).get();
+            TermVectorsResponse resp = client().prepareTermVectors(indexOrAlias(), String.valueOf(i)).setSelectedFields("field" + i).get();
             assertThat(resp.getIndex(), equalTo("test"));
             assertThat("field" + i + " :", resp.getFields().terms("field" + i), notNullValue());
         }
     }
 
     public void testSimpleTermVectors() throws IOException {
-        XContentBuilder mapping = jsonBuilder().startObject().startObject("_doc")
-                .startObject("properties")
-                        .startObject("field")
-                            .field("type", "text")
-                            .field("term_vector", "with_positions_offsets_payloads")
-                            .field("analyzer", "tv_test")
-                        .endObject()
-                .endObject()
-                .endObject().endObject();
-        assertAcked(prepareCreate("test").setMapping(mapping)
+        XContentBuilder mapping = jsonBuilder().startObject()
+            .startObject("_doc")
+            .startObject("properties")
+            .startObject("field")
+            .field("type", "text")
+            .field("term_vector", "with_positions_offsets_payloads")
+            .field("analyzer", "tv_test")
+            .endObject()
+            .endObject()
+            .endObject()
+            .endObject();
+        assertAcked(
+            prepareCreate("test").setMapping(mapping)
                 .addAlias(new Alias("alias"))
-                .setSettings(Settings.builder()
+                .setSettings(
+                    Settings.builder()
                         .put(indexSettings())
                         .put("index.analysis.analyzer.tv_test.tokenizer", "standard")
-                        .putList("index.analysis.analyzer.tv_test.filter", "lowercase")));
+                        .putList("index.analysis.analyzer.tv_test.filter", "lowercase")
+                )
+        );
         for (int i = 0; i < 10; i++) {
-            client().prepareIndex("test").setId(Integer.toString(i))
-                    .setSource(jsonBuilder().startObject().field("field", "the quick brown fox jumps over the lazy dog")
-                            // 0the3 4quick9 10brown15 16fox19 20jumps25 26over30
-                            // 31the34 35lazy39 40dog43
-                            .endObject()).execute().actionGet();
+            prepareIndex("test").setId(Integer.toString(i))
+                .setSource(
+                    jsonBuilder().startObject()
+                        .field("field", "the quick brown fox jumps over the lazy dog")
+                        // 0the3 4quick9 10brown15 16fox19 20jumps25 26over30
+                        // 31the34 35lazy39 40dog43
+                        .endObject()
+                )
+                .get();
             refresh();
         }
         for (int i = 0; i < 10; i++) {
-            TermVectorsRequestBuilder resp = client().prepareTermVectors(indexOrAlias(), Integer.toString(i)).setPayloads(true)
-                    .setOffsets(true).setPositions(true).setSelectedFields();
-            TermVectorsResponse response = resp.execute().actionGet();
+            TermVectorsRequestBuilder resp = client().prepareTermVectors(indexOrAlias(), Integer.toString(i))
+                .setPayloads(true)
+                .setOffsets(true)
+                .setPositions(true)
+                .setSelectedFields();
+            TermVectorsResponse response = resp.get();
             assertThat(response.getIndex(), equalTo("test"));
             assertThat("doc id: " + i + " doesn't exists but should", response.isExists(), equalTo(true));
             Fields fields = response.getFields();
@@ -235,72 +262,78 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         boolean storeOffsets = false;
         boolean storeTermVectors = false;
         switch (config) {
-            case 0: {
+            case 0 -> {
                 // do nothing
-                break;
             }
-            case 1: {
+            case 1 -> {
                 storeTermVectors = true;
-                break;
             }
-            case 2: {
+            case 2 -> {
                 storeTermVectors = true;
                 storePositions = true;
-                break;
             }
-            case 3: {
+            case 3 -> {
                 storeTermVectors = true;
                 storeOffsets = true;
-                break;
             }
-            case 4: {
+            case 4 -> {
                 storeTermVectors = true;
                 storePositions = true;
                 storeOffsets = true;
-                break;
             }
-            default:
-                throw new IllegalArgumentException("Unsupported option: " + config);
+            default -> throw new IllegalArgumentException("Unsupported option: " + config);
         }
         ft.setStoreTermVectors(storeTermVectors);
         ft.setStoreTermVectorOffsets(storeOffsets);
         ft.setStoreTermVectorPositions(storePositions);
 
         String optionString = termVectorOptionsToString(ft);
-        XContentBuilder mapping = jsonBuilder().startObject().startObject("_doc")
-                .startObject("properties")
-                        .startObject("field")
-                            .field("type", "text")
-                            .field("term_vector", optionString)
-                            .field("analyzer", "tv_test")
-                        .endObject()
-                .endObject()
-                .endObject().endObject();
-        assertAcked(prepareCreate("test").setMapping(mapping)
-                .setSettings(Settings.builder()
+        XContentBuilder mapping = jsonBuilder().startObject()
+            .startObject("_doc")
+            .startObject("properties")
+            .startObject("field")
+            .field("type", "text")
+            .field("term_vector", optionString)
+            .field("analyzer", "tv_test")
+            .endObject()
+            .endObject()
+            .endObject()
+            .endObject();
+        assertAcked(
+            prepareCreate("test").setMapping(mapping)
+                .setSettings(
+                    Settings.builder()
                         .put("index.analysis.analyzer.tv_test.tokenizer", "standard")
-                        .putList("index.analysis.analyzer.tv_test.filter", "lowercase")));
+                        .putList("index.analysis.analyzer.tv_test.filter", "lowercase")
+                )
+        );
         for (int i = 0; i < 10; i++) {
-            client().prepareIndex("test").setId(Integer.toString(i))
-                    .setSource(jsonBuilder().startObject().field("field", "the quick brown fox jumps over the lazy dog")
-                            // 0the3 4quick9 10brown15 16fox19 20jumps25 26over30
-                            // 31the34 35lazy39 40dog43
-                            .endObject()).execute().actionGet();
+            prepareIndex("test").setId(Integer.toString(i))
+                .setSource(
+                    jsonBuilder().startObject()
+                        .field("field", "the quick brown fox jumps over the lazy dog")
+                        // 0the3 4quick9 10brown15 16fox19 20jumps25 26over30
+                        // 31the34 35lazy39 40dog43
+                        .endObject()
+                )
+                .get();
             refresh();
         }
-        String[] values = {"brown", "dog", "fox", "jumps", "lazy", "over", "quick", "the"};
-        int[] freq = {1, 1, 1, 1, 1, 1, 1, 2};
-        int[][] pos = {{2}, {8}, {3}, {4}, {7}, {5}, {1}, {0, 6}};
-        int[][] startOffset = {{10}, {40}, {16}, {20}, {35}, {26}, {4}, {0, 31}};
-        int[][] endOffset = {{15}, {43}, {19}, {25}, {39}, {30}, {9}, {3, 34}};
+        String[] values = { "brown", "dog", "fox", "jumps", "lazy", "over", "quick", "the" };
+        int[] freq = { 1, 1, 1, 1, 1, 1, 1, 2 };
+        int[][] pos = { { 2 }, { 8 }, { 3 }, { 4 }, { 7 }, { 5 }, { 1 }, { 0, 6 } };
+        int[][] startOffset = { { 10 }, { 40 }, { 16 }, { 20 }, { 35 }, { 26 }, { 4 }, { 0, 31 } };
+        int[][] endOffset = { { 15 }, { 43 }, { 19 }, { 25 }, { 39 }, { 30 }, { 9 }, { 3, 34 } };
 
         boolean isOffsetRequested = randomBoolean();
         boolean isPositionsRequested = randomBoolean();
         String infoString = createInfoString(isPositionsRequested, isOffsetRequested, optionString);
         for (int i = 0; i < 10; i++) {
             TermVectorsRequestBuilder resp = client().prepareTermVectors("test", Integer.toString(i))
-                    .setOffsets(isOffsetRequested).setPositions(isPositionsRequested).setSelectedFields();
-            TermVectorsResponse response = resp.execute().actionGet();
+                .setOffsets(isOffsetRequested)
+                .setPositions(isPositionsRequested)
+                .setSelectedFields();
+            TermVectorsResponse response = resp.get();
             assertThat(infoString + "doc id: " + i + " doesn't exists but should", response.isExists(), equalTo(true));
             Fields fields = response.getFields();
             assertThat(fields.size(), equalTo(ft.storeTermVectors() ? 1 : 0));
@@ -345,8 +378,11 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
                         // only return something useful if requested and stored
                         if (isOffsetRequested && storeOffsets) {
 
-                            assertThat(infoString + "startOffsets term: " + string, docsAndPositions.startOffset(),
-                                    equalTo(termStartOffset[k]));
+                            assertThat(
+                                infoString + "startOffsets term: " + string,
+                                docsAndPositions.startOffset(),
+                                equalTo(termStartOffset[k])
+                            );
                             assertThat(infoString + "endOffsets term: " + string, docsAndPositions.endOffset(), equalTo(termEndOffset[k]));
                         } else {
                             assertThat(infoString + "startOffsets term: " + string, docsAndPositions.startOffset(), equalTo(-1));
@@ -361,30 +397,41 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
     }
 
     private String createInfoString(boolean isPositionsRequested, boolean isOffsetRequested, String optionString) {
-        String ret = "Store config: " + optionString + "\n" + "Requested: pos-"
-                + (isPositionsRequested ? "yes" : "no") + ", offsets-" + (isOffsetRequested ? "yes" : "no") + "\n";
+        String ret = "Store config: "
+            + optionString
+            + "\n"
+            + "Requested: pos-"
+            + (isPositionsRequested ? "yes" : "no")
+            + ", offsets-"
+            + (isOffsetRequested ? "yes" : "no")
+            + "\n";
         return ret;
     }
 
     public void testDuelESLucene() throws Exception {
         TestFieldSetting[] testFieldSettings = getFieldSettings();
         createIndexBasedOnFieldSettings("test", "alias", testFieldSettings);
-        //we generate as many docs as many shards we have
+        // we generate as many docs as many shards we have
         TestDoc[] testDocs = generateTestDocs("test", testFieldSettings);
 
-        DirectoryReader directoryReader = indexDocsWithLucene(testDocs);
-        TestConfig[] testConfigs = generateTestConfigs(20, testDocs, testFieldSettings);
+        DirectoryReader directoryReader = null;
+        try {
+            directoryReader = indexDocsWithLucene(testDocs);
+            TestConfig[] testConfigs = generateTestConfigs(20, testDocs, testFieldSettings);
 
-        for (TestConfig test : testConfigs) {
-            TermVectorsRequestBuilder request = getRequestForConfig(test);
-            if (test.expectedException != null) {
-                assertRequestBuilderThrows(request, test.expectedException);
-                continue;
+            for (TestConfig test : testConfigs) {
+                TermVectorsRequestBuilder request = getRequestForConfig(test);
+                if (test.expectedException != null) {
+                    expectThrows(test.expectedException, request);
+                    continue;
+                }
+
+                TermVectorsResponse response = request.get();
+                Fields luceneTermVectors = getTermVectorsFromLucene(directoryReader, test.doc);
+                validateResponse(response, luceneTermVectors, test);
             }
-
-            TermVectorsResponse response = request.get();
-            Fields luceneTermVectors = getTermVectorsFromLucene(directoryReader, test.doc);
-            validateResponse(response, luceneTermVectors, test);
+        } finally {
+            IOUtils.close(directoryReader);
         }
     }
 
@@ -399,38 +446,39 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         XContentBuilder source = jsonBuilder().startObject();
         for (String field : fieldNames) {
             mapping.startObject(field)
-                    .field("type", "text")
-                    .field("term_vector", randomBoolean() ? "with_positions_offsets_payloads" : "no")
-                    .field("analyzer", "tv_test")
-                    .endObject();
+                .field("type", "text")
+                .field("term_vector", randomBoolean() ? "with_positions_offsets_payloads" : "no")
+                .field("analyzer", "tv_test")
+                .endObject();
             source.field(field, "the quick brown fox jumps over the lazy dog");
         }
         mapping.endObject().endObject().endObject();
         source.endObject();
 
-        assertAcked(prepareCreate("test")
-                .setMapping(mapping)
-                .setSettings(Settings.builder()
+        assertAcked(
+            prepareCreate("test").setMapping(mapping)
+                .setSettings(
+                    Settings.builder()
                         .put(indexSettings())
                         .put("index.analysis.analyzer.tv_test.tokenizer", "standard")
-                        .putList("index.analysis.analyzer.tv_test.filter", "lowercase")));
+                        .putList("index.analysis.analyzer.tv_test.filter", "lowercase")
+                )
+        );
 
         ensureGreen();
 
         for (int i = 0; i < 10; i++) {
-            client().prepareIndex("test").setId(Integer.toString(i))
-                    .setSource(source)
-                    .execute().actionGet();
+            prepareIndex("test").setId(Integer.toString(i)).setSource(source).get();
             refresh();
         }
 
         for (int i = 0; i < 10; i++) {
             TermVectorsResponse response = client().prepareTermVectors("test", Integer.toString(i))
-                    .setPayloads(true)
-                    .setOffsets(true)
-                    .setPositions(true)
-                    .setSelectedFields(fieldNames)
-                    .execute().actionGet();
+                .setPayloads(true)
+                .setOffsets(true)
+                .setPositions(true)
+                .setSelectedFields(fieldNames)
+                .get();
             assertThat("doc id: " + i + " doesn't exists but should", response.isExists(), equalTo(true));
             Fields fields = response.getFields();
             assertThat(fields.size(), equalTo(fieldNames.length));
@@ -442,11 +490,11 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
     }
 
     private void checkBrownFoxTermVector(Fields fields, String fieldName, boolean withPayloads) throws IOException {
-        String[] values = {"brown", "dog", "fox", "jumps", "lazy", "over", "quick", "the"};
-        int[] freq = {1, 1, 1, 1, 1, 1, 1, 2};
-        int[][] pos = {{2}, {8}, {3}, {4}, {7}, {5}, {1}, {0, 6}};
-        int[][] startOffset = {{10}, {40}, {16}, {20}, {35}, {26}, {4}, {0, 31}};
-        int[][] endOffset = {{15}, {43}, {19}, {25}, {39}, {30}, {9}, {3, 34}};
+        String[] values = { "brown", "dog", "fox", "jumps", "lazy", "over", "quick", "the" };
+        int[] freq = { 1, 1, 1, 1, 1, 1, 1, 2 };
+        int[][] pos = { { 2 }, { 8 }, { 3 }, { 4 }, { 7 }, { 5 }, { 1 }, { 0, 6 } };
+        int[][] startOffset = { { 10 }, { 40 }, { 16 }, { 20 }, { 35 }, { 26 }, { 4 }, { 0, 31 } };
+        int[][] endOffset = { { 15 }, { 43 }, { 19 }, { 25 }, { 39 }, { 30 }, { 9 }, { 3, 34 } };
 
         Terms terms = fields.terms(fieldName);
         assertThat(terms.size(), equalTo(8L));
@@ -482,30 +530,27 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
 
     public void testDuelWithAndWithoutTermVectors() throws IOException, ExecutionException, InterruptedException {
         // setup indices
-        String[] indexNames = new String[] {"with_tv", "without_tv"};
-        assertAcked(prepareCreate(indexNames[0])
-                .setMapping("field1", "type=text,term_vector=with_positions_offsets,analyzer=keyword"));
-        assertAcked(prepareCreate(indexNames[1])
-                .setMapping("field1", "type=text,term_vector=no,analyzer=keyword"));
+        String[] indexNames = new String[] { "with_tv", "without_tv" };
+        assertAcked(
+            prepareCreate(indexNames[1]).setMapping("field1", "type=text,term_vector=no,analyzer=keyword"),
+            prepareCreate(indexNames[0]).setMapping("field1", "type=text,term_vector=with_positions_offsets,analyzer=keyword")
+        );
         ensureGreen();
 
         // index documents with and without term vectors
-        String[] content = new String[]{
-                "Generating a random permutation of a sequence (such as when shuffling cards).",
-                "Selecting a random sample of a population (important in statistical sampling).",
-                "Allocating experimental units via random assignment to a treatment or control condition.",
-                "Generating random numbers: see Random number generation.",
-                "Selecting a random sample of a population (important in statistical sampling).",
-                "Allocating experimental units via random assignment to a treatment or control condition.",
-                "Transforming a data stream (such as when using a scrambler in telecommunications)."};
+        String[] content = new String[] {
+            "Generating a random permutation of a sequence (such as when shuffling cards).",
+            "Selecting a random sample of a population (important in statistical sampling).",
+            "Allocating experimental units via random assignment to a treatment or control condition.",
+            "Generating random numbers: see Random number generation.",
+            "Selecting a random sample of a population (important in statistical sampling).",
+            "Allocating experimental units via random assignment to a treatment or control condition.",
+            "Transforming a data stream (such as when using a scrambler in telecommunications)." };
 
         List<IndexRequestBuilder> indexBuilders = new ArrayList<>();
         for (String indexName : indexNames) {
             for (int id = 0; id < content.length; id++) {
-                indexBuilders.add(client().prepareIndex()
-                        .setIndex(indexName)
-                        .setId(String.valueOf(id))
-                        .setSource("field1", content[id]));
+                indexBuilders.add(prepareIndex(indexName).setId(String.valueOf(id)).setSource("field1", content[id]));
             }
         }
         indexRandom(true, indexBuilders);
@@ -515,10 +560,10 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
             Fields[] fields = new Fields[2];
             for (int j = 0; j < indexNames.length; j++) {
                 TermVectorsResponse resp = client().prepareTermVectors(indexNames[j], String.valueOf(id))
-                        .setOffsets(true)
-                        .setPositions(true)
-                        .setSelectedFields("field1")
-                        .get();
+                    .setOffsets(true)
+                    .setPositions(true)
+                    .setSelectedFields("field1")
+                    .get();
                 assertThat("doc with index: " + indexNames[j] + ", type1 and id: " + id, resp.isExists(), equalTo(true));
                 fields[j] = resp.getFields();
             }
@@ -573,10 +618,7 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         XContentBuilder mapping = jsonBuilder().startObject().startObject("_doc").startObject("properties");
         XContentBuilder source = jsonBuilder().startObject();
         for (int i = 0; i < numFields; i++) {
-            mapping.startObject("field" + i)
-                    .field("type", "text")
-                    .field("term_vector", randomBoolean() ? "yes" : "no")
-                    .endObject();
+            mapping.startObject("field" + i).field("type", "text").field("term_vector", randomBoolean() ? "yes" : "no").endObject();
             source.field("field" + i, "some text here");
         }
         source.endObject();
@@ -585,7 +627,7 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         assertAcked(prepareCreate("test").addAlias(new Alias("alias")).setMapping(mapping));
         ensureGreen();
 
-        client().prepareIndex("test").setId("0").setSource(source).get();
+        prepareIndex("test").setId("0").setSource(source).get();
         refresh();
 
         TermVectorsResponse response = client().prepareTermVectors(indexOrAlias(), "0").setSelectedFields("field*").get();
@@ -596,53 +638,43 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
 
     public void testArtificialVsExisting() throws ExecutionException, InterruptedException, IOException {
         // setup indices
-        Settings.Builder settings = Settings.builder()
-                .put(indexSettings())
-                .put("index.analysis.analyzer", "standard");
-        assertAcked(prepareCreate("test")
-                .setSettings(settings)
-                .setMapping("field1", "type=text,term_vector=with_positions_offsets"));
+        Settings.Builder settings = Settings.builder().put(indexSettings()).put("index.analysis.analyzer", "standard");
+        assertAcked(prepareCreate("test").setSettings(settings).setMapping("field1", "type=text,term_vector=with_positions_offsets"));
         ensureGreen();
 
         // index documents existing document
-        String[] content = new String[]{
-                "Generating a random permutation of a sequence (such as when shuffling cards).",
-                "Selecting a random sample of a population (important in statistical sampling).",
-                "Allocating experimental units via random assignment to a treatment or control condition.",
-                "Generating random numbers: see Random number generation."};
+        String[] content = new String[] {
+            "Generating a random permutation of a sequence (such as when shuffling cards).",
+            "Selecting a random sample of a population (important in statistical sampling).",
+            "Allocating experimental units via random assignment to a treatment or control condition.",
+            "Generating random numbers: see Random number generation." };
 
         List<IndexRequestBuilder> indexBuilders = new ArrayList<>();
         for (int i = 0; i < content.length; i++) {
-            indexBuilders.add(client().prepareIndex()
-                    .setIndex("test")
-                    .setId(String.valueOf(i))
-                    .setSource("field1", content[i]));
+            indexBuilders.add(prepareIndex("test").setId(String.valueOf(i)).setSource("field1", content[i]));
         }
         indexRandom(true, indexBuilders);
 
         for (int i = 0; i < content.length; i++) {
             // request tvs from existing document
             TermVectorsResponse respExisting = client().prepareTermVectors("test", String.valueOf(i))
-                    .setOffsets(true)
-                    .setPositions(true)
-                    .setFieldStatistics(true)
-                    .setTermStatistics(true)
-                    .get();
+                .setOffsets(true)
+                .setPositions(true)
+                .setFieldStatistics(true)
+                .setTermStatistics(true)
+                .get();
             assertThat("doc with index: test, type1 and id: existing", respExisting.isExists(), equalTo(true));
 
             // request tvs from artificial document
             TermVectorsResponse respArtificial = client().prepareTermVectors()
-                    .setIndex("test")
-                    .setRouting(String.valueOf(i)) // ensure we get the stats from the same shard as existing doc
-                    .setDoc(jsonBuilder()
-                            .startObject()
-                            .field("field1", content[i])
-                            .endObject())
-                    .setOffsets(true)
-                    .setPositions(true)
-                    .setFieldStatistics(true)
-                    .setTermStatistics(true)
-                    .get();
+                .setIndex("test")
+                .setRouting(String.valueOf(i)) // ensure we get the stats from the same shard as existing doc
+                .setDoc(jsonBuilder().startObject().field("field1", content[i]).endObject())
+                .setOffsets(true)
+                .setPositions(true)
+                .setFieldStatistics(true)
+                .setTermStatistics(true)
+                .get();
             assertThat("doc with index: test, type1 and id: " + String.valueOf(i), respArtificial.isExists(), equalTo(true));
 
             // compare existing tvs with artificial
@@ -652,27 +684,20 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
 
     public void testArtificialNoDoc() throws IOException {
         // setup indices
-        Settings.Builder settings = Settings.builder()
-                .put(indexSettings())
-                .put("index.analysis.analyzer", "standard");
-        assertAcked(prepareCreate("test")
-                .setSettings(settings)
-                .setMapping("field1", "type=text"));
+        Settings.Builder settings = Settings.builder().put(indexSettings()).put("index.analysis.analyzer", "standard");
+        assertAcked(prepareCreate("test").setSettings(settings).setMapping("field1", "type=text"));
         ensureGreen();
 
         // request tvs from artificial document
         String text = "the quick brown fox jumps over the lazy dog";
         TermVectorsResponse resp = client().prepareTermVectors()
-                .setIndex("test")
-                .setDoc(jsonBuilder()
-                        .startObject()
-                        .field("field1", text)
-                        .endObject())
-                .setOffsets(true)
-                .setPositions(true)
-                .setFieldStatistics(true)
-                .setTermStatistics(true)
-                .get();
+            .setIndex("test")
+            .setDoc(jsonBuilder().startObject().field("field1", text).endObject())
+            .setOffsets(true)
+            .setPositions(true)
+            .setFieldStatistics(true)
+            .setTermStatistics(true)
+            .get();
         assertThat(resp.isExists(), equalTo(true));
         checkBrownFoxTermVector(resp.getFields(), "field1", false);
 
@@ -700,26 +725,21 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
                 withTermVectors.add(fieldName);
             }
             mapping.startObject(fieldName)
-                    .field("type", "text")
-                    .field("term_vector", withTermVectors.contains(fieldName) ? "yes" : "no")
-                    .endObject();
+                .field("type", "text")
+                .field("term_vector", withTermVectors.contains(fieldName) ? "yes" : "no")
+                .endObject();
             source.field(fieldName, "some text here");
         }
         source.endObject();
         mapping.endObject().endObject().endObject();
 
         // setup indices with mapping
-        Settings.Builder settings = Settings.builder()
-                .put(indexSettings())
-                .put("index.analysis.analyzer", "standard");
-        assertAcked(prepareCreate("test")
-                .addAlias(new Alias("alias"))
-                .setSettings(settings)
-                .setMapping(mapping));
+        Settings.Builder settings = Settings.builder().put(indexSettings()).put("index.analysis.analyzer", "standard");
+        assertAcked(prepareCreate("test").addAlias(new Alias("alias")).setSettings(settings).setMapping(mapping));
         ensureGreen();
 
         // index a single document with prepared source
-        client().prepareIndex("test").setId("0").setSource(source).get();
+        prepareIndex("test").setId("0").setSource(source).get();
         refresh();
 
         // create random per_field_analyzer and selected fields
@@ -741,18 +761,16 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         }
 
         // selected fields not specified
-        TermVectorsResponse response = client().prepareTermVectors(indexOrAlias(), "0")
-                .setPerFieldAnalyzer(perFieldAnalyzer)
-                .get();
+        TermVectorsResponse response = client().prepareTermVectors(indexOrAlias(), "0").setPerFieldAnalyzer(perFieldAnalyzer).get();
 
         // should return all fields that have terms vectors, some with overridden analyzer
         checkAnalyzedFields(response.getFields(), withTermVectors, perFieldAnalyzer);
 
         // selected fields specified including some not in the mapping
         response = client().prepareTermVectors(indexOrAlias(), "0")
-                .setSelectedFields(selectedFields.toArray(Strings.EMPTY_ARRAY))
-                .setPerFieldAnalyzer(perFieldAnalyzer)
-                .get();
+            .setSelectedFields(selectedFields.toArray(Strings.EMPTY_ARRAY))
+            .setPerFieldAnalyzer(perFieldAnalyzer)
+            .get();
 
         // should return only the specified valid fields, with some with overridden analyzer
         checkAnalyzedFields(response.getFields(), selectedFields, perFieldAnalyzer);
@@ -760,7 +778,7 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
 
     private void checkAnalyzedFields(Fields fieldsObject, Set<String> fieldNames, Map<String, String> perFieldAnalyzer) throws IOException {
         Set<String> validFields = new HashSet<>();
-        for (String fieldName : fieldNames){
+        for (String fieldName : fieldNames) {
             if (fieldName.startsWith("non_existing")) {
                 assertThat("Non existing field\"" + fieldName + "\" should not be returned!", fieldsObject.terms(fieldName), nullValue());
                 continue;
@@ -770,8 +788,11 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
             // check overridden by keyword analyzer ...
             if (perFieldAnalyzer.containsKey(fieldName)) {
                 TermsEnum iterator = terms.iterator();
-                assertThat("Analyzer for " + fieldName + " should have been overridden!",
-                    iterator.next().utf8ToString(), equalTo("some text here"));
+                assertThat(
+                    "Analyzer for " + fieldName + " should have been overridden!",
+                    iterator.next().utf8ToString(),
+                    equalTo("some text here")
+                );
                 assertThat(iterator.next(), nullValue());
             }
             validFields.add(fieldName);
@@ -785,15 +806,14 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
     }
 
     public void testTermVectorsWithVersion() {
-        assertAcked(prepareCreate("test").addAlias(new Alias("alias"))
-                .setSettings(Settings.builder().put("index.refresh_interval", -1)));
+        assertAcked(prepareCreate("test").addAlias(new Alias("alias")).setSettings(Settings.builder().put("index.refresh_interval", -1)));
         ensureGreen();
 
         TermVectorsResponse response = client().prepareTermVectors("test", "1").get();
         assertThat(response.isExists(), equalTo(false));
 
         logger.info("--> index doc 1");
-        client().prepareIndex("test").setId("1").setSource("field1", "value1", "field2", "value2").get();
+        prepareIndex("test").setId("1").setSource("field1", "value1", "field2", "value2").get();
 
         // From translog:
 
@@ -812,7 +832,7 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
             client().prepareGet(indexOrAlias(), "1").setVersion(2).get();
             fail();
         } catch (VersionConflictEngineException e) {
-            //all good
+            // all good
         }
 
         // From Lucene index:
@@ -835,11 +855,11 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
             client().prepareGet(indexOrAlias(), "1").setVersion(2).setRealtime(false).get();
             fail();
         } catch (VersionConflictEngineException e) {
-            //all good
+            // all good
         }
 
         logger.info("--> index doc 1 again, so increasing the version");
-        client().prepareIndex("test").setId("1").setSource("field1", "value1", "field2", "value2").get();
+        prepareIndex("test").setId("1").setSource("field1", "value1", "field2", "value2").get();
 
         // From translog:
 
@@ -854,7 +874,7 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
             client().prepareGet(indexOrAlias(), "1").setVersion(1).get();
             fail();
         } catch (VersionConflictEngineException e) {
-            //all good
+            // all good
         }
 
         response = client().prepareTermVectors(indexOrAlias(), "1").setVersion(2).get();
@@ -877,7 +897,7 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
             client().prepareGet(indexOrAlias(), "1").setVersion(1).setRealtime(false).get();
             fail();
         } catch (VersionConflictEngineException e) {
-            //all good
+            // all good
         }
 
         response = client().prepareTermVectors(indexOrAlias(), "1").setVersion(2).setRealtime(false).get();
@@ -889,12 +909,8 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
 
     public void testFilterLength() throws ExecutionException, InterruptedException, IOException {
         logger.info("Setting up the index ...");
-        Settings.Builder settings = Settings.builder()
-                .put(indexSettings())
-                .put("index.analysis.analyzer", "keyword");
-        assertAcked(prepareCreate("test")
-                .setSettings(settings)
-                .setMapping("tags", "type=text"));
+        Settings.Builder settings = Settings.builder().put(indexSettings()).put("index.analysis.analyzer", "keyword");
+        assertAcked(prepareCreate("test").setSettings(settings).setMapping("tags", "type=text"));
 
         int numTerms = scaledRandomIntBetween(10, 50);
         logger.info("Indexing one document with tags of increasing length ...");
@@ -906,7 +922,7 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
             }
             tags.add(tag);
         }
-        indexRandom(true, client().prepareIndex("test").setId("1").setSource("tags", tags));
+        indexRandom(true, prepareIndex("test").setId("1").setSource("tags", tags));
 
         logger.info("Checking best tags by longest to shortest size ...");
         TermVectorsRequest.FilterSettings filterSettings = new TermVectorsRequest.FilterSettings();
@@ -915,23 +931,19 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         for (int i = 0; i < numTerms; i++) {
             filterSettings.minWordLength = numTerms - i;
             response = client().prepareTermVectors("test", "1")
-                    .setSelectedFields("tags")
-                    .setFieldStatistics(true)
-                    .setTermStatistics(true)
-                    .setFilterSettings(filterSettings)
-                    .get();
+                .setSelectedFields("tags")
+                .setFieldStatistics(true)
+                .setTermStatistics(true)
+                .setFilterSettings(filterSettings)
+                .get();
             checkBestTerms(response.getFields().terms("tags"), tags.subList((numTerms - i - 1), numTerms));
         }
     }
 
     public void testFilterTermFreq() throws ExecutionException, InterruptedException, IOException {
         logger.info("Setting up the index ...");
-        Settings.Builder settings = Settings.builder()
-                .put(indexSettings())
-                .put("index.analysis.analyzer", "keyword");
-        assertAcked(prepareCreate("test")
-                .setSettings(settings)
-                .setMapping("tags", "type=text"));
+        Settings.Builder settings = Settings.builder().put(indexSettings()).put("index.analysis.analyzer", "keyword");
+        assertAcked(prepareCreate("test").setSettings(settings).setMapping("tags", "type=text"));
 
         logger.info("Indexing one document with tags of increasing frequencies ...");
         int numTerms = scaledRandomIntBetween(10, 50);
@@ -946,7 +958,7 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
             }
             uniqueTags.add(tag);
         }
-        indexRandom(true, client().prepareIndex("test").setId("1").setSource("tags", tags));
+        indexRandom(true, prepareIndex("test").setId("1").setSource("tags", tags));
 
         logger.info("Checking best tags by highest to lowest term freq ...");
         TermVectorsRequest.FilterSettings filterSettings = new TermVectorsRequest.FilterSettings();
@@ -954,11 +966,11 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         for (int i = 0; i < numTerms; i++) {
             filterSettings.maxNumTerms = i + 1;
             response = client().prepareTermVectors("test", "1")
-                    .setSelectedFields("tags")
-                    .setFieldStatistics(true)
-                    .setTermStatistics(true)
-                    .setFilterSettings(filterSettings)
-                    .get();
+                .setSelectedFields("tags")
+                .setFieldStatistics(true)
+                .setTermStatistics(true)
+                .setFilterSettings(filterSettings)
+                .get();
             checkBestTerms(response.getFields().terms("tags"), uniqueTags.subList((numTerms - i - 1), numTerms));
         }
     }
@@ -966,12 +978,10 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
     public void testFilterDocFreq() throws ExecutionException, InterruptedException, IOException {
         logger.info("Setting up the index ...");
         Settings.Builder settings = Settings.builder()
-                .put(indexSettings())
-                .put("index.analysis.analyzer", "keyword")
-                .put("index.number_of_shards", 1); // no dfs
-        assertAcked(prepareCreate("test")
-                .setSettings(settings)
-                .setMapping("tags", "type=text"));
+            .put(indexSettings())
+            .put("index.analysis.analyzer", "keyword")
+            .put("index.number_of_shards", 1); // no dfs
+        assertAcked(prepareCreate("test").setSettings(settings).setMapping("tags", "type=text"));
 
         int numDocs = scaledRandomIntBetween(10, 50); // as many terms as there are docs
         logger.info("Indexing {} documents with tags of increasing dfs ...", numDocs);
@@ -979,7 +989,7 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         List<String> tags = new ArrayList<>();
         for (int i = 0; i < numDocs; i++) {
             tags.add("tag_" + i);
-            builders.add(client().prepareIndex("test").setId(i + "").setSource("tags", tags));
+            builders.add(prepareIndex("test").setId(i + "").setSource("tags", List.copyOf(tags)));
         }
         indexRandom(true, builders);
 
@@ -989,43 +999,42 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         for (int i = 0; i < numDocs; i++) {
             filterSettings.maxNumTerms = i + 1;
             response = client().prepareTermVectors("test", (numDocs - 1) + "")
-                    .setSelectedFields("tags")
-                    .setFieldStatistics(true)
-                    .setTermStatistics(true)
-                    .setFilterSettings(filterSettings)
-                    .get();
+                .setSelectedFields("tags")
+                .setFieldStatistics(true)
+                .setTermStatistics(true)
+                .setFilterSettings(filterSettings)
+                .get();
             checkBestTerms(response.getFields().terms("tags"), tags.subList((numDocs - i - 1), numDocs));
         }
     }
 
     public void testArtificialDocWithPreference() throws InterruptedException, IOException {
         // setup indices
-        Settings.Builder settings = Settings.builder()
-                .put(indexSettings())
-                .put("index.analysis.analyzer", "standard");
-        assertAcked(prepareCreate("test")
-                .setSettings(settings)
-                .setMapping("field1", "type=text,term_vector=with_positions_offsets"));
+        Settings.Builder settings = Settings.builder().put(indexSettings()).put("index.analysis.analyzer", "standard");
+        assertAcked(prepareCreate("test").setSettings(settings).setMapping("field1", "type=text,term_vector=with_positions_offsets"));
         ensureGreen();
 
         // index document
-        indexRandom(true, client().prepareIndex("test").setId("1").setSource("field1", "random permutation"));
+        indexRandom(true, prepareIndex("test").setId("1").setSource("field1", "random permutation"));
 
         // Get search shards
-        ClusterSearchShardsResponse searchShardsResponse = client().admin().cluster().prepareSearchShards("test").get();
-        List<Integer> shardIds = Arrays.stream(searchShardsResponse.getGroups()).map(s -> s.getShardId().id()).collect(Collectors.toList());
+        ClusterSearchShardsResponse searchShardsResponse = safeExecute(
+            TransportClusterSearchShardsAction.TYPE,
+            new ClusterSearchShardsRequest(TEST_REQUEST_TIMEOUT, "test")
+        );
+        List<Integer> shardIds = Arrays.stream(searchShardsResponse.getGroups()).map(s -> s.getShardId().id()).toList();
 
         // request termvectors of artificial document from each shard
-        int sumTotalTermFreq = 0;
+        long sumTotalTermFreq = 0;
         int sumDocFreq = 0;
         for (Integer shardId : shardIds) {
             TermVectorsResponse tvResponse = client().prepareTermVectors()
-                    .setIndex("test")
-                    .setPreference("_shards:" + shardId)
-                    .setDoc(jsonBuilder().startObject().field("field1", "random permutation").endObject())
-                    .setFieldStatistics(true)
-                    .setTermStatistics(true)
-                    .get();
+                .setIndex("test")
+                .setPreference("_shards:" + shardId)
+                .setDoc(jsonBuilder().startObject().field("field1", "random permutation").endObject())
+                .setFieldStatistics(true)
+                .setTermStatistics(true)
+                .get();
             Fields fields = tvResponse.getFields();
             Terms terms = fields.terms("field1");
             assertNotNull(terms);
@@ -1039,19 +1048,38 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         assertEquals("expected to find term statistics in exactly one shard!", 2, sumDocFreq);
     }
 
+    public void testTermVectorsWithIgnoredField() throws IOException, InterruptedException {
+        // setup indices
+        assertAcked(prepareCreate("index").setMapping("field", "type=long,ignore_malformed=true"));
+        ensureGreen();
+
+        // add a doc with a bad long field
+        indexRandom(true, prepareIndex("index").setId("1").setSource("{\"field\":\"foo\"}", XContentType.JSON));
+
+        // do a tv request for all fields, _ignored should be returned
+        TermVectorsResponse resp = client().prepareTermVectors("index", "1").setSelectedFields("*").get();
+        assertThat(resp.getFields().terms("_ignored").size(), greaterThan(0L));
+    }
+
     public void testWithKeywordAndNormalizer() throws IOException, ExecutionException, InterruptedException {
         // setup indices
-        String[] indexNames = new String[] {"with_tv", "without_tv"};
+        String[] indexNames = new String[] { "with_tv", "without_tv" };
         Settings.Builder builder = Settings.builder()
             .put(indexSettings())
             .put("index.analysis.analyzer.my_analyzer.tokenizer", "keyword")
             .putList("index.analysis.analyzer.my_analyzer.filter", "lowercase")
             .putList("index.analysis.normalizer.my_normalizer.filter", "lowercase");
-        assertAcked(prepareCreate(indexNames[0]).setSettings(builder.build())
-            .setMapping("field1", "type=text,term_vector=with_positions_offsets,analyzer=my_analyzer",
-                "field2", "type=text,term_vector=with_positions_offsets,analyzer=keyword"));
-        assertAcked(prepareCreate(indexNames[1]).setSettings(builder.build())
-            .setMapping("field1", "type=keyword,normalizer=my_normalizer", "field2", "type=keyword"));
+        assertAcked(
+            prepareCreate(indexNames[0]).setSettings(builder.build())
+                .setMapping(
+                    "field1",
+                    "type=text,term_vector=with_positions_offsets,analyzer=my_analyzer",
+                    "field2",
+                    "type=text,term_vector=with_positions_offsets,analyzer=keyword"
+                ),
+            prepareCreate(indexNames[1]).setSettings(builder.build())
+                .setMapping("field1", "type=keyword,normalizer=my_normalizer", "field2", "type=keyword")
+        );
         ensureGreen();
 
         // index documents with and without term vectors
@@ -1060,10 +1088,9 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         List<IndexRequestBuilder> indexBuilders = new ArrayList<>();
         for (String indexName : indexNames) {
             for (int id = 0; id < content.length; id++) {
-                indexBuilders.add(client().prepareIndex()
-                    .setIndex(indexName)
-                    .setId(String.valueOf(id))
-                    .setSource("field1", content[id], "field2", content[id]));
+                indexBuilders.add(
+                    prepareIndex(indexName).setId(String.valueOf(id)).setSource("field1", content[id], "field2", content[id])
+                );
             }
         }
         indexRandom(true, indexBuilders);
@@ -1089,7 +1116,7 @@ public class GetTermVectorsIT extends AbstractTermVectorsTestCase {
         final TermsEnum termsEnum = terms.iterator();
         List<String> bestTerms = new ArrayList<>();
         BytesRef text;
-        while((text = termsEnum.next()) != null) {
+        while ((text = termsEnum.next()) != null) {
             bestTerms.add(text.utf8ToString());
         }
         Collections.sort(expectedTerms);
