@@ -1,20 +1,20 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 package org.elasticsearch.indices.state;
 
-import org.apache.logging.log4j.message.ParameterizedMessage;
-import org.elasticsearch.action.admin.cluster.reroute.ClusterRerouteRequest;
+import org.elasticsearch.action.admin.cluster.reroute.ClusterRerouteUtils;
 import org.elasticsearch.action.support.master.AcknowledgedResponse;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.node.DiscoveryNode;
 import org.elasticsearch.cluster.routing.IndexRoutingTable;
 import org.elasticsearch.cluster.routing.ShardRouting;
-import org.elasticsearch.cluster.routing.allocation.command.AllocationCommands;
+import org.elasticsearch.cluster.routing.allocation.command.AllocationCommand;
 import org.elasticsearch.cluster.routing.allocation.command.MoveAllocationCommand;
 import org.elasticsearch.cluster.routing.allocation.decider.ConcurrentRebalanceAllocationDecider;
 import org.elasticsearch.cluster.routing.allocation.decider.EnableAllocationDecider;
@@ -22,8 +22,8 @@ import org.elasticsearch.cluster.routing.allocation.decider.EnableAllocationDeci
 import org.elasticsearch.cluster.routing.allocation.decider.ThrottlingAllocationDecider;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.common.util.concurrent.ConcurrentCollections;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.indices.recovery.PeerRecoverySourceService;
 import org.elasticsearch.indices.recovery.StartRecoveryRequest;
@@ -32,12 +32,10 @@ import org.elasticsearch.test.BackgroundIndexer;
 import org.elasticsearch.test.ESIntegTestCase;
 import org.elasticsearch.test.transport.MockTransportService;
 import org.elasticsearch.test.transport.StubbableTransport;
-import org.elasticsearch.transport.TransportService;
 
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CountDownLatch;
@@ -45,10 +43,12 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static java.util.Collections.singletonList;
+import static org.elasticsearch.core.Strings.format;
 import static org.elasticsearch.indices.state.CloseIndexIT.assertException;
 import static org.elasticsearch.indices.state.CloseIndexIT.assertIndexIsClosed;
 import static org.elasticsearch.indices.state.CloseIndexIT.assertIndexIsOpened;
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertAcked;
+import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertResponse;
 import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.hasSize;
 
@@ -85,33 +85,35 @@ public class CloseWhileRelocatingShardsIT extends ESIntegTestCase {
             final String indexName = "index-" + i;
             int nbDocs = 0;
             switch (i) {
-                case 0:
+                case 0 -> {
                     logger.debug("creating empty index {}", indexName);
                     createIndex(indexName);
-                    break;
-                case 1:
+                }
+                case 1 -> {
                     nbDocs = scaledRandomIntBetween(1, 100);
                     logger.debug("creating index {} with {} documents", indexName, nbDocs);
                     createIndex(indexName);
-                    indexRandom(randomBoolean(), IntStream.range(0, nbDocs)
-                        .mapToObj(n -> client().prepareIndex(indexName).setSource("num", n))
-                        .collect(Collectors.toList()));
-                    break;
-                default:
+                    indexRandom(
+                        randomBoolean(),
+                        IntStream.range(0, nbDocs).mapToObj(n -> prepareIndex(indexName).setSource("num", n)).toList()
+                    );
+                }
+                default -> {
                     logger.debug("creating index {} with background indexing", indexName);
-                    final BackgroundIndexer indexer = new BackgroundIndexer(indexName, "_doc", client(), -1, 1);
+                    final BackgroundIndexer indexer = new BackgroundIndexer(indexName, client(), -1, 1);
                     indexers.put(indexName, indexer);
                     indexer.setFailureAssertion(t -> assertException(t, indexName));
                     waitForDocs(1, indexer);
+                }
             }
             docsPerIndex.put(indexName, (long) nbDocs);
             indices[i] = indexName;
         }
 
-        ensureGreen(TimeValue.timeValueSeconds(60L),indices);
-        assertAcked(client().admin().cluster().prepareUpdateSettings()
-            .setTransientSettings(Settings.builder()
-                .put(EnableAllocationDecider.CLUSTER_ROUTING_REBALANCE_ENABLE_SETTING.getKey(), Rebalance.NONE.toString())));
+        ensureGreen(TimeValue.timeValueSeconds(60L), indices);
+        updateClusterSettings(
+            Settings.builder().put(EnableAllocationDecider.CLUSTER_ROUTING_REBALANCE_ENABLE_SETTING.getKey(), Rebalance.NONE.toString())
+        );
 
         final String targetNode = internalCluster().startDataOnlyNode();
         ensureClusterSizeConsistency(); // wait for the master to finish processing join.
@@ -123,7 +125,7 @@ public class CloseWhileRelocatingShardsIT extends ESIntegTestCase {
             final CountDownLatch release = new CountDownLatch(indices.length);
 
             // relocate one shard for every index to be closed
-            final AllocationCommands commands = new AllocationCommands();
+            final var commands = new ArrayList<AllocationCommand>();
             for (final String index : indices) {
                 final NumShards numShards = getNumShards(index);
                 final int shardId = numShards.numPrimaries == 1 ? 0 : randomIntBetween(0, numShards.numPrimaries - 1);
@@ -144,9 +146,9 @@ public class CloseWhileRelocatingShardsIT extends ESIntegTestCase {
             }
 
             // Build the list of shards for which recoveries will be blocked
-            final Set<ShardId> blockedShards = commands.commands().stream()
+            final Set<ShardId> blockedShards = commands.stream()
                 .map(c -> (MoveAllocationCommand) c)
-                .map(c -> new ShardId(clusterService.state().metadata().index(c.index()).getIndex(), c.shardId()))
+                .map(c -> new ShardId(clusterService.state().metadata().getProject().index(c.index()).getIndex(), c.shardId()))
                 .collect(Collectors.toSet());
             assertThat(blockedShards, hasSize(indices.length));
 
@@ -164,8 +166,7 @@ public class CloseWhileRelocatingShardsIT extends ESIntegTestCase {
                             release.await();
                             logger.debug("releasing recovery of shard {}", startRecoveryRequest.shardId());
                         } catch (final InterruptedException e) {
-                            logger.warn(() -> new ParameterizedMessage("exception when releasing recovery of shard {}",
-                                startRecoveryRequest.shardId()), e);
+                            logger.warn(() -> format("exception when releasing recovery of shard %s", startRecoveryRequest.shardId()), e);
                             interruptedRecoveries.add(startRecoveryRequest.shardId().getIndexName());
                             Thread.currentThread().interrupt();
                             return;
@@ -175,45 +176,28 @@ public class CloseWhileRelocatingShardsIT extends ESIntegTestCase {
                 connection.sendRequest(requestId, action, request, options);
             };
 
-            final MockTransportService targetTransportService =
-                (MockTransportService) internalCluster().getInstance(TransportService.class, targetNode);
+            final var targetTransportService = MockTransportService.getInstance(targetNode);
 
             for (DiscoveryNode node : state.getNodes()) {
                 if (node.canContainData() && node.getName().equals(targetNode) == false) {
-                    final TransportService sourceTransportService = internalCluster().getInstance(TransportService.class, node.getName());
-                    targetTransportService.addSendBehavior(sourceTransportService, sendBehavior);
+                    targetTransportService.addSendBehavior(MockTransportService.getInstance(node.getName()), sendBehavior);
                 }
             }
 
-            assertAcked(client().admin().cluster().reroute(new ClusterRerouteRequest().commands(commands)).get());
+            ClusterRerouteUtils.reroute(client(), commands.toArray(AllocationCommand[]::new));
 
             // start index closing threads
-            final List<Thread> threads = new ArrayList<>();
-            for (final String indexToClose : indices) {
-                final Thread thread = new Thread(() -> {
-                    try {
-                        latch.await();
-                    } catch (InterruptedException e) {
-                        throw new AssertionError(e);
-                    } finally {
-                        release.countDown();
-                    }
-                    // Closing is not always acknowledged when shards are relocating: this is the case when the target shard is initializing
-                    // or is catching up operations. In these cases the TransportVerifyShardBeforeCloseAction will detect that the global
-                    // and max sequence number don't match and will not ack the close.
-                    AcknowledgedResponse closeResponse = client().admin().indices().prepareClose(indexToClose).get();
-                    if (closeResponse.isAcknowledged()) {
-                        assertTrue("Index closing should not be acknowledged twice", acknowledgedCloses.add(indexToClose));
-                    }
-                });
-                threads.add(thread);
-                thread.start();
-            }
-
-            latch.countDown();
-            for (Thread thread : threads) {
-                thread.join();
-            }
+            startInParallel(indices.length, i -> {
+                release.countDown();
+                // Closing is not always acknowledged when shards are relocating: this is the case when the target shard is initializing
+                // or is catching up operations. In these cases the TransportVerifyShardBeforeCloseAction will detect that the global
+                // and max sequence number don't match and will not ack the close.
+                final String indexToClose = indices[i];
+                AcknowledgedResponse closeResponse = indicesAdmin().prepareClose(indexToClose).get();
+                if (closeResponse.isAcknowledged()) {
+                    assertTrue("Index closing should not be acknowledged twice", acknowledgedCloses.add(indexToClose));
+                }
+            });
 
             // stop indexers first without waiting for stop to not redundantly index on some while waiting for another one to stop
             for (BackgroundIndexer indexer : indexers.values()) {
@@ -240,18 +224,29 @@ public class CloseWhileRelocatingShardsIT extends ESIntegTestCase {
             interruptedRecoveries.forEach(CloseIndexIT::assertIndexIsClosed);
 
             assertThat("Consider that the test failed if no indices were successfully closed", acknowledgedCloses.size(), greaterThan(0));
-            assertAcked(client().admin().indices().prepareOpen("index-*"));
+            assertAcked(indicesAdmin().prepareOpen("index-*"));
             ensureGreen(indices);
 
             for (String index : acknowledgedCloses) {
-                long docsCount = client().prepareSearch(index).setSize(0).setTrackTotalHits(true).get().getHits().getTotalHits().value;
-                assertEquals("Expected " + docsPerIndex.get(index) + " docs in index " + index + " but got " + docsCount
-                    + " (close acknowledged=" + acknowledgedCloses.contains(index) + ")", (long) docsPerIndex.get(index), docsCount);
+                assertResponse(prepareSearch(index).setSize(0).setTrackTotalHits(true), response -> {
+                    long docsCount = response.getHits().getTotalHits().value();
+                    assertEquals(
+                        "Expected "
+                            + docsPerIndex.get(index)
+                            + " docs in index "
+                            + index
+                            + " but got "
+                            + docsCount
+                            + " (close acknowledged="
+                            + acknowledgedCloses.contains(index)
+                            + ")",
+                        (long) docsPerIndex.get(index),
+                        docsCount
+                    );
+                });
             }
         } finally {
-            assertAcked(client().admin().cluster().prepareUpdateSettings()
-                .setTransientSettings(Settings.builder()
-                    .putNull(EnableAllocationDecider.CLUSTER_ROUTING_REBALANCE_ENABLE_SETTING.getKey())));
+            updateClusterSettings(Settings.builder().putNull(EnableAllocationDecider.CLUSTER_ROUTING_REBALANCE_ENABLE_SETTING.getKey()));
         }
     }
 }
