@@ -1,26 +1,28 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 package org.elasticsearch.cluster.coordination;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.cluster.coordination.CoordinationMetadata.VotingConfiguration;
+import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
-import org.elasticsearch.core.Nullable;
-import org.elasticsearch.core.Tuple;
+import org.elasticsearch.common.ReferenceDocs;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Setting.Property;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.util.concurrent.EsExecutors;
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.core.Tuple;
 import org.elasticsearch.discovery.DiscoveryModule;
 import org.elasticsearch.node.Node;
-import org.elasticsearch.threadpool.ThreadPool.Names;
 import org.elasticsearch.transport.TransportService;
 
 import java.util.ArrayList;
@@ -32,7 +34,6 @@ import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.BooleanSupplier;
 import java.util.function.Consumer;
-import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -43,14 +44,19 @@ import static java.util.Collections.unmodifiableSet;
 import static org.elasticsearch.discovery.DiscoveryModule.DISCOVERY_SEED_PROVIDERS_SETTING;
 import static org.elasticsearch.discovery.SettingsBasedSeedHostsProvider.DISCOVERY_SEED_HOSTS_SETTING;
 
-public class ClusterBootstrapService {
+public class ClusterBootstrapService implements Coordinator.PeerFinderListener {
 
-    public static final Setting<List<String>> INITIAL_MASTER_NODES_SETTING =
-        Setting.listSetting("cluster.initial_master_nodes", emptyList(), Function.identity(), Property.NodeScope);
+    public static final Setting<List<String>> INITIAL_MASTER_NODES_SETTING = Setting.stringListSetting(
+        "cluster.initial_master_nodes",
+        Property.NodeScope
+    );
 
-    public static final Setting<TimeValue> UNCONFIGURED_BOOTSTRAP_TIMEOUT_SETTING =
-        Setting.timeSetting("discovery.unconfigured_bootstrap_timeout",
-            TimeValue.timeValueSeconds(3), TimeValue.timeValueMillis(1), Property.NodeScope);
+    public static final Setting<TimeValue> UNCONFIGURED_BOOTSTRAP_TIMEOUT_SETTING = Setting.timeSetting(
+        "discovery.unconfigured_bootstrap_timeout",
+        TimeValue.timeValueSeconds(3),
+        TimeValue.timeValueMillis(1),
+        Property.NodeScope
+    );
 
     static final String BOOTSTRAP_PLACEHOLDER_PREFIX = "{bootstrap-placeholder}-";
 
@@ -63,19 +69,36 @@ public class ClusterBootstrapService {
     private final BooleanSupplier isBootstrappedSupplier;
     private final Consumer<VotingConfiguration> votingConfigurationConsumer;
     private final AtomicBoolean bootstrappingPermitted = new AtomicBoolean(true);
+    private final boolean singleNodeDiscovery;
 
-    public ClusterBootstrapService(Settings settings, TransportService transportService,
-                                   Supplier<Iterable<DiscoveryNode>> discoveredNodesSupplier, BooleanSupplier isBootstrappedSupplier,
-                                   Consumer<VotingConfiguration> votingConfigurationConsumer) {
-        if (DiscoveryModule.isSingleNodeDiscovery(settings)) {
+    public ClusterBootstrapService(
+        Settings settings,
+        TransportService transportService,
+        Supplier<Iterable<DiscoveryNode>> discoveredNodesSupplier,
+        BooleanSupplier isBootstrappedSupplier,
+        Consumer<VotingConfiguration> votingConfigurationConsumer
+    ) {
+        singleNodeDiscovery = DiscoveryModule.isSingleNodeDiscovery(settings);
+        if (singleNodeDiscovery) {
             if (INITIAL_MASTER_NODES_SETTING.exists(settings)) {
-                throw new IllegalArgumentException("setting [" + INITIAL_MASTER_NODES_SETTING.getKey() +
-                    "] is not allowed when [" + DiscoveryModule.DISCOVERY_TYPE_SETTING.getKey() + "] is set to [" +
-                    DiscoveryModule.SINGLE_NODE_DISCOVERY_TYPE + "]");
+                throw new IllegalArgumentException(
+                    "setting ["
+                        + INITIAL_MASTER_NODES_SETTING.getKey()
+                        + "] is not allowed when ["
+                        + DiscoveryModule.DISCOVERY_TYPE_SETTING.getKey()
+                        + "] is set to ["
+                        + DiscoveryModule.SINGLE_NODE_DISCOVERY_TYPE
+                        + "]"
+                );
             }
             if (DiscoveryNode.isMasterNode(settings) == false) {
-                throw new IllegalArgumentException("node with [" + DiscoveryModule.DISCOVERY_TYPE_SETTING.getKey() + "] set to [" +
-                    DiscoveryModule.SINGLE_NODE_DISCOVERY_TYPE +  "] must be master-eligible");
+                throw new IllegalArgumentException(
+                    "node with ["
+                        + DiscoveryModule.DISCOVERY_TYPE_SETTING.getKey()
+                        + "] set to ["
+                        + DiscoveryModule.SINGLE_NODE_DISCOVERY_TYPE
+                        + "] must be master-eligible"
+                );
             }
             bootstrapRequirements = Collections.singleton(Node.NODE_NAME_SETTING.get(settings));
             unconfiguredBootstrapTimeout = null;
@@ -84,7 +107,8 @@ public class ClusterBootstrapService {
             bootstrapRequirements = unmodifiableSet(new LinkedHashSet<>(initialMasterNodes));
             if (bootstrapRequirements.size() != initialMasterNodes.size()) {
                 throw new IllegalArgumentException(
-                    "setting [" + INITIAL_MASTER_NODES_SETTING.getKey() + "] contains duplicates: " + initialMasterNodes);
+                    "setting [" + INITIAL_MASTER_NODES_SETTING.getKey() + "] contains duplicates: " + initialMasterNodes
+                );
             }
             unconfiguredBootstrapTimeout = discoveryIsConfigured(settings) ? null : UNCONFIGURED_BOOTSTRAP_TIMEOUT_SETTING.get(settings);
         }
@@ -96,16 +120,55 @@ public class ClusterBootstrapService {
     }
 
     public static boolean discoveryIsConfigured(Settings settings) {
-        return Stream.of(DISCOVERY_SEED_PROVIDERS_SETTING, DISCOVERY_SEED_HOSTS_SETTING,
-            INITIAL_MASTER_NODES_SETTING).anyMatch(s -> s.exists(settings));
+        return Stream.of(DISCOVERY_SEED_PROVIDERS_SETTING, DISCOVERY_SEED_HOSTS_SETTING, INITIAL_MASTER_NODES_SETTING)
+            .anyMatch(s -> s.exists(settings));
     }
 
-    void onFoundPeersUpdated() {
+    void logBootstrapState(Metadata metadata) {
+        if (metadata.clusterUUIDCommitted()) {
+            final var clusterUUID = metadata.clusterUUID();
+            if (singleNodeDiscovery || bootstrapRequirements.isEmpty()) {
+                logger.info("this node is locked into cluster UUID [{}] and will not attempt further cluster bootstrapping", clusterUUID);
+            } else {
+                transportService.getThreadPool()
+                    .scheduleWithFixedDelay(
+                        () -> logRemovalWarning(clusterUUID),
+                        TimeValue.timeValueHours(12),
+                        EsExecutors.DIRECT_EXECUTOR_SERVICE
+                    );
+                logRemovalWarning(clusterUUID);
+            }
+        } else {
+            logger.info(
+                "this node has not joined a bootstrapped cluster yet; [{}] is set to {}",
+                INITIAL_MASTER_NODES_SETTING.getKey(),
+                bootstrapRequirements
+            );
+        }
+    }
+
+    private void logRemovalWarning(String clusterUUID) {
+        logger.warn(
+            """
+                this node is locked into cluster UUID [{}] but [{}] is set to {}; \
+                remove this setting to avoid possible data loss caused by subsequent cluster bootstrap attempts; \
+                for further information see {}""",
+            clusterUUID,
+            INITIAL_MASTER_NODES_SETTING.getKey(),
+            bootstrapRequirements,
+            ReferenceDocs.INITIAL_MASTER_NODES
+        );
+    }
+
+    @Override
+    public void onFoundPeersUpdated() {
         final Set<DiscoveryNode> nodes = getDiscoveredNodes();
-        if (bootstrappingPermitted.get() && transportService.getLocalNode().isMasterNode() && bootstrapRequirements.isEmpty() == false
+        if (bootstrappingPermitted.get()
+            && transportService.getLocalNode().isMasterNode()
+            && bootstrapRequirements.isEmpty() == false
             && isBootstrappedSupplier.getAsBoolean() == false) {
 
-            final Tuple<Set<DiscoveryNode>,List<String>> requirementMatchingResult;
+            final Tuple<Set<DiscoveryNode>, List<String>> requirementMatchingResult;
             try {
                 requirementMatchingResult = checkRequirements(nodes);
             } catch (IllegalStateException e) {
@@ -116,12 +179,18 @@ public class ClusterBootstrapService {
 
             final Set<DiscoveryNode> nodesMatchingRequirements = requirementMatchingResult.v1();
             final List<String> unsatisfiedRequirements = requirementMatchingResult.v2();
-            logger.trace("nodesMatchingRequirements={}, unsatisfiedRequirements={}, bootstrapRequirements={}",
-                nodesMatchingRequirements, unsatisfiedRequirements, bootstrapRequirements);
+            logger.trace(
+                "nodesMatchingRequirements={}, unsatisfiedRequirements={}, bootstrapRequirements={}",
+                nodesMatchingRequirements,
+                unsatisfiedRequirements,
+                bootstrapRequirements
+            );
 
             if (nodesMatchingRequirements.contains(transportService.getLocalNode()) == false) {
-                logger.info("skipping cluster bootstrapping as local node does not match bootstrap requirements: {}",
-                    bootstrapRequirements);
+                logger.info(
+                    "skipping cluster bootstrapping as local node does not match bootstrap requirements: {}",
+                    bootstrapRequirements
+                );
                 bootstrappingPermitted.set(false);
                 return;
             }
@@ -141,36 +210,47 @@ public class ClusterBootstrapService {
             return;
         }
 
-        logger.info("no discovery configuration found, will perform best-effort cluster bootstrapping after [{}] " +
-            "unless existing master is discovered", unconfiguredBootstrapTimeout);
+        logger.info(
+            "no discovery configuration found, will perform best-effort cluster bootstrapping after [{}] "
+                + "unless existing master is discovered",
+            unconfiguredBootstrapTimeout
+        );
 
-        transportService.getThreadPool().scheduleUnlessShuttingDown(unconfiguredBootstrapTimeout, Names.GENERIC, new Runnable() {
-            @Override
-            public void run() {
-                final Set<DiscoveryNode> discoveredNodes = getDiscoveredNodes();
-                logger.debug("performing best-effort cluster bootstrapping with {}", discoveredNodes);
-                startBootstrap(discoveredNodes, emptyList());
-            }
+        transportService.getThreadPool()
+            .scheduleUnlessShuttingDown(unconfiguredBootstrapTimeout, transportService.getThreadPool().generic(), new Runnable() {
+                @Override
+                public void run() {
+                    final Set<DiscoveryNode> discoveredNodes = getDiscoveredNodes();
+                    logger.debug("performing best-effort cluster bootstrapping with {}", discoveredNodes);
+                    startBootstrap(discoveredNodes, emptyList());
+                }
 
-            @Override
-            public String toString() {
-                return "unconfigured-discovery delayed bootstrap";
-            }
-        });
+                @Override
+                public String toString() {
+                    return "unconfigured-discovery delayed bootstrap";
+                }
+            });
     }
 
     private Set<DiscoveryNode> getDiscoveredNodes() {
-        return Stream.concat(Stream.of(transportService.getLocalNode()),
-            StreamSupport.stream(discoveredNodesSupplier.get().spliterator(), false)).collect(Collectors.toSet());
+        return Stream.concat(
+            Stream.of(transportService.getLocalNode()),
+            StreamSupport.stream(discoveredNodesSupplier.get().spliterator(), false)
+        ).collect(Collectors.toSet());
     }
 
     private void startBootstrap(Set<DiscoveryNode> discoveryNodes, List<String> unsatisfiedRequirements) {
         assert discoveryNodes.stream().allMatch(DiscoveryNode::isMasterNode) : discoveryNodes;
         assert unsatisfiedRequirements.size() < discoveryNodes.size() : discoveryNodes + " smaller than " + unsatisfiedRequirements;
         if (bootstrappingPermitted.compareAndSet(true, false)) {
-            doBootstrap(new VotingConfiguration(Stream.concat(discoveryNodes.stream().map(DiscoveryNode::getId),
-                unsatisfiedRequirements.stream().map(s -> BOOTSTRAP_PLACEHOLDER_PREFIX + s))
-                .collect(Collectors.toSet())));
+            doBootstrap(
+                new VotingConfiguration(
+                    Stream.concat(
+                        discoveryNodes.stream().map(DiscoveryNode::getId),
+                        unsatisfiedRequirements.stream().map(s -> BOOTSTRAP_PLACEHOLDER_PREFIX + s)
+                    ).collect(Collectors.toSet())
+                )
+            );
         }
     }
 
@@ -184,9 +264,9 @@ public class ClusterBootstrapService {
         try {
             votingConfigurationConsumer.accept(votingConfiguration);
         } catch (Exception e) {
-            logger.warn(new ParameterizedMessage("exception when bootstrapping with {}, rescheduling", votingConfiguration), e);
-            transportService.getThreadPool().scheduleUnlessShuttingDown(TimeValue.timeValueSeconds(10), Names.GENERIC,
-                new Runnable() {
+            logger.warn(() -> "exception when bootstrapping with " + votingConfiguration + ", rescheduling", e);
+            transportService.getThreadPool()
+                .scheduleUnlessShuttingDown(TimeValue.timeValueSeconds(10), transportService.getThreadPool().generic(), new Runnable() {
                     @Override
                     public void run() {
                         doBootstrap(votingConfiguration);
@@ -196,8 +276,7 @@ public class ClusterBootstrapService {
                     public String toString() {
                         return "retry of failed bootstrapping with " + votingConfiguration;
                     }
-                }
-            );
+                });
         }
     }
 
@@ -207,12 +286,13 @@ public class ClusterBootstrapService {
             || discoveryNode.getAddress().getAddress().equals(requirement);
     }
 
-    private Tuple<Set<DiscoveryNode>,List<String>> checkRequirements(Set<DiscoveryNode> nodes) {
+    private Tuple<Set<DiscoveryNode>, List<String>> checkRequirements(Set<DiscoveryNode> nodes) {
         final Set<DiscoveryNode> selectedNodes = new HashSet<>();
         final List<String> unmatchedRequirements = new ArrayList<>();
         for (final String bootstrapRequirement : bootstrapRequirements) {
-            final Set<DiscoveryNode> matchingNodes
-                = nodes.stream().filter(n -> matchesRequirement(n, bootstrapRequirement)).collect(Collectors.toSet());
+            final Set<DiscoveryNode> matchingNodes = nodes.stream()
+                .filter(n -> matchesRequirement(n, bootstrapRequirement))
+                .collect(Collectors.toSet());
 
             if (matchingNodes.size() == 0) {
                 unmatchedRequirements.add(bootstrapRequirement);
@@ -224,8 +304,12 @@ public class ClusterBootstrapService {
 
             for (final DiscoveryNode matchingNode : matchingNodes) {
                 if (selectedNodes.add(matchingNode) == false) {
-                    throw new IllegalStateException("node [" + matchingNode + "] matches multiple requirements: " +
-                        bootstrapRequirements.stream().filter(r -> matchesRequirement(matchingNode, r)).collect(Collectors.toList()));
+                    throw new IllegalStateException(
+                        "node ["
+                            + matchingNode
+                            + "] matches multiple requirements: "
+                            + bootstrapRequirements.stream().filter(r -> matchesRequirement(matchingNode, r)).toList()
+                    );
                 }
             }
         }
