@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.common.xcontent;
@@ -11,12 +12,11 @@ package org.elasticsearch.common.xcontent;
 import org.apache.lucene.search.spell.LevenshteinDistance;
 import org.apache.lucene.util.CollectionUtil;
 import org.elasticsearch.core.Tuple;
+import org.elasticsearch.xcontent.ErrorOnUnknown;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
-
-import static java.util.stream.Collectors.toList;
 
 public class SuggestingErrorOnUnknown implements ErrorOnUnknown {
     @Override
@@ -54,7 +54,7 @@ public class SuggestingErrorOnUnknown implements ErrorOnUnknown {
             }
             return a.v2().compareTo(b.v2());
         });
-        List<String> keys = scored.stream().map(Tuple::v2).collect(toList());
+        List<String> keys = scored.stream().map(Tuple::v2).toList();
         StringBuilder builder = new StringBuilder(" did you mean ");
         if (keys.size() == 1) {
             builder.append("[").append(keys.get(0)).append("]");
