@@ -1,18 +1,22 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.index.mapper;
 
 import org.apache.lucene.index.BinaryDocValues;
+import org.apache.lucene.index.ByteVectorValues;
+import org.apache.lucene.index.DocValuesSkipIndexType;
+import org.apache.lucene.index.DocValuesSkipper;
 import org.apache.lucene.index.DocValuesType;
 import org.apache.lucene.index.FieldInfo;
 import org.apache.lucene.index.FieldInfos;
-import org.apache.lucene.index.Fields;
+import org.apache.lucene.index.FloatVectorValues;
 import org.apache.lucene.index.IndexOptions;
 import org.apache.lucene.index.IndexableField;
 import org.apache.lucene.index.LeafMetaData;
@@ -24,14 +28,19 @@ import org.apache.lucene.index.SortedDocValues;
 import org.apache.lucene.index.SortedNumericDocValues;
 import org.apache.lucene.index.SortedSetDocValues;
 import org.apache.lucene.index.StoredFieldVisitor;
+import org.apache.lucene.index.StoredFields;
+import org.apache.lucene.index.TermVectors;
 import org.apache.lucene.index.Terms;
+import org.apache.lucene.index.VectorEncoding;
+import org.apache.lucene.index.VectorSimilarityFunction;
 import org.apache.lucene.index.memory.MemoryIndex;
+import org.apache.lucene.search.AcceptDocs;
 import org.apache.lucene.search.DocIdSetIterator;
+import org.apache.lucene.search.KnnCollector;
 import org.apache.lucene.util.Bits;
 import org.apache.lucene.util.BytesRef;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -39,15 +48,13 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 /**
  * A {@link LeafReader} over a lucene document that exposes doc values and stored fields.
  * Note that unlike lucene's {@link MemoryIndex} implementation, this holds no state and
- * does not attempt to do any analysis on text fields.  It also supports stored
- * fields where MemoryIndex does not.  It is used to back index-time scripts that
- * reference field data and stored fields from a document that has not yet been
- * indexed.
+ * does not attempt to do any analysis on text fields.  It is used to back index-time
+ * scripts that reference field data and stored fields from a document that has not yet
+ * been indexed.
  */
 class DocumentLeafReader extends LeafReader {
 
@@ -65,9 +72,7 @@ class DocumentLeafReader extends LeafReader {
             // this means that a mapper script is referring to another calculated field;
             // in which case we need to execute that field first. We also check for loops here
             if (fieldPath.add(field) == false) {
-                throw new IllegalArgumentException(
-                    "Loop in field resolution detected: " + String.join("->", fieldPath) + "->" + field
-                );
+                throw new IllegalArgumentException("Loop in field resolution detected: " + String.join("->", fieldPath) + "->" + field);
             }
             calculatedFields.get(field).accept(this.getContext());
             fieldPath.remove(field);
@@ -77,60 +82,65 @@ class DocumentLeafReader extends LeafReader {
     @Override
     public NumericDocValues getNumericDocValues(String field) throws IOException {
         checkField(field);
-        List<Number> values = document.getFields().stream()
+        List<Number> values = document.getFields()
+            .stream()
             .filter(f -> Objects.equals(f.name(), field))
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.NUMERIC)
             .map(IndexableField::numericValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return numericDocValues(values);
     }
 
     @Override
     public BinaryDocValues getBinaryDocValues(String field) throws IOException {
         checkField(field);
-        List<BytesRef> values = document.getFields().stream()
+        List<BytesRef> values = document.getFields()
+            .stream()
             .filter(f -> Objects.equals(f.name(), field))
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.BINARY)
             .map(IndexableField::binaryValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return binaryDocValues(values);
     }
 
     @Override
     public SortedDocValues getSortedDocValues(String field) throws IOException {
         checkField(field);
-        List<BytesRef> values = document.getFields().stream()
+        List<BytesRef> values = document.getFields()
+            .stream()
             .filter(f -> Objects.equals(f.name(), field))
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.SORTED)
             .map(IndexableField::binaryValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return sortedDocValues(values);
     }
 
     @Override
     public SortedNumericDocValues getSortedNumericDocValues(String field) throws IOException {
         checkField(field);
-        List<Number> values = document.getFields().stream()
+        List<Number> values = document.getFields()
+            .stream()
             .filter(f -> Objects.equals(f.name(), field))
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.SORTED_NUMERIC)
             .map(IndexableField::numericValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return sortedNumericDocValues(values);
     }
 
     @Override
     public SortedSetDocValues getSortedSetDocValues(String field) throws IOException {
         checkField(field);
-        List<BytesRef> values = document.getFields().stream()
+        List<BytesRef> values = document.getFields()
+            .stream()
             .filter(f -> Objects.equals(f.name(), field))
             .filter(f -> f.fieldType().docValuesType() == DocValuesType.SORTED_SET)
             .map(IndexableField::binaryValue)
             .sorted()
-            .collect(Collectors.toList());
+            .toList();
         return sortedSetDocValues(values);
     }
 
@@ -140,36 +150,39 @@ class DocumentLeafReader extends LeafReader {
     }
 
     @Override
-    public void document(int docID, StoredFieldVisitor visitor) throws IOException {
-        List<IndexableField> fields = document.getFields().stream()
-            .filter(f -> f.fieldType().stored())
-            .collect(Collectors.toList());
-        for (IndexableField field : fields) {
-            FieldInfo fieldInfo = fieldInfo(field.name());
-            if (visitor.needsField(fieldInfo) != StoredFieldVisitor.Status.YES) {
-                continue;
-            }
-            if (field.numericValue() != null) {
-                Number v = field.numericValue();
-                if (v instanceof Integer) {
-                    visitor.intField(fieldInfo, v.intValue());
-                } else if (v instanceof Long) {
-                    visitor.longField(fieldInfo, v.longValue());
-                } else if (v instanceof Float) {
-                    visitor.floatField(fieldInfo, v.floatValue());
-                } else if (v instanceof Double) {
-                    visitor.doubleField(fieldInfo, v.doubleValue());
+    public StoredFields storedFields() throws IOException {
+        return new StoredFields() {
+            @Override
+            public void document(int docID, StoredFieldVisitor visitor) throws IOException {
+                List<IndexableField> fields = document.getFields().stream().filter(f -> f.fieldType().stored()).toList();
+                for (IndexableField field : fields) {
+                    FieldInfo fieldInfo = fieldInfo(field.name());
+                    if (visitor.needsField(fieldInfo) != StoredFieldVisitor.Status.YES) {
+                        continue;
+                    }
+                    if (field.numericValue() != null) {
+                        Number v = field.numericValue();
+                        if (v instanceof Integer) {
+                            visitor.intField(fieldInfo, v.intValue());
+                        } else if (v instanceof Long) {
+                            visitor.longField(fieldInfo, v.longValue());
+                        } else if (v instanceof Float) {
+                            visitor.floatField(fieldInfo, v.floatValue());
+                        } else if (v instanceof Double) {
+                            visitor.doubleField(fieldInfo, v.doubleValue());
+                        }
+                    } else if (field.stringValue() != null) {
+                        visitor.stringField(fieldInfo, field.stringValue());
+                    } else if (field.binaryValue() != null) {
+                        // We can't just pass field.binaryValue().bytes here as there may be offset/length
+                        // considerations
+                        byte[] data = new byte[field.binaryValue().length];
+                        System.arraycopy(field.binaryValue().bytes, field.binaryValue().offset, data, 0, data.length);
+                        visitor.binaryField(fieldInfo, data);
+                    }
                 }
-            } else if (field.stringValue() != null) {
-                visitor.stringField(fieldInfo, field.stringValue().getBytes(StandardCharsets.UTF_8));
-            } else if (field.binaryValue() != null) {
-                // We can't just pass field.binaryValue().bytes here as there may be offset/length
-                // considerations
-                byte[] data = new byte[field.binaryValue().length];
-                System.arraycopy(field.binaryValue().bytes, field.binaryValue().offset, data, 0, data.length);
-                visitor.binaryField(fieldInfo, data);
             }
-        }
+        };
     }
 
     @Override
@@ -184,6 +197,21 @@ class DocumentLeafReader extends LeafReader {
 
     @Override
     public NumericDocValues getNormValues(String field) throws IOException {
+        throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public DocValuesSkipper getDocValuesSkipper(String s) throws IOException {
+        return null;
+    }
+
+    @Override
+    public FloatVectorValues getFloatVectorValues(String field) throws IOException {
+        throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public void searchNearestVectors(String field, float[] target, KnnCollector knnCollector, AcceptDocs acceptDocs) {
         throw new UnsupportedOperationException();
     }
 
@@ -208,22 +236,32 @@ class DocumentLeafReader extends LeafReader {
     }
 
     @Override
-    public Fields getTermVectors(int docID) throws IOException {
-        throw new UnsupportedOperationException();
-    }
-
-    @Override
     public int numDocs() {
         throw new UnsupportedOperationException();
     }
 
     @Override
     public int maxDoc() {
-        throw new UnsupportedOperationException();
+        return 1;
     }
 
     @Override
     protected void doClose() throws IOException {
+        throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public ByteVectorValues getByteVectorValues(String field) {
+        throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public void searchNearestVectors(String field, byte[] target, KnnCollector knnCollector, AcceptDocs acceptDocs) {
+        throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public TermVectors termVectors() throws IOException {
         throw new UnsupportedOperationException();
     }
 
@@ -243,11 +281,16 @@ class DocumentLeafReader extends LeafReader {
             false,
             IndexOptions.NONE,
             DocValuesType.NONE,
+            DocValuesSkipIndexType.NONE,
             -1,
             Collections.emptyMap(),
             0,
             0,
             0,
+            0,
+            VectorEncoding.FLOAT32,
+            VectorSimilarityFunction.EUCLIDEAN,
+            false,
             false
         );
     }
@@ -439,15 +482,18 @@ class DocumentLeafReader extends LeafReader {
             @Override
             public long nextOrd() {
                 i++;
-                if (i >= values.size()) {
-                    return NO_MORE_ORDS;
-                }
+                assert i < values.size();
                 return i;
             }
 
             @Override
+            public int docValueCount() {
+                return values.size();
+            }
+
+            @Override
             public BytesRef lookupOrd(long ord) {
-                return values.get((int)ord);
+                return values.get((int) ord);
             }
 
             @Override
