@@ -1,13 +1,15 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.indices.recovery.plan;
 
+import org.elasticsearch.core.Nullable;
 import org.elasticsearch.index.snapshots.blobstore.BlobStoreIndexShardSnapshot;
 import org.elasticsearch.index.store.Store;
 import org.elasticsearch.index.store.StoreFileMetadata;
@@ -15,7 +17,6 @@ import org.elasticsearch.repositories.IndexId;
 
 import java.util.Iterator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Collections.emptyList;
@@ -29,12 +30,29 @@ public class ShardRecoveryPlan {
     private final long startingSeqNo;
     private final int translogOps;
 
-    public ShardRecoveryPlan(SnapshotFilesToRecover snapshotFilesToRecover,
-                             List<StoreFileMetadata> sourceFilesToRecover,
-                             List<StoreFileMetadata> filesPresentInTarget,
-                             long startingSeqNo,
-                             int translogOps,
-                             Store.MetadataSnapshot sourceMetadataSnapshot) {
+    @Nullable
+    private final ShardRecoveryPlan fallbackPlan;
+
+    public ShardRecoveryPlan(
+        SnapshotFilesToRecover snapshotFilesToRecover,
+        List<StoreFileMetadata> sourceFilesToRecover,
+        List<StoreFileMetadata> filesPresentInTarget,
+        long startingSeqNo,
+        int translogOps,
+        Store.MetadataSnapshot sourceMetadataSnapshot
+    ) {
+        this(snapshotFilesToRecover, sourceFilesToRecover, filesPresentInTarget, startingSeqNo, translogOps, sourceMetadataSnapshot, null);
+    }
+
+    public ShardRecoveryPlan(
+        SnapshotFilesToRecover snapshotFilesToRecover,
+        List<StoreFileMetadata> sourceFilesToRecover,
+        List<StoreFileMetadata> filesPresentInTarget,
+        long startingSeqNo,
+        int translogOps,
+        Store.MetadataSnapshot sourceMetadataSnapshot,
+        @Nullable ShardRecoveryPlan fallbackPlan
+    ) {
         this.snapshotFilesToRecover = snapshotFilesToRecover;
         this.sourceFilesToRecover = sourceFilesToRecover;
         this.filesPresentInTarget = filesPresentInTarget;
@@ -42,6 +60,7 @@ public class ShardRecoveryPlan {
 
         this.startingSeqNo = startingSeqNo;
         this.translogOps = translogOps;
+        this.fallbackPlan = fallbackPlan;
     }
 
     public List<StoreFileMetadata> getFilesPresentInTarget() {
@@ -49,11 +68,11 @@ public class ShardRecoveryPlan {
     }
 
     public List<String> getFilesPresentInTargetNames() {
-        return filesPresentInTarget.stream().map(StoreFileMetadata::name).collect(Collectors.toList());
+        return filesPresentInTarget.stream().map(StoreFileMetadata::name).toList();
     }
 
     public List<Long> getFilesPresentInTargetSizes() {
-        return filesPresentInTarget.stream().map(StoreFileMetadata::length).collect(Collectors.toList());
+        return filesPresentInTarget.stream().map(StoreFileMetadata::length).toList();
     }
 
     public List<StoreFileMetadata> getSourceFilesToRecover() {
@@ -61,13 +80,11 @@ public class ShardRecoveryPlan {
     }
 
     public List<String> getFilesToRecoverNames() {
-        return getFilesToRecoverStream().map(StoreFileMetadata::name)
-            .collect(Collectors.toList());
+        return getFilesToRecoverStream().map(StoreFileMetadata::name).toList();
     }
 
     public List<Long> getFilesToRecoverSizes() {
-        return getFilesToRecoverStream().map(StoreFileMetadata::length)
-            .collect(Collectors.toList());
+        return getFilesToRecoverStream().map(StoreFileMetadata::length).toList();
     }
 
     public SnapshotFilesToRecover getSnapshotFilesToRecover() {
@@ -94,6 +111,15 @@ public class ShardRecoveryPlan {
         return translogOps;
     }
 
+    public boolean canRecoverSnapshotFilesFromSourceNode() {
+        return fallbackPlan == null;
+    }
+
+    @Nullable
+    public ShardRecoveryPlan getFallbackPlan() {
+        return fallbackPlan;
+    }
+
     private Stream<StoreFileMetadata> getFilesToRecoverStream() {
         return Stream.concat(
             snapshotFilesToRecover.snapshotFiles.stream().map(BlobStoreIndexShardSnapshot.FileInfo::metadata),
@@ -101,26 +127,11 @@ public class ShardRecoveryPlan {
         );
     }
 
-    public static class SnapshotFilesToRecover implements Iterable<BlobStoreIndexShardSnapshot.FileInfo> {
+    public record SnapshotFilesToRecover(IndexId indexId, String repository, List<BlobStoreIndexShardSnapshot.FileInfo> snapshotFiles)
+        implements
+            Iterable<BlobStoreIndexShardSnapshot.FileInfo> {
+
         public static final SnapshotFilesToRecover EMPTY = new SnapshotFilesToRecover(null, null, emptyList());
-
-        private final IndexId indexId;
-        private final String repository;
-        private final List<BlobStoreIndexShardSnapshot.FileInfo> snapshotFiles;
-
-        public SnapshotFilesToRecover(IndexId indexId, String repository, List<BlobStoreIndexShardSnapshot.FileInfo> snapshotFiles) {
-            this.indexId = indexId;
-            this.repository = repository;
-            this.snapshotFiles = snapshotFiles;
-        }
-
-        public IndexId getIndexId() {
-            return indexId;
-        }
-
-        public String getRepository() {
-            return repository;
-        }
 
         public int size() {
             return snapshotFiles.size();
@@ -128,10 +139,6 @@ public class ShardRecoveryPlan {
 
         public boolean isEmpty() {
             return snapshotFiles.isEmpty();
-        }
-
-        public List<BlobStoreIndexShardSnapshot.FileInfo> getSnapshotFiles() {
-            return snapshotFiles;
         }
 
         @Override
