@@ -1,38 +1,40 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.cluster.action.shard;
 
 import org.elasticsearch.action.ActionListener;
+import org.elasticsearch.action.support.ActionTestUtils;
 import org.elasticsearch.cluster.ClusterState;
-import org.elasticsearch.cluster.ClusterStateTaskExecutor;
 import org.elasticsearch.cluster.ESAllocationTestCase;
 import org.elasticsearch.cluster.action.shard.ShardStateAction.StartedShardEntry;
+import org.elasticsearch.cluster.action.shard.ShardStateAction.StartedShardUpdateTask;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.cluster.routing.IndexShardRoutingTable;
 import org.elasticsearch.cluster.routing.ShardRouting;
 import org.elasticsearch.cluster.routing.ShardRoutingState;
 import org.elasticsearch.cluster.routing.allocation.AllocationService;
+import org.elasticsearch.cluster.service.ClusterStateTaskExecutorUtils;
 import org.elasticsearch.common.Priority;
+import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.index.shard.IndexLongFieldRange;
 import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.index.shard.ShardLongFieldRange;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
-import static java.util.Collections.singletonList;
 import static org.elasticsearch.action.support.replication.ClusterStateCreationUtils.state;
 import static org.elasticsearch.action.support.replication.ClusterStateCreationUtils.stateWithActivePrimary;
 import static org.elasticsearch.action.support.replication.ClusterStateCreationUtils.stateWithAssignedPrimariesAndReplicas;
@@ -48,82 +50,93 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
     private ShardStateAction.ShardStartedClusterStateTaskExecutor executor;
 
     @SuppressWarnings("unused")
-    private static void neverReroutes(String reason, Priority priority, ActionListener<ClusterState> listener) {
+    private static void neverReroutes(String reason, Priority priority, ActionListener<Void> listener) {
         fail("unexpectedly ran a deferred reroute");
     }
 
     @Override
     public void setUp() throws Exception {
         super.setUp();
-        AllocationService allocationService = createAllocationService(Settings.builder()
-            .put(CLUSTER_ROUTING_ALLOCATION_NODE_CONCURRENT_RECOVERIES_SETTING.getKey(), Integer.MAX_VALUE)
-            .build());
-        executor = new ShardStateAction.ShardStartedClusterStateTaskExecutor(allocationService,
-            ShardStartedClusterStateTaskExecutorTests::neverReroutes, logger);
+        AllocationService allocationService = createAllocationService(
+            Settings.builder().put(CLUSTER_ROUTING_ALLOCATION_NODE_CONCURRENT_RECOVERIES_SETTING.getKey(), Integer.MAX_VALUE).build()
+        );
+        executor = new ShardStateAction.ShardStartedClusterStateTaskExecutor(
+            new ClusterSettings(Settings.EMPTY, Set.of()),
+            allocationService,
+            ShardStartedClusterStateTaskExecutorTests::neverReroutes
+        );
     }
 
     public void testEmptyTaskListProducesSameClusterState() throws Exception {
         final ClusterState clusterState = stateWithNoShard();
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, Collections.emptyList());
-        assertSame(clusterState, result.resultingState);
+        assertSame(clusterState, executeTasks(clusterState, List.of()));
     }
 
     public void testNonExistentIndexMarkedAsSuccessful() throws Exception {
         final ClusterState clusterState = stateWithNoShard();
-        final StartedShardEntry entry = new StartedShardEntry(
+        final StartedShardUpdateTask entry = new StartedShardUpdateTask(
+            new StartedShardEntry(
                 new ShardId("test", "_na", 0),
                 "aId",
                 randomNonNegativeLong(),
                 "test",
-                ShardLongFieldRange.UNKNOWN);
+                ShardLongFieldRange.UNKNOWN,
+                ShardLongFieldRange.UNKNOWN
+            ),
+            createTestListener()
+        );
 
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, singletonList(entry));
-        assertSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(1));
-        assertThat(result.executionResults.containsKey(entry), is(true));
-        assertThat(result.executionResults.get(entry).isSuccess(), is(true));
+        assertSame(clusterState, executeTasks(clusterState, List.of(entry)));
     }
 
     public void testNonExistentShardsAreMarkedAsSuccessful() throws Exception {
         final String indexName = "test";
         final ClusterState clusterState = stateWithActivePrimary(indexName, true, randomInt(2), randomInt(2));
 
-        final IndexMetadata indexMetadata = clusterState.metadata().index(indexName);
-        final List<StartedShardEntry> tasks = Stream.concat(
+        final IndexMetadata indexMetadata = clusterState.metadata().getProject().index(indexName);
+        final List<StartedShardUpdateTask> tasks = Stream.concat(
             // Existent shard id but different allocation id
             IntStream.range(0, randomIntBetween(1, 5))
-                .mapToObj(i -> new StartedShardEntry(
-                        new ShardId(indexMetadata.getIndex(), 0),
-                        String.valueOf(i),
-                        0L,
-                        "allocation id",
-                        ShardLongFieldRange.UNKNOWN)),
+                .mapToObj(
+                    i -> new StartedShardUpdateTask(
+                        new StartedShardEntry(
+                            new ShardId(indexMetadata.getIndex(), 0),
+                            String.valueOf(i),
+                            0L,
+                            "allocation id",
+                            ShardLongFieldRange.UNKNOWN,
+                            ShardLongFieldRange.UNKNOWN
+                        ),
+                        createTestListener()
+                    )
+                ),
             // Non existent shard id
             IntStream.range(1, randomIntBetween(2, 5))
-                .mapToObj(i -> new StartedShardEntry(
-                        new ShardId(indexMetadata.getIndex(), i),
-                        String.valueOf(i),
-                        0L,
-                        "shard id",
-                        ShardLongFieldRange.UNKNOWN))
+                .mapToObj(
+                    i -> new StartedShardUpdateTask(
+                        new StartedShardEntry(
+                            new ShardId(indexMetadata.getIndex(), i),
+                            String.valueOf(i),
+                            0L,
+                            "shard id",
+                            ShardLongFieldRange.UNKNOWN,
+                            ShardLongFieldRange.UNKNOWN
+                        ),
+                        createTestListener()
+                    )
+                )
 
-        ).collect(Collectors.toList());
+        ).toList();
 
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
-        tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-        });
+        assertSame(clusterState, executeTasks(clusterState, tasks));
     }
 
     public void testNonInitializingShardAreMarkedAsSuccessful() throws Exception {
         final String indexName = "test";
-        final ClusterState clusterState = stateWithAssignedPrimariesAndReplicas(new String[]{indexName}, randomIntBetween(2, 10), 1);
+        final ClusterState clusterState = stateWithAssignedPrimariesAndReplicas(new String[] { indexName }, randomIntBetween(2, 10), 1);
 
-        final IndexMetadata indexMetadata = clusterState.metadata().index(indexName);
-        final List<StartedShardEntry> tasks = IntStream.range(0, randomIntBetween(1, indexMetadata.getNumberOfShards()))
+        final IndexMetadata indexMetadata = clusterState.metadata().getProject().index(indexName);
+        final List<StartedShardUpdateTask> tasks = IntStream.range(0, randomIntBetween(1, indexMetadata.getNumberOfShards()))
             .mapToObj(i -> {
                 final ShardId shardId = new ShardId(indexMetadata.getIndex(), i);
                 final IndexShardRoutingTable shardRoutingTable = clusterState.routingTable().shardRoutingTable(shardId);
@@ -134,187 +147,356 @@ public class ShardStartedClusterStateTaskExecutorTests extends ESAllocationTestC
                     allocationId = shardRoutingTable.replicaShards().iterator().next().allocationId().getId();
                 }
                 final long primaryTerm = indexMetadata.primaryTerm(shardId.id());
-                return new StartedShardEntry(shardId, allocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN);
-            }).collect(Collectors.toList());
+                return new StartedShardUpdateTask(
+                    new StartedShardEntry(
+                        shardId,
+                        allocationId,
+                        primaryTerm,
+                        "test",
+                        ShardLongFieldRange.UNKNOWN,
+                        ShardLongFieldRange.UNKNOWN
+                    ),
+                    createTestListener()
+                );
+            })
+            .toList();
 
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
-        tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-        });
+        assertSame(clusterState, executeTasks(clusterState, tasks));
     }
 
-    public void testStartedShards() throws Exception {
+    public void testStartPrimary() throws Exception {
         final String indexName = "test";
-        final ClusterState clusterState = state(indexName, randomBoolean(), ShardRoutingState.INITIALIZING, ShardRoutingState.INITIALIZING);
+        final ClusterState clusterState = state(indexName, randomBoolean(), ShardRoutingState.INITIALIZING);
 
-        final IndexMetadata indexMetadata = clusterState.metadata().index(indexName);
+        final IndexMetadata indexMetadata = clusterState.metadata().getProject().index(indexName);
         final ShardId shardId = new ShardId(indexMetadata.getIndex(), 0);
         final long primaryTerm = indexMetadata.primaryTerm(shardId.id());
         final ShardRouting primaryShard = clusterState.routingTable().shardRoutingTable(shardId).primaryShard();
         final String primaryAllocationId = primaryShard.allocationId().getId();
 
-        final List<StartedShardEntry> tasks = new ArrayList<>();
-        tasks.add(new StartedShardEntry(shardId, primaryAllocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN));
-        if (randomBoolean()) {
-            final ShardRouting replicaShard = clusterState.routingTable().shardRoutingTable(shardId).replicaShards().iterator().next();
-            final String replicaAllocationId = replicaShard.allocationId().getId();
-            tasks.add(new StartedShardEntry(shardId, replicaAllocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN));
-        }
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertNotSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
-        tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
+        final var task = new StartedShardUpdateTask(
+            new StartedShardEntry(
+                shardId,
+                primaryAllocationId,
+                primaryTerm,
+                "test",
+                ShardLongFieldRange.UNKNOWN,
+                ShardLongFieldRange.UNKNOWN
+            ),
+            createTestListener()
+        );
 
-            final IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
-        });
+        final var resultingState = executeTasks(clusterState, List.of(task));
+        assertNotSame(clusterState, resultingState);
+        assertThat(
+            resultingState.routingTable()
+                .shardRoutingTable(task.getStartedShardEntry().shardId)
+                .getByAllocationId(task.getStartedShardEntry().allocationId)
+                .state(),
+            is(ShardRoutingState.STARTED)
+        );
+    }
+
+    public void testStartReplica() throws Exception {
+        final String indexName = "test";
+        final ClusterState clusterState = state(indexName, randomBoolean(), ShardRoutingState.STARTED, ShardRoutingState.INITIALIZING);
+
+        final IndexMetadata indexMetadata = clusterState.metadata().getProject().index(indexName);
+        final ShardId shardId = new ShardId(indexMetadata.getIndex(), 0);
+        final long primaryTerm = indexMetadata.primaryTerm(shardId.id());
+        final ShardRouting primaryShard = clusterState.routingTable().shardRoutingTable(shardId).primaryShard();
+
+        final ShardRouting replicaShard = clusterState.routingTable().shardRoutingTable(shardId).replicaShards().iterator().next();
+        final String replicaAllocationId = replicaShard.allocationId().getId();
+        final var task = new StartedShardUpdateTask(
+            new StartedShardEntry(
+                shardId,
+                replicaAllocationId,
+                primaryTerm,
+                "test",
+                ShardLongFieldRange.UNKNOWN,
+                ShardLongFieldRange.UNKNOWN
+            ),
+            createTestListener()
+        );
+
+        final var resultingState = executeTasks(clusterState, List.of(task));
+        assertNotSame(clusterState, resultingState);
+        assertThat(
+            resultingState.routingTable()
+                .shardRoutingTable(task.getStartedShardEntry().shardId)
+                .getByAllocationId(task.getStartedShardEntry().allocationId)
+                .state(),
+            is(ShardRoutingState.STARTED)
+        );
     }
 
     public void testDuplicateStartsAreOkay() throws Exception {
         final String indexName = "test";
         final ClusterState clusterState = state(indexName, randomBoolean(), ShardRoutingState.INITIALIZING);
 
-        final IndexMetadata indexMetadata = clusterState.metadata().index(indexName);
+        final ProjectMetadata project = clusterState.metadata().getProject();
+
+        final IndexMetadata indexMetadata = project.index(indexName);
+        assertThat(indexMetadata, notNullValue());
         final ShardId shardId = new ShardId(indexMetadata.getIndex(), 0);
-        final ShardRouting shardRouting = clusterState.routingTable().shardRoutingTable(shardId).primaryShard();
+        final ShardRouting shardRouting = clusterState.routingTable(project.id()).shardRoutingTable(shardId).primaryShard();
         final String allocationId = shardRouting.allocationId().getId();
         final long primaryTerm = indexMetadata.primaryTerm(shardId.id());
 
-        final List<StartedShardEntry> tasks = IntStream.range(0, randomIntBetween(2, 10))
-            .mapToObj(i -> new StartedShardEntry(shardId, allocationId, primaryTerm, "test", ShardLongFieldRange.UNKNOWN))
-            .collect(Collectors.toList());
+        final List<StartedShardUpdateTask> tasks = IntStream.range(0, randomIntBetween(2, 10))
+            .mapToObj(
+                i -> new StartedShardUpdateTask(
+                    new StartedShardEntry(
+                        shardId,
+                        allocationId,
+                        primaryTerm,
+                        "test",
+                        ShardLongFieldRange.UNKNOWN,
+                        ShardLongFieldRange.UNKNOWN
+                    ),
+                    createTestListener()
+                )
+            )
+            .toList();
 
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertNotSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
-        tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-
-            final IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
-        });
+        final var resultingState = executeTasks(clusterState, tasks);
+        assertNotSame(clusterState, resultingState);
+        for (final var task : tasks) {
+            assertThat(
+                resultingState.routingTable(project.id())
+                    .shardRoutingTable(task.getStartedShardEntry().shardId)
+                    .getByAllocationId(task.getStartedShardEntry().allocationId)
+                    .state(),
+                is(ShardRoutingState.STARTED)
+            );
+        }
     }
 
-    public void testPrimaryTermsMismatch() throws Exception {
+    public void testPrimaryTermsMismatchOnPrimary() throws Exception {
         final String indexName = "test";
         final int shard = 0;
         final int primaryTerm = 2 + randomInt(200);
 
-        ClusterState clusterState = state(indexName, randomBoolean(), ShardRoutingState.INITIALIZING, ShardRoutingState.INITIALIZING);
+        ClusterState clusterState = state(indexName, randomBoolean(), ShardRoutingState.INITIALIZING);
         clusterState = ClusterState.builder(clusterState)
-            .metadata(Metadata.builder(clusterState.metadata())
-                .put(IndexMetadata.builder(clusterState.metadata().index(indexName))
-                    .primaryTerm(shard, primaryTerm)
-                    .build(), true)
-                .build())
+            .metadata(
+                Metadata.builder(clusterState.metadata())
+                    .put(
+                        IndexMetadata.builder(clusterState.metadata().getProject().index(indexName))
+                            .primaryTerm(shard, primaryTerm)
+                            .build(),
+                        true
+                    )
+                    .build()
+            )
             .build();
-        final ShardId shardId = new ShardId(clusterState.metadata().index(indexName).getIndex(), shard);
+        final ShardId shardId = new ShardId(clusterState.metadata().getProject().index(indexName).getIndex(), shard);
         final String primaryAllocationId = clusterState.routingTable().shardRoutingTable(shardId).primaryShard().allocationId().getId();
         {
-            final StartedShardEntry task = new StartedShardEntry(
+            final StartedShardUpdateTask task = new StartedShardUpdateTask(
+                new StartedShardEntry(
                     shardId,
                     primaryAllocationId,
                     primaryTerm - 1,
                     "primary terms does not match on primary",
-                    ShardLongFieldRange.UNKNOWN);
+                    ShardLongFieldRange.UNKNOWN,
+                    ShardLongFieldRange.UNKNOWN
+                ),
+                createTestListener()
+            );
 
-            final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, singletonList(task));
-            assertSame(clusterState, result.resultingState);
-            assertThat(result.executionResults.size(), equalTo(1));
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-            IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.INITIALIZING));
-            assertSame(clusterState, result.resultingState);
+            assertSame(clusterState, executeTasks(clusterState, List.of(task)));
+            assertThat(
+                clusterState.routingTable()
+                    .shardRoutingTable(task.getStartedShardEntry().shardId)
+                    .getByAllocationId(task.getStartedShardEntry().allocationId)
+                    .state(),
+                is(ShardRoutingState.INITIALIZING)
+            );
         }
         {
-            final StartedShardEntry task = new StartedShardEntry(
-                    shardId, primaryAllocationId, primaryTerm, "primary terms match on primary", ShardLongFieldRange.UNKNOWN);
+            final StartedShardUpdateTask task = new StartedShardUpdateTask(
+                new StartedShardEntry(
+                    shardId,
+                    primaryAllocationId,
+                    primaryTerm,
+                    "primary terms match on primary",
+                    ShardLongFieldRange.UNKNOWN,
+                    ShardLongFieldRange.UNKNOWN
+                ),
+                createTestListener()
+            );
 
-            final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, singletonList(task));
-            assertNotSame(clusterState, result.resultingState);
-            assertThat(result.executionResults.size(), equalTo(1));
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-            IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
-            assertNotSame(clusterState, result.resultingState);
-            clusterState = result.resultingState;
-        }
-        {
-            final long replicaPrimaryTerm = randomBoolean() ? primaryTerm : primaryTerm - 1;
-            final String replicaAllocationId = clusterState.routingTable().shardRoutingTable(shardId).replicaShards().iterator().next()
-                .allocationId().getId();
-
-            final StartedShardEntry task = new StartedShardEntry(
-                    shardId, replicaAllocationId, replicaPrimaryTerm, "test on replica",  ShardLongFieldRange.UNKNOWN);
-
-            final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, singletonList(task));
-            assertNotSame(clusterState, result.resultingState);
-            assertThat(result.executionResults.size(), equalTo(1));
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
-            IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
-            assertNotSame(clusterState, result.resultingState);
+            final var resultingState = executeTasks(clusterState, List.of(task));
+            assertNotSame(clusterState, resultingState);
+            assertThat(
+                resultingState.routingTable()
+                    .shardRoutingTable(task.getStartedShardEntry().shardId)
+                    .getByAllocationId(task.getStartedShardEntry().allocationId)
+                    .state(),
+                is(ShardRoutingState.STARTED)
+            );
         }
     }
 
-    public void testExpandsTimestampRange() throws Exception {
+    public void testPrimaryTermsMismatchOnReplica() throws Exception {
         final String indexName = "test";
-        final ClusterState clusterState = state(indexName, randomBoolean(), ShardRoutingState.INITIALIZING, ShardRoutingState.INITIALIZING);
+        final int shard = 0;
+        final int primaryTerm = 2 + randomInt(200);
 
-        final IndexMetadata indexMetadata = clusterState.metadata().index(indexName);
+        ClusterState clusterState = state(indexName, randomBoolean(), ShardRoutingState.STARTED, ShardRoutingState.INITIALIZING);
+        clusterState = ClusterState.builder(clusterState)
+            .metadata(
+                Metadata.builder(clusterState.metadata())
+                    .put(
+                        IndexMetadata.builder(clusterState.metadata().getProject().index(indexName))
+                            .primaryTerm(shard, primaryTerm)
+                            .build(),
+                        true
+                    )
+                    .build()
+            )
+            .build();
+        final ShardId shardId = new ShardId(clusterState.metadata().getProject().index(indexName).getIndex(), shard);
+        {
+            final long replicaPrimaryTerm = randomBoolean() ? primaryTerm : primaryTerm - 1;
+            final String replicaAllocationId = clusterState.routingTable()
+                .shardRoutingTable(shardId)
+                .replicaShards()
+                .iterator()
+                .next()
+                .allocationId()
+                .getId();
+
+            final StartedShardUpdateTask task = new StartedShardUpdateTask(
+                new StartedShardEntry(
+                    shardId,
+                    replicaAllocationId,
+                    replicaPrimaryTerm,
+                    "test on replica",
+                    ShardLongFieldRange.UNKNOWN,
+                    ShardLongFieldRange.UNKNOWN
+                ),
+                createTestListener()
+            );
+
+            final var resultingState = executeTasks(clusterState, List.of(task));
+            assertNotSame(clusterState, resultingState);
+            assertThat(
+                resultingState.routingTable()
+                    .shardRoutingTable(task.getStartedShardEntry().shardId)
+                    .getByAllocationId(task.getStartedShardEntry().allocationId)
+                    .state(),
+                is(ShardRoutingState.STARTED)
+            );
+        }
+    }
+
+    public void testExpandsTimestampRangeForPrimary() throws Exception {
+        final String indexName = "test";
+        final ClusterState clusterState = state(indexName, randomBoolean(), ShardRoutingState.INITIALIZING);
+
+        final IndexMetadata indexMetadata = clusterState.metadata().getProject().index(indexName);
         final ShardId shardId = new ShardId(indexMetadata.getIndex(), 0);
         final long primaryTerm = indexMetadata.primaryTerm(shardId.id());
         final ShardRouting primaryShard = clusterState.routingTable().shardRoutingTable(shardId).primaryShard();
         final String primaryAllocationId = primaryShard.allocationId().getId();
 
         assertThat(indexMetadata.getTimestampRange(), sameInstance(IndexLongFieldRange.NO_SHARDS));
+        assertThat(indexMetadata.getEventIngestedRange(), sameInstance(IndexLongFieldRange.NO_SHARDS));
 
-        final ShardLongFieldRange shardTimestampRange = randomBoolean() ? ShardLongFieldRange.UNKNOWN :
-                randomBoolean() ? ShardLongFieldRange.EMPTY : ShardLongFieldRange.of(1606407943000L, 1606407944000L);
+        final ShardLongFieldRange shardTimestampRange = randomBoolean() ? ShardLongFieldRange.UNKNOWN
+            : randomBoolean() ? ShardLongFieldRange.EMPTY
+            : ShardLongFieldRange.of(1606407943000L, 1606407944000L);
 
-        final List<StartedShardEntry> tasks = new ArrayList<>();
-        tasks.add(new StartedShardEntry(shardId, primaryAllocationId, primaryTerm, "test", shardTimestampRange));
-        if (randomBoolean()) {
-            final ShardRouting replicaShard = clusterState.routingTable().shardRoutingTable(shardId).replicaShards().iterator().next();
-            final String replicaAllocationId = replicaShard.allocationId().getId();
-            tasks.add(new StartedShardEntry(shardId, replicaAllocationId, primaryTerm, "test", shardTimestampRange));
+        final ShardLongFieldRange shardEventIngestedRange = randomBoolean() ? ShardLongFieldRange.UNKNOWN
+            : randomBoolean() ? ShardLongFieldRange.EMPTY
+            : ShardLongFieldRange.of(1606407943000L, 1606407944000L);
+
+        final var task = new StartedShardUpdateTask(
+            new StartedShardEntry(shardId, primaryAllocationId, primaryTerm, "test", shardTimestampRange, shardEventIngestedRange),
+            createTestListener()
+        );
+
+        final var resultingState = executeTasks(clusterState, List.of(task));
+        assertNotSame(clusterState, resultingState);
+        assertThat(
+            resultingState.routingTable()
+                .shardRoutingTable(task.getStartedShardEntry().shardId)
+                .getByAllocationId(task.getStartedShardEntry().allocationId)
+                .state(),
+            is(ShardRoutingState.STARTED)
+        );
+
+        final var timestampRange = resultingState.metadata().getProject().index(indexName).getTimestampRange();
+        if (shardTimestampRange == ShardLongFieldRange.UNKNOWN) {
+            assertThat(timestampRange, sameInstance(IndexLongFieldRange.UNKNOWN));
+        } else if (shardTimestampRange == ShardLongFieldRange.EMPTY) {
+            assertThat(timestampRange, sameInstance(IndexLongFieldRange.EMPTY));
+        } else {
+            assertTrue(timestampRange.isComplete());
+            assertThat(timestampRange.getMin(), equalTo(shardTimestampRange.getMin()));
+            assertThat(timestampRange.getMax(), equalTo(shardTimestampRange.getMax()));
         }
-        final ClusterStateTaskExecutor.ClusterTasksResult<?> result = executeTasks(clusterState, tasks);
-        assertNotSame(clusterState, result.resultingState);
-        assertThat(result.executionResults.size(), equalTo(tasks.size()));
-        tasks.forEach(task -> {
-            assertThat(result.executionResults.containsKey(task), is(true));
-            assertThat(result.executionResults.get(task).isSuccess(), is(true));
 
-            final IndexShardRoutingTable shardRoutingTable = result.resultingState.routingTable().shardRoutingTable(task.shardId);
-            assertThat(shardRoutingTable.getByAllocationId(task.allocationId).state(), is(ShardRoutingState.STARTED));
-
-            final IndexLongFieldRange timestampRange = result.resultingState.metadata().index(indexName).getTimestampRange();
-            if (shardTimestampRange == ShardLongFieldRange.UNKNOWN) {
-                assertThat(timestampRange, sameInstance(IndexLongFieldRange.UNKNOWN));
-            } else if (shardTimestampRange == ShardLongFieldRange.EMPTY) {
-                assertThat(timestampRange, sameInstance(IndexLongFieldRange.EMPTY));
-            } else {
-                assertTrue(timestampRange.isComplete());
-                assertThat(timestampRange.getMin(), equalTo(shardTimestampRange.getMin()));
-                assertThat(timestampRange.getMax(), equalTo(shardTimestampRange.getMax()));
-            }
-        });
+        final var eventIngestedRange = resultingState.metadata().getProject().index(indexName).getEventIngestedRange();
+        if (shardEventIngestedRange == ShardLongFieldRange.UNKNOWN) {
+            assertThat(eventIngestedRange, sameInstance(IndexLongFieldRange.UNKNOWN));
+        } else if (shardEventIngestedRange == ShardLongFieldRange.EMPTY) {
+            assertThat(eventIngestedRange, sameInstance(IndexLongFieldRange.EMPTY));
+        } else {
+            assertTrue(eventIngestedRange.isComplete());
+            assertThat(eventIngestedRange.getMin(), equalTo(shardEventIngestedRange.getMin()));
+            assertThat(eventIngestedRange.getMax(), equalTo(shardEventIngestedRange.getMax()));
+        }
     }
 
-    private ClusterStateTaskExecutor.ClusterTasksResult<?> executeTasks(final ClusterState state,
-                                                                     final List<StartedShardEntry> tasks) throws Exception {
-        final ClusterStateTaskExecutor.ClusterTasksResult<StartedShardEntry> result = executor.execute(state, tasks);
-        assertThat(result, notNullValue());
-        return result;
+    public void testExpandsTimestampRangeForReplica() throws Exception {
+        final String indexName = "test";
+        final ClusterState clusterState = state(indexName, randomBoolean(), ShardRoutingState.STARTED, ShardRoutingState.INITIALIZING);
+
+        final IndexMetadata indexMetadata = clusterState.metadata().getProject().index(indexName);
+        final ShardId shardId = new ShardId(indexMetadata.getIndex(), 0);
+        final long primaryTerm = indexMetadata.primaryTerm(shardId.id());
+
+        assertThat(indexMetadata.getTimestampRange(), sameInstance(IndexLongFieldRange.UNKNOWN));
+        assertThat(indexMetadata.getEventIngestedRange(), sameInstance(IndexLongFieldRange.UNKNOWN));
+
+        final ShardLongFieldRange shardTimestampRange = randomBoolean() ? ShardLongFieldRange.UNKNOWN
+            : randomBoolean() ? ShardLongFieldRange.EMPTY
+            : ShardLongFieldRange.of(1606407943000L, 1606407944000L);
+
+        final ShardLongFieldRange shardEventIngestedRange = randomBoolean() ? ShardLongFieldRange.UNKNOWN
+            : randomBoolean() ? ShardLongFieldRange.EMPTY
+            : ShardLongFieldRange.of(1606407888888L, 1606407999999L);
+
+        final ShardRouting replicaShard = clusterState.routingTable().shardRoutingTable(shardId).replicaShards().iterator().next();
+        final String replicaAllocationId = replicaShard.allocationId().getId();
+        final var task = new StartedShardUpdateTask(
+            new StartedShardEntry(shardId, replicaAllocationId, primaryTerm, "test", shardTimestampRange, shardEventIngestedRange),
+            createTestListener()
+        );
+        final var resultingState = executeTasks(clusterState, List.of(task));
+        assertNotSame(clusterState, resultingState);
+        assertThat(
+            resultingState.routingTable()
+                .shardRoutingTable(task.getStartedShardEntry().shardId)
+                .getByAllocationId(task.getStartedShardEntry().allocationId)
+                .state(),
+            is(ShardRoutingState.STARTED)
+        );
+
+        final IndexMetadata latestIndexMetadata = resultingState.metadata().getProject().index(indexName);
+        assertThat(latestIndexMetadata.getTimestampRange(), sameInstance(IndexLongFieldRange.UNKNOWN));
+        assertThat(latestIndexMetadata.getEventIngestedRange(), sameInstance(IndexLongFieldRange.UNKNOWN));
+    }
+
+    private ClusterState executeTasks(final ClusterState state, final List<StartedShardUpdateTask> tasks) throws Exception {
+        return ClusterStateTaskExecutorUtils.executeAndAssertSuccessful(state, executor, tasks);
+    }
+
+    private static <T> ActionListener<T> createTestListener() {
+        return ActionTestUtils.assertNoFailureListener(t -> {});
     }
 }
