@@ -1,9 +1,10 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.common.util;
@@ -31,6 +32,7 @@ import static java.util.stream.Collectors.toMap;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.hasItem;
+import static org.hamcrest.Matchers.lessThanOrEqualTo;
 
 public class MapsTests extends ESTestCase {
 
@@ -47,9 +49,7 @@ public class MapsTests extends ESTestCase {
         final String key = randomValueOtherThanMany(keys::contains, () -> randomAlphaOfLength(16));
         final String value = randomAlphaOfLength(16);
         final Map<String, String> concatenation = Maps.copyMapWithAddedEntry(map, key, value);
-        assertMapEntriesAndImmutability(
-                concatenation,
-                Stream.concat(entries.stream(), Stream.of(entry(key, value))).collect(Collectors.toUnmodifiableList()));
+        assertMapEntriesAndImmutability(concatenation, Stream.concat(entries.stream(), Stream.of(entry(key, value))).toList());
     }
 
     public void testAddEntryInImmutableMap() {
@@ -65,9 +65,7 @@ public class MapsTests extends ESTestCase {
         final String key = randomValueOtherThanMany(keys::contains, () -> randomAlphaOfLength(16));
         final String value = randomAlphaOfLength(16);
         final Map<String, String> add = Maps.copyMapWithAddedOrReplacedEntry(map, key, value);
-        assertMapEntriesAndImmutability(
-                add,
-                Stream.concat(entries.stream(), Stream.of(entry(key, value))).collect(Collectors.toUnmodifiableList()));
+        assertMapEntriesAndImmutability(add, Stream.concat(entries.stream(), Stream.of(entry(key, value))).toList());
     }
 
     public void testReplaceEntryInImmutableMap() {
@@ -84,10 +82,9 @@ public class MapsTests extends ESTestCase {
         final String value = randomAlphaOfLength(16);
         final Map<String, String> replaced = Maps.copyMapWithAddedOrReplacedEntry(map, key, value);
         assertMapEntriesAndImmutability(
-                replaced,
-                Stream.concat(
-                        entries.stream().filter(e -> key.equals(e.getKey()) == false),
-                        Stream.of(entry(key, value))).collect(Collectors.toUnmodifiableList()));
+            replaced,
+            Stream.concat(entries.stream().filter(e -> key.equals(e.getKey()) == false), Stream.of(entry(key, value))).toList()
+        );
     }
 
     public void testOfEntries() {
@@ -103,12 +100,37 @@ public class MapsTests extends ESTestCase {
         assertMapEntriesAndImmutability(map, entries);
     }
 
-    public void testDeepEquals() {
+    public void testDeepEqualsMapsWithSimpleValues() {
+        final Supplier<String> keyGenerator = () -> randomAlphaOfLengthBetween(1, 5);
+        final Supplier<Integer> valueGenerator = () -> randomInt(5);
+        final Map<String, Integer> map = randomMap(randomInt(5), keyGenerator, valueGenerator);
+        final Map<String, Integer> mapCopy = new HashMap<>(map);
+
+        assertTrue(Maps.deepEquals(map, mapCopy));
+
+        final Map<String, Integer> mapModified = mapCopy;
+        if (mapModified.isEmpty()) {
+            mapModified.put(keyGenerator.get(), valueGenerator.get());
+        } else {
+            if (randomBoolean()) {
+                final String randomKey = mapModified.keySet().toArray(new String[0])[randomInt(mapModified.size() - 1)];
+                final int value = mapModified.get(randomKey);
+                mapModified.put(randomKey, randomValueOtherThanMany((v) -> v.equals(value), valueGenerator));
+            } else {
+                mapModified.put(randomValueOtherThanMany(mapModified::containsKey, keyGenerator), valueGenerator.get());
+            }
+        }
+
+        assertFalse(Maps.deepEquals(map, mapModified));
+    }
+
+    public void testDeepEqualsMapsWithArrayValues() {
         final Supplier<String> keyGenerator = () -> randomAlphaOfLengthBetween(1, 5);
         final Supplier<int[]> arrayValueGenerator = () -> random().ints(randomInt(5)).toArray();
         final Map<String, int[]> map = randomMap(randomInt(5), keyGenerator, arrayValueGenerator);
-        final Map<String, int[]> mapCopy = map.entrySet().stream()
-                .collect(toMap(Map.Entry::getKey, e -> Arrays.copyOf(e.getValue(), e.getValue().length)));
+        final Map<String, int[]> mapCopy = map.entrySet()
+            .stream()
+            .collect(toMap(Map.Entry::getKey, e -> Arrays.copyOf(e.getValue(), e.getValue().length)));
 
         assertTrue(Maps.deepEquals(map, mapCopy));
 
@@ -128,31 +150,75 @@ public class MapsTests extends ESTestCase {
         assertFalse(Maps.deepEquals(map, mapModified));
     }
 
+    public void testDeepEqualsMapsWithMapValuesSimple() {
+        Map<String, Map<String, int[]>> m1 = Map.of("a", Map.of("b", new int[] { 1 }));
+        Map<String, Map<String, int[]>> m2 = Map.of("a", Map.of("b", new int[] { 1 }));
+        assertTrue(Maps.deepEquals(m1, m2));
+    }
+
+    public void testDeepEqualsMapsWithMapValues() {
+        final Supplier<String> keyGenerator = () -> randomAlphaOfLengthBetween(1, 5);
+        final Supplier<Map<String, int[]>> mapValueGenerator = () -> Map.of("nested", random().ints(randomInt(5)).toArray());
+        final Map<String, Map<String, int[]>> map = randomMap(randomInt(5), keyGenerator, mapValueGenerator);
+        final Map<String, Map<String, int[]>> mapCopy = map.entrySet().stream().collect(toMap(Map.Entry::getKey, e -> {
+            int[] value = e.getValue().get("nested");
+            return Map.of("nested", Arrays.copyOf(value, value.length));
+        }));
+
+        assertTrue(Maps.deepEquals(map, mapCopy));
+
+        final Map<String, Map<String, int[]>> mapModified = mapCopy;
+        if (mapModified.isEmpty()) {
+            mapModified.put(keyGenerator.get(), mapValueGenerator.get());
+        } else {
+            if (randomBoolean()) {
+                final String randomKey = mapModified.keySet().toArray(new String[0])[randomInt(mapModified.size() - 1)];
+                final Map<String, int[]> value = mapModified.get(randomKey);
+                mapModified.put(
+                    randomKey,
+                    randomValueOtherThanMany((v) -> Arrays.equals(v.get("nested"), value.get("nested")), mapValueGenerator)
+                );
+            } else {
+                mapModified.put(randomValueOtherThanMany(mapModified::containsKey, keyGenerator), mapValueGenerator.get());
+            }
+        }
+
+        assertFalse(Maps.deepEquals(map, mapModified));
+    }
+
     public void testCollectToUnmodifiableSortedMap() {
         SortedMap<String, String> canadianProvinces = Stream.of(
-                new Tuple<>("ON", "Ontario"),
-                new Tuple<>("QC", "Quebec"),
-                new Tuple<>("NS", "Nova Scotia"),
-                new Tuple<>("NB", "New Brunswick"),
-                new Tuple<>("MB", "Manitoba"))
-            .collect(Maps.toUnmodifiableSortedMap(Tuple::v1, Tuple::v2));
+            new Tuple<>("ON", "Ontario"),
+            new Tuple<>("QC", "Quebec"),
+            new Tuple<>("NS", "Nova Scotia"),
+            new Tuple<>("NB", "New Brunswick"),
+            new Tuple<>("MB", "Manitoba")
+        ).collect(Maps.toUnmodifiableSortedMap(Tuple::v1, Tuple::v2));
 
-        assertThat(canadianProvinces, equalTo(new TreeMap<>(Maps.ofEntries(List.of(
-            entry("ON", "Ontario"),
-            entry("QC", "Quebec"),
-            entry("NS", "Nova Scotia"),
-            entry("NB", "New Brunswick"),
-            entry("MB", "Manitoba"))
-        ))));
+        assertThat(
+            canadianProvinces,
+            equalTo(
+                new TreeMap<>(
+                    Maps.ofEntries(
+                        List.of(
+                            entry("ON", "Ontario"),
+                            entry("QC", "Quebec"),
+                            entry("NS", "Nova Scotia"),
+                            entry("NB", "New Brunswick"),
+                            entry("MB", "Manitoba")
+                        )
+                    )
+                )
+            )
+        );
         expectThrows(UnsupportedOperationException.class, () -> canadianProvinces.put("BC", "British Columbia"));
     }
 
     public void testCollectRandomListToUnmodifiableSortedMap() {
-        List<Tuple<String, String>> tuples = randomList(0, 100, () -> randomAlphaOfLength(10))
-            .stream()
+        List<Tuple<String, String>> tuples = randomList(0, 100, () -> randomAlphaOfLength(10)).stream()
             .distinct()
             .map(key -> Tuple.tuple(key, randomAlphaOfLength(10)))
-            .collect(Collectors.toList());
+            .collect(Collectors.toCollection(ArrayList::new));
         Randomness.shuffle(tuples);
 
         SortedMap<String, String> sortedTuplesMap = tuples.stream().collect(Maps.toUnmodifiableSortedMap(Tuple::v1, Tuple::v2));
@@ -169,16 +235,30 @@ public class MapsTests extends ESTestCase {
     }
 
     public void testThrowsExceptionOnDuplicateKeysWhenCollectingToUnmodifiableSortedMap() {
-        IllegalStateException illegalStateException = expectThrows(IllegalStateException.class, () -> Stream.of(
+        IllegalStateException illegalStateException = expectThrows(
+            IllegalStateException.class,
+            () -> Stream.of(
                 new Tuple<>("ON", "Ontario"),
                 new Tuple<>("QC", "Quebec"),
                 new Tuple<>("NS", "Nova Scotia"),
                 new Tuple<>("NS", "Nouvelle-Écosse"),
                 new Tuple<>("NB", "New Brunswick"),
-                new Tuple<>("MB", "Manitoba"))
-            .collect(Maps.toUnmodifiableSortedMap(Tuple::v1, Tuple::v2)));
-        assertThat(illegalStateException.getMessage(),
-            equalTo("Duplicate key (attempted merging values Nova Scotia  and Nouvelle-Écosse)"));
+                new Tuple<>("MB", "Manitoba")
+            ).collect(Maps.toUnmodifiableSortedMap(Tuple::v1, Tuple::v2))
+        );
+        assertThat(
+            illegalStateException.getMessage(),
+            equalTo("Duplicate key (attempted merging values Nova Scotia  and Nouvelle-Écosse)")
+        );
+    }
+
+    public void testListFlatten() {
+        Map<String, Object> map = Map.of("parent1", List.of(Map.of("key1", "val1", "key2", "val2")));
+        Map<String, Object> flatten = Maps.flatten(map, true, true);
+        assertThat(flatten.size(), equalTo(2));
+        for (Map.Entry<String, Object> entry : flatten.entrySet()) {
+            assertThat(entry.getKey(), entry.getValue(), equalTo(deepGet(entry.getKey(), map)));
+        }
     }
 
     public void testFlatten() {
@@ -190,6 +270,22 @@ public class MapsTests extends ESTestCase {
         }
     }
 
+    public void testCapacityIsEnoughForMapToNotBeResized() {
+        for (int i = 0; i < 1000; i++) {
+            int size = randomIntBetween(0, 1_000_000);
+            int capacity = Maps.capacity(size);
+            assertThat(size, lessThanOrEqualTo((int) (capacity * 0.75f)));
+        }
+    }
+
+    public void testCapacityForMaxSize() {
+        assertEquals(Integer.MAX_VALUE, Maps.capacity(Integer.MAX_VALUE));
+    }
+
+    public void testCapacityForZeroSize() {
+        assertEquals(1, Maps.capacity(0));
+    }
+
     @SuppressWarnings("unchecked")
     private static Object deepGet(String path, Object obj) {
         Object cur = obj;
@@ -198,7 +294,7 @@ public class MapsTests extends ESTestCase {
             if (Character.isDigit(key.charAt(0))) {
                 List<Object> list = (List<Object>) cur;
                 cur = list.get(Integer.parseInt(key));
-             } else {
+            } else {
                 Map<String, Object> map = (Map<String, Object>) cur;
                 cur = map.get(key);
             }
@@ -215,7 +311,7 @@ public class MapsTests extends ESTestCase {
             } else if (val instanceof List) {
                 sum += deepCount((List<Object>) val);
             } else {
-                sum ++;
+                sum++;
             }
         }
         return sum;
@@ -223,10 +319,7 @@ public class MapsTests extends ESTestCase {
 
     private Map<String, Object> randomNestedMap(int level) {
         final Supplier<String> keyGenerator = () -> randomAlphaOfLengthBetween(1, 5);
-        final Supplier<Object> arrayValueGenerator = () -> random().ints(randomInt(5))
-            .boxed()
-            .map(s -> (Object) s)
-            .collect(Collectors.toList());
+        final Supplier<Object> arrayValueGenerator = () -> random().ints(randomInt(5)).boxed().map(s -> (Object) s).toList();
 
         final Supplier<Object> mapSupplier;
         if (level > 0) {
@@ -249,9 +342,10 @@ public class MapsTests extends ESTestCase {
         for (var entry : entries) {
             assertThat("map [" + map + "] does not contain key [" + entry.getKey() + "]", map.keySet(), hasItem(entry.getKey()));
             assertThat(
-                    "key [" + entry.getKey() + "] should be mapped to value [" + entry.getValue() + "]",
-                    map.get(entry.getKey()),
-                    equalTo(entry.getValue()));
+                "key [" + entry.getKey() + "] should be mapped to value [" + entry.getValue() + "]",
+                map.get(entry.getKey()),
+                equalTo(entry.getValue())
+            );
         }
     }
 
@@ -261,10 +355,12 @@ public class MapsTests extends ESTestCase {
         assertUnsupported("putting map entries should be unsupported", () -> map.putAll(Map.of(nonPresentKey, randomAlphaOfLength(16))));
         assertUnsupported(
             "computing a new map association should be unsupported",
-            () -> map.compute(nonPresentKey, (k, v) -> randomAlphaOfLength(16)));
+            () -> map.compute(nonPresentKey, (k, v) -> randomAlphaOfLength(16))
+        );
         assertUnsupported(
             "computing a new map association should be unsupported",
-            () -> map.computeIfAbsent(nonPresentKey, k -> randomAlphaOfLength(16)));
+            () -> map.computeIfAbsent(nonPresentKey, k -> randomAlphaOfLength(16))
+        );
         assertUnsupported("map merge should be unsupported", () -> map.merge(nonPresentKey, randomAlphaOfLength(16), (k, v) -> v));
         if (map.isEmpty()) {
             return;
@@ -275,29 +371,31 @@ public class MapsTests extends ESTestCase {
         assertUnsupported("clearing map should be unsupported", map::clear);
         assertUnsupported("replacing a map entry should be unsupported", () -> map.replace(presentKey, valueNotAssociatedWithPresentKey));
         assertUnsupported(
-                "replacing a map entry should be unsupported",
-                () -> map.replace(presentKey, map.get(presentKey), valueNotAssociatedWithPresentKey));
+            "replacing a map entry should be unsupported",
+            () -> map.replace(presentKey, map.get(presentKey), valueNotAssociatedWithPresentKey)
+        );
         assertUnsupported("replacing map entries should be unsupported", () -> map.replaceAll((k, v) -> v + v));
         assertUnsupported("removing a map entry should be unsupported", () -> map.remove(presentKey));
         assertUnsupported("removing a map entry should be unsupported", () -> map.remove(presentKey, map.get(presentKey)));
         assertUnsupported(
-                "computing a new map association should be unsupported",
-                () -> map.compute(presentKey, (k, v) -> randomBoolean() ? null : v + v));
+            "computing a new map association should be unsupported",
+            () -> map.compute(presentKey, (k, v) -> randomBoolean() ? null : v + v)
+        );
         assertUnsupported(
-                "computing a new map association should be unsupported",
-                () -> map.computeIfPresent(presentKey, (k, v) -> randomBoolean() ? null : v + v));
+            "computing a new map association should be unsupported",
+            () -> map.computeIfPresent(presentKey, (k, v) -> randomBoolean() ? null : v + v)
+        );
         assertUnsupported(
-                "map merge should be unsupported",
-                () -> map.merge(presentKey, map.get(presentKey), (k, v) -> randomBoolean() ? null : v + v));
+            "map merge should be unsupported",
+            () -> map.merge(presentKey, map.get(presentKey), (k, v) -> randomBoolean() ? null : v + v)
+        );
     }
 
     private void assertUnsupported(final String message, final ThrowingRunnable runnable) {
         expectThrows(UnsupportedOperationException.class, message, runnable);
     }
 
-    private void assertMapEntriesAndImmutability(
-            final Map<String, String> map,
-            final Collection<Map.Entry<String, String>> entries) {
+    private void assertMapEntriesAndImmutability(final Map<String, String> map, final Collection<Map.Entry<String, String>> entries) {
         assertMapEntries(map, entries);
         assertMapImmutability(map);
     }
