@@ -1,28 +1,30 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 
 package org.elasticsearch.index.mapper;
 
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.common.xcontent.XContentType;
-import org.elasticsearch.script.LongFieldScript;
+import org.elasticsearch.index.fielddata.FieldDataContext;
 import org.elasticsearch.script.CompositeFieldScript;
+import org.elasticsearch.script.LongFieldScript;
 import org.elasticsearch.script.Script;
 import org.elasticsearch.script.ScriptContext;
 import org.elasticsearch.search.lookup.LeafSearchLookup;
 import org.elasticsearch.search.lookup.SearchLookup;
+import org.elasticsearch.search.lookup.SourceProvider;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentType;
 
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.containsString;
 
@@ -32,12 +34,13 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
     @SuppressWarnings("unchecked")
     protected <T> T compileScript(Script script, ScriptContext<T> context) {
         if (context == CompositeFieldScript.CONTEXT) {
-            return (T) (CompositeFieldScript.Factory) (fieldName, params, searchLookup) -> ctx -> new CompositeFieldScript(
+            return (T) (CompositeFieldScript.Factory) (fieldName, params, searchLookup, onScriptError) -> ctx -> new CompositeFieldScript(
                 fieldName,
                 params,
                 searchLookup,
+                OnScriptError.FAIL,
                 ctx
-            ){
+            ) {
                 @Override
                 public void execute() {
                     if (script.getIdOrCode().equals("split-str-long")) {
@@ -51,7 +54,13 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
             };
         }
         if (context == LongFieldScript.CONTEXT) {
-            return (T) (LongFieldScript.Factory) (field, params, lookup) -> ctx -> new LongFieldScript(field, params, lookup, ctx) {
+            return (T) (LongFieldScript.Factory) (field, params, lookup, onScriptError) -> ctx -> new LongFieldScript(
+                field,
+                params,
+                lookup,
+                OnScriptError.FAIL,
+                ctx
+            ) {
                 @Override
                 public void execute() {
 
@@ -108,19 +117,19 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
 
         RuntimeField rf = mapperService.mappingLookup().getMapping().getRoot().getRuntimeField("obj");
         assertEquals("obj", rf.name());
-        Collection<MappedFieldType> mappedFieldTypes = rf.asMappedFieldTypes().collect(Collectors.toList());
+        Collection<MappedFieldType> mappedFieldTypes = rf.asMappedFieldTypes().toList();
         for (MappedFieldType mappedFieldType : mappedFieldTypes) {
             if (mappedFieldType.name().equals("obj.long-subfield")) {
                 assertSame(longSubfield, mappedFieldType);
             } else if (mappedFieldType.name().equals("obj.str-subfield")) {
                 assertSame(strSubfield, mappedFieldType);
-            }  else if (mappedFieldType.name().equals("obj.double-subfield")) {
+            } else if (mappedFieldType.name().equals("obj.double-subfield")) {
                 assertSame(doubleSubfield, mappedFieldType);
-            }  else if (mappedFieldType.name().equals("obj.boolean-subfield")) {
+            } else if (mappedFieldType.name().equals("obj.boolean-subfield")) {
                 assertSame(booleanSubfield, mappedFieldType);
-            }  else if (mappedFieldType.name().equals("obj.ip-subfield")) {
+            } else if (mappedFieldType.name().equals("obj.ip-subfield")) {
                 assertSame(ipSubfield, mappedFieldType);
-            }  else if (mappedFieldType.name().equals("obj.geopoint-subfield")) {
+            } else if (mappedFieldType.name().equals("obj.geopoint-subfield")) {
                 assertSame(geoPointSubfield, mappedFieldType);
             } else {
                 fail("unexpected subfield [" + mappedFieldType.name() + "]");
@@ -154,12 +163,12 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
             b.endObject();
             b.endObject();
         }));
-        assertEquals("{\"_doc\":{\"runtime\":{" +
-            "\"message\":{\"type\":\"composite\"," +
-            "\"meta\":{\"test-meta\":\"value\"}," +
-            "\"script\":{\"source\":\"dummy\",\"lang\":\"painless\"}," +
-            "\"fields\":{\"response\":{\"type\":\"long\"}}}}}}",
-            Strings.toString(mapperService.mappingLookup().getMapping()));
+        assertEquals(
+            """
+                {"_doc":{"runtime":{"message":{"type":"composite","meta":{"test-meta":"value"},\
+                "script":{"source":"dummy","lang":"painless"},"fields":{"response":{"type":"long"}}}}}}""",
+            Strings.toString(mapperService.mappingLookup().getMapping())
+        );
     }
 
     public void testScriptOnSubFieldThrowsError() {
@@ -264,13 +273,13 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
         RuntimeField rf = mapperService.mappingLookup().getMapping().getRoot().getRuntimeField("obj");
         assertEquals("obj", rf.name());
 
-        Collection<MappedFieldType> mappedFieldTypes = rf.asMappedFieldTypes().collect(Collectors.toList());
+        Collection<MappedFieldType> mappedFieldTypes = rf.asMappedFieldTypes().toList();
         assertEquals(1, mappedFieldTypes.size());
         assertSame(doubleSubField, mappedFieldTypes.iterator().next());
 
-        assertEquals("{\"obj\":{\"type\":\"composite\"," +
-            "\"script\":{\"source\":\"dummy2\",\"lang\":\"painless\"}," +
-            "\"fields\":{\"double-subfield\":{\"type\":\"double\"}}}}", Strings.toString(rf));
+        assertEquals("""
+            {"obj":{"type":"composite","script":{"source":"dummy2","lang":"painless"},\
+            "fields":{"double-subfield":{"type":"double"}}}}""", Strings.toString(rf));
     }
 
     public void testFieldDefinedTwiceWithSameName() throws IOException {
@@ -334,7 +343,10 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
         withLuceneIndex(mapperService, iw -> iw.addDocuments(Arrays.asList(doc1.rootDoc(), doc2.rootDoc())), reader -> {
             SearchLookup searchLookup = new SearchLookup(
                 mapperService::fieldType,
-                (mft, lookupSupplier) -> mft.fielddataBuilder("test", lookupSupplier).build(null, null)
+                (mft, lookupSupplier, fdo) -> mft.fielddataBuilder(
+                    new FieldDataContext("test", null, lookupSupplier, mapperService.mappingLookup()::sourcePaths, fdo)
+                ).build(null, null),
+                SourceProvider.fromLookup(mapperService.mappingLookup(), null, mapperService.getMapperMetrics().sourceFieldMetrics())
             );
 
             LeafSearchLookup leafSearchLookup = searchLookup.getLeafSearchLookup(reader.leaves().get(0));
@@ -396,7 +408,7 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
         assertNotNull(mapperService.mappingLookup().getFieldType("obj.str"));
     }
 
-    public void testParseDocumentSubfieldsOutsideRuntimeObject() throws IOException{
+    public void testParseDocumentSubfieldsOutsideRuntimeObject() throws IOException {
         MapperService mapperService = createMapperService(topMapping(b -> {
             b.startObject("runtime");
             b.startObject("obj");
@@ -413,8 +425,8 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
         assertNull(doc1.rootDoc().get("obj.long"));
         assertNotNull(doc1.rootDoc().get("obj.bool"));
 
-        assertEquals("{\"_doc\":{\"properties\":{\"obj\":{\"properties\":{\"bool\":{\"type\":\"boolean\"}}}}}}",
-            Strings.toString(doc1.dynamicMappingsUpdate()));
+        assertEquals("""
+            {"_doc":{"properties":{"obj":{"properties":{"bool":{"type":"boolean"}}}}}}""", Strings.toString(doc1.dynamicMappingsUpdate()));
 
         MapperService mapperService2 = createMapperService(topMapping(b -> {
             b.field("dynamic", "runtime");
@@ -432,7 +444,7 @@ public class CompositeRuntimeFieldTests extends MapperServiceTestCase {
         ParsedDocument doc2 = mapperService2.documentMapper().parse(source(b -> b.field("obj.long", 1L).field("obj.bool", true)));
         assertNull(doc2.rootDoc().get("obj.long"));
         assertNull(doc2.rootDoc().get("obj.bool"));
-        assertEquals("{\"_doc\":{\"dynamic\":\"runtime\",\"runtime\":{\"obj.bool\":{\"type\":\"boolean\"}}}}",
-            Strings.toString(doc2.dynamicMappingsUpdate()));
+        assertEquals("""
+            {"_doc":{"dynamic":"runtime","runtime":{"obj.bool":{"type":"boolean"}}}}""", Strings.toString(doc2.dynamicMappingsUpdate()));
     }
 }
