@@ -1,46 +1,61 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 package org.elasticsearch.indices;
 
 import org.apache.lucene.search.similarities.BM25Similarity;
 import org.apache.lucene.search.similarities.Similarity;
 import org.apache.lucene.store.AlreadyClosedException;
-import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.admin.indices.stats.CommonStatsFlags;
 import org.elasticsearch.action.admin.indices.stats.IndexShardStats;
+import org.elasticsearch.action.support.ActionTestUtils;
 import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.ProjectState;
 import org.elasticsearch.cluster.metadata.AliasMetadata;
-import org.elasticsearch.cluster.metadata.DataStream;
+import org.elasticsearch.cluster.metadata.DataStreamTestHelper;
 import org.elasticsearch.cluster.metadata.IndexGraveyard;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
+import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver.ResolvedExpression;
 import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.ProjectId;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.UUIDs;
+import org.elasticsearch.common.io.FileSystemUtils;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.util.concurrent.EsExecutors;
+import org.elasticsearch.core.FixForMultiProject;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.env.NodeEnvironment;
 import org.elasticsearch.env.ShardLockObtainFailedException;
 import org.elasticsearch.gateway.GatewayMetaState;
 import org.elasticsearch.gateway.LocalAllocateDangledIndices;
-import org.elasticsearch.gateway.MetaStateService;
+import org.elasticsearch.gateway.MetaStateWriterUtils;
+import org.elasticsearch.health.node.selection.HealthNodeTaskExecutor;
+import org.elasticsearch.index.ActionLoggingFields;
+import org.elasticsearch.index.ActionLoggingFieldsContext;
+import org.elasticsearch.index.ActionLoggingFieldsProvider;
 import org.elasticsearch.index.Index;
 import org.elasticsearch.index.IndexModule;
 import org.elasticsearch.index.IndexService;
 import org.elasticsearch.index.IndexSettings;
+import org.elasticsearch.index.IndexVersion;
+import org.elasticsearch.index.IndexVersions;
 import org.elasticsearch.index.engine.Engine;
 import org.elasticsearch.index.engine.EngineConfig;
 import org.elasticsearch.index.engine.EngineFactory;
 import org.elasticsearch.index.engine.InternalEngine;
 import org.elasticsearch.index.engine.InternalEngineFactory;
+import org.elasticsearch.index.mapper.DocumentMapper;
 import org.elasticsearch.index.mapper.KeywordFieldMapper;
 import org.elasticsearch.index.mapper.Mapper;
 import org.elasticsearch.index.mapper.MapperService;
@@ -53,16 +68,15 @@ import org.elasticsearch.index.shard.ShardId;
 import org.elasticsearch.index.shard.ShardPath;
 import org.elasticsearch.index.similarity.NonNegativeScoresSimilarity;
 import org.elasticsearch.indices.IndicesService.ShardDeletionCheckResult;
+import org.elasticsearch.indices.cluster.IndexRemovalReason;
 import org.elasticsearch.plugins.EnginePlugin;
 import org.elasticsearch.plugins.MapperPlugin;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.search.internal.AliasFilter;
 import org.elasticsearch.test.ESSingleNodeTestCase;
 import org.elasticsearch.test.IndexSettingsModule;
-import org.elasticsearch.test.hamcrest.RegexMatcher;
 
 import java.io.IOException;
-import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -77,7 +91,7 @@ import java.util.stream.Stream;
 
 import static org.elasticsearch.action.support.WriteRequest.RefreshPolicy.IMMEDIATE;
 import static org.elasticsearch.cluster.metadata.DataStreamTestHelper.createBackingIndex;
-import static org.elasticsearch.cluster.metadata.DataStreamTestHelper.createTimestampField;
+import static org.elasticsearch.cluster.metadata.IndexMetadata.SETTING_INDEX_UUID;
 import static org.elasticsearch.cluster.metadata.IndexNameExpressionResolverTests.indexBuilder;
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertAcked;
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertHitCount;
@@ -89,8 +103,12 @@ import static org.hamcrest.Matchers.emptyArray;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasToString;
 import static org.hamcrest.Matchers.instanceOf;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.matchesRegex;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.nullValue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -106,10 +124,8 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
 
     @Override
     protected Collection<Class<? extends Plugin>> getPlugins() {
-        return Stream.concat(
-                super.getPlugins().stream(),
-                Stream.of(TestPlugin.class, FooEnginePlugin.class, BarEnginePlugin.class))
-                .collect(Collectors.toList());
+        return Stream.concat(super.getPlugins().stream(), Stream.of(TestPlugin.class, FooEnginePlugin.class, BarEnginePlugin.class))
+            .toList();
     }
 
     public static class FooEnginePlugin extends Plugin implements EnginePlugin {
@@ -123,8 +139,11 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
 
         }
 
-        private static final Setting<Boolean> FOO_INDEX_SETTING =
-                Setting.boolSetting("index.foo_index", false, Setting.Property.IndexScope);
+        private static final Setting<Boolean> FOO_INDEX_SETTING = Setting.boolSetting(
+            "index.foo_index",
+            false,
+            Setting.Property.IndexScope
+        );
 
         @Override
         public List<Setting<?>> getSettings() {
@@ -153,8 +172,11 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
 
         }
 
-        private static final Setting<Boolean> BAR_INDEX_SETTING =
-                Setting.boolSetting("index.bar_index", false, Setting.Property.IndexScope);
+        private static final Setting<Boolean> BAR_INDEX_SETTING = Setting.boolSetting(
+            "index.bar_index",
+            false,
+            Setting.Property.IndexScope
+        );
 
         @Override
         public List<Setting<?>> getSettings() {
@@ -184,8 +206,44 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         @Override
         public void onIndexModule(IndexModule indexModule) {
             super.onIndexModule(indexModule);
-            indexModule.addSimilarity("fake-similarity",
-                    (settings, indexCreatedVersion, scriptService) -> new BM25Similarity());
+            indexModule.addSimilarity("fake-similarity", (settings, indexCreatedVersion, scriptService) -> new BM25Similarity());
+        }
+    }
+
+    public static class TestActionActionLoggingFieldsProvider implements ActionLoggingFieldsProvider {
+        private static Map<String, String> fields = Map.of();
+
+        static void setFields(Map<String, String> fields) {
+            TestActionActionLoggingFieldsProvider.fields = fields;
+        }
+
+        @Override
+        public ActionLoggingFields create(ActionLoggingFieldsContext context) {
+            return new ActionLoggingFields(context) {
+                @Override
+                public Map<String, String> logFields() {
+                    return fields;
+                }
+            };
+        }
+    }
+
+    public static class TestAnotherActionActionLoggingFieldsProvider implements ActionLoggingFieldsProvider {
+
+        private static Map<String, String> fields = Map.of();
+
+        static void setFields(Map<String, String> fields) {
+            TestAnotherActionActionLoggingFieldsProvider.fields = fields;
+        }
+
+        @Override
+        public ActionLoggingFields create(ActionLoggingFieldsContext context) {
+            return new ActionLoggingFields(context) {
+                @Override
+                public Map<String, String> logFields() {
+                    return fields;
+                }
+            };
         }
     }
 
@@ -194,62 +252,92 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         return true;
     }
 
+    @Override
+    protected Settings nodeSettings() {
+        // Disable the health node selection so the task assignment does not interfere with the cluster state during the test
+        return Settings.builder().put(HealthNodeTaskExecutor.ENABLED_SETTING.getKey(), false).build();
+    }
+
     public void testCanDeleteShardContent() {
         IndicesService indicesService = getIndicesService();
-        IndexMetadata meta = IndexMetadata.builder("test").settings(settings(Version.CURRENT)).numberOfShards(1).numberOfReplicas(
-                1).build();
+        IndexMetadata meta = IndexMetadata.builder("test")
+            .settings(settings(IndexVersion.current()))
+            .numberOfShards(1)
+            .numberOfReplicas(1)
+            .build();
         IndexSettings indexSettings = IndexSettingsModule.newIndexSettings("test", meta.getSettings());
         ShardId shardId = new ShardId(meta.getIndex(), 0);
-        assertEquals("no shard location", indicesService.canDeleteShardContent(shardId, indexSettings),
-            ShardDeletionCheckResult.NO_FOLDER_FOUND);
+        assertEquals(
+            "no shard location",
+            indicesService.canDeleteShardContent(shardId, indexSettings),
+            ShardDeletionCheckResult.NO_FOLDER_FOUND
+        );
         IndexService test = createIndex("test");
         shardId = new ShardId(test.index(), 0);
         assertTrue(test.hasShard(0));
-        assertEquals("shard is allocated", indicesService.canDeleteShardContent(shardId, test.getIndexSettings()),
-            ShardDeletionCheckResult.STILL_ALLOCATED);
-        test.removeShard(0, "boom");
-        assertEquals("shard is removed", indicesService.canDeleteShardContent(shardId, test.getIndexSettings()),
-            ShardDeletionCheckResult.FOLDER_FOUND_CAN_DELETE);
+        assertEquals(
+            "shard is allocated",
+            indicesService.canDeleteShardContent(shardId, test.getIndexSettings()),
+            ShardDeletionCheckResult.STILL_ALLOCATED
+        );
+        test.removeShard(0, "boom", EsExecutors.DIRECT_EXECUTOR_SERVICE, ActionTestUtils.assertNoFailureListener(v -> {}));
+        assertEquals(
+            "shard is removed",
+            indicesService.canDeleteShardContent(shardId, test.getIndexSettings()),
+            ShardDeletionCheckResult.FOLDER_FOUND_CAN_DELETE
+        );
         ShardId notAllocated = new ShardId(test.index(), 100);
-        assertEquals("shard that was never on this node should NOT be deletable",
-            indicesService.canDeleteShardContent(notAllocated, test.getIndexSettings()), ShardDeletionCheckResult.NO_FOLDER_FOUND);
+        assertEquals(
+            "shard that was never on this node should NOT be deletable",
+            indicesService.canDeleteShardContent(notAllocated, test.getIndexSettings()),
+            ShardDeletionCheckResult.NO_FOLDER_FOUND
+        );
     }
 
     public void testDeleteIndexStore() throws Exception {
         IndicesService indicesService = getIndicesService();
         IndexService test = createIndex("test");
         ClusterService clusterService = getInstanceFromNode(ClusterService.class);
-        IndexMetadata firstMetadata = clusterService.state().metadata().index("test");
+        IndexMetadata firstMetadata = clusterService.state().metadata().getProject().index("test");
         assertTrue(test.hasShard(0));
-        ShardPath firstPath = ShardPath.loadShardPath(logger, getNodeEnvironment(), new ShardId(test.index(), 0),
-            test.getIndexSettings().customDataPath());
+        ShardPath firstPath = ShardPath.loadShardPath(
+            logger,
+            getNodeEnvironment(),
+            new ShardId(test.index(), 0),
+            test.getIndexSettings().customDataPath()
+        );
 
-        expectThrows(IllegalStateException.class, () -> indicesService.deleteIndexStore("boom", firstMetadata));
+        expectThrows(IllegalStateException.class, () -> indicesService.deleteIndexStore("boom", firstMetadata, randomReason()));
         assertTrue(firstPath.exists());
 
         GatewayMetaState gwMetaState = getInstanceFromNode(GatewayMetaState.class);
         Metadata meta = gwMetaState.getMetadata();
         assertNotNull(meta);
-        assertNotNull(meta.index("test"));
+        assertNotNull(meta.getProject().index("test"));
         assertAcked(client().admin().indices().prepareDelete("test"));
+        awaitIndexShardCloseAsyncTasks();
 
         assertFalse(firstPath.exists());
 
         meta = gwMetaState.getMetadata();
         assertNotNull(meta);
-        assertNull(meta.index("test"));
+        assertNull(meta.getProject().index("test"));
 
         test = createIndex("test");
-        client().prepareIndex("test").setId("1").setSource("field", "value").setRefreshPolicy(IMMEDIATE).get();
+        prepareIndex("test").setId("1").setSource("field", "value").setRefreshPolicy(IMMEDIATE).get();
         client().admin().indices().prepareFlush("test").get();
-        assertHitCount(client().prepareSearch("test").get(), 1);
-        IndexMetadata secondMetadata = clusterService.state().metadata().index("test");
+        assertHitCount(client().prepareSearch("test"), 1);
+        IndexMetadata secondMetadata = clusterService.state().metadata().getProject().index("test");
         assertAcked(client().admin().indices().prepareClose("test"));
-        ShardPath secondPath = ShardPath.loadShardPath(logger, getNodeEnvironment(), new ShardId(test.index(), 0),
-            test.getIndexSettings().customDataPath());
+        ShardPath secondPath = ShardPath.loadShardPath(
+            logger,
+            getNodeEnvironment(),
+            new ShardId(test.index(), 0),
+            test.getIndexSettings().customDataPath()
+        );
         assertTrue(secondPath.exists());
 
-        expectThrows(IllegalStateException.class, () -> indicesService.deleteIndexStore("boom", secondMetadata));
+        expectThrows(IllegalStateException.class, () -> indicesService.deleteIndexStore("boom", secondMetadata, randomReason()));
         assertTrue(secondPath.exists());
 
         assertAcked(client().admin().indices().prepareOpen("test"));
@@ -266,23 +354,27 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         assertTrue(indexShard.routingEntry().started());
 
         final ShardPath shardPath = indexShard.shardPath();
-        assertEquals(ShardPath.loadShardPath(logger, getNodeEnvironment(), indexShard.shardId(), indexSettings.customDataPath()),
-            shardPath);
+        assertEquals(
+            ShardPath.loadShardPath(logger, getNodeEnvironment(), indexShard.shardId(), indexSettings.customDataPath()),
+            shardPath
+        );
 
         final IndicesService indicesService = getIndicesService();
-        expectThrows(ShardLockObtainFailedException.class, () ->
-            indicesService.processPendingDeletes(index, indexSettings, TimeValue.timeValueMillis(0)));
+        expectThrows(
+            ShardLockObtainFailedException.class,
+            () -> indicesService.processPendingDeletes(index, indexSettings, TimeValue.timeValueMillis(0))
+        );
         assertTrue(shardPath.exists());
 
         int numPending = 1;
         if (randomBoolean()) {
-            indicesService.addPendingDelete(indexShard.shardId(), indexSettings);
+            indicesService.addPendingDelete(indexShard.shardId(), indexSettings, randomReason());
         } else {
             if (randomBoolean()) {
                 numPending++;
-                indicesService.addPendingDelete(indexShard.shardId(), indexSettings);
+                indicesService.addPendingDelete(indexShard.shardId(), indexSettings, randomReason());
             }
-            indicesService.addPendingDelete(index, indexSettings);
+            indicesService.addPendingDelete(index, indexSettings, randomReason());
         }
 
         assertAcked(client().admin().indices().prepareClose("test"));
@@ -292,17 +384,19 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         assertEquals(indicesService.numPendingDeletes(index), numPending);
         assertTrue(indicesService.hasUncompletedPendingDeletes());
 
-        expectThrows(ShardLockObtainFailedException.class, () ->
-            indicesService.processPendingDeletes(index, indexSettings, TimeValue.timeValueMillis(0)));
+        expectThrows(
+            ShardLockObtainFailedException.class,
+            () -> indicesService.processPendingDeletes(index, indexSettings, TimeValue.timeValueMillis(0))
+        );
 
         assertEquals(indicesService.numPendingDeletes(index), numPending);
         assertTrue(indicesService.hasUncompletedPendingDeletes());
 
         final boolean hasBogus = randomBoolean();
         if (hasBogus) {
-            indicesService.addPendingDelete(new ShardId(index, 0), indexSettings);
-            indicesService.addPendingDelete(new ShardId(index, 1), indexSettings);
-            indicesService.addPendingDelete(new ShardId("bogus", "_na_", 1), indexSettings);
+            indicesService.addPendingDelete(new ShardId(index, 0), indexSettings, randomReason());
+            indicesService.addPendingDelete(new ShardId(index, 1), indexSettings, randomReason());
+            indicesService.addPendingDelete(new ShardId("bogus", "_na_", 1), indexSettings, randomReason());
             assertEquals(indicesService.numPendingDeletes(index), numPending + 2);
             assertTrue(indicesService.hasUncompletedPendingDeletes());
         }
@@ -326,18 +420,18 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         final Index index = new Index("test", UUIDs.randomBase64UUID());
         final IndicesService indicesService = getIndicesService();
         final NodeEnvironment nodeEnv = getNodeEnvironment();
-        final MetaStateService metaStateService = getInstanceFromNode(MetaStateService.class);
 
         final ClusterService clusterService = getInstanceFromNode(ClusterService.class);
-        final Settings idxSettings = Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                                                        .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID())
-                                                        .build();
-        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName())
-                                                             .settings(idxSettings)
-                                                             .numberOfShards(1)
-                                                             .numberOfReplicas(0)
-                                                             .build();
-        metaStateService.writeIndex("test index being created", indexMetadata);
+        final Settings idxSettings = Settings.builder()
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
+            .put(SETTING_INDEX_UUID, index.getUUID())
+            .build();
+        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName()).settings(idxSettings)
+            .numberOfShards(1)
+            .numberOfReplicas(0)
+            .build();
+
+        MetaStateWriterUtils.writeIndex(nodeEnv, "test index being created", indexMetadata);
         final Metadata metadata = Metadata.builder(clusterService.state().metadata()).put(indexMetadata, true).build();
         final ClusterState csWithIndex = new ClusterState.Builder(clusterService.state()).metadata(metadata).build();
         try {
@@ -347,11 +441,11 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
             assertThat(e.getMessage(), containsString("Cannot delete index"));
         }
 
-        final ClusterState withoutIndex = new ClusterState.Builder(csWithIndex)
-                                                          .metadata(Metadata.builder(csWithIndex.metadata()).remove(index.getName()))
-                                                          .build();
+        final ClusterState withoutIndex = new ClusterState.Builder(csWithIndex).metadata(
+            Metadata.builder(csWithIndex.metadata()).remove(index.getName())
+        ).build();
         indicesService.verifyIndexIsDeleted(index, withoutIndex);
-        assertFalse("index files should be deleted", Files.exists(nodeEnv.indexPath(index)));
+        assertFalse("index files should be deleted", FileSystemUtils.exists(nodeEnv.indexPaths(index)));
     }
 
     public void testDanglingIndicesWithAliasConflict() throws Exception {
@@ -361,33 +455,33 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         createIndex(indexName);
 
         // create the alias for the index
-        client().admin().indices().prepareAliases().addAlias(indexName, alias).get();
+        client().admin().indices().prepareAliases(TEST_REQUEST_TIMEOUT, TEST_REQUEST_TIMEOUT).addAlias(indexName, alias).get();
         final ClusterState originalState = clusterService.state();
 
         // try to import a dangling index with the same name as the alias, it should fail
         final LocalAllocateDangledIndices dangling = getInstanceFromNode(LocalAllocateDangledIndices.class);
-        final Settings idxSettings = Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                                                       .put(IndexMetadata.SETTING_INDEX_UUID, UUIDs.randomBase64UUID())
-                                                       .build();
-        final IndexMetadata indexMetadata = new IndexMetadata.Builder(alias)
-                                                             .settings(idxSettings)
-                                                             .numberOfShards(1)
-                                                             .numberOfReplicas(0)
-                                                             .build();
+        final Settings idxSettings = Settings.builder()
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
+            .put(SETTING_INDEX_UUID, UUIDs.randomBase64UUID())
+            .build();
+        final IndexMetadata indexMetadata = new IndexMetadata.Builder(alias).settings(idxSettings)
+            .numberOfShards(1)
+            .numberOfReplicas(0)
+            .build();
         CountDownLatch latch = new CountDownLatch(1);
-        dangling.allocateDangled(Arrays.asList(indexMetadata), ActionListener.wrap(latch::countDown));
+        dangling.allocateDangled(Arrays.asList(indexMetadata), ActionListener.running(latch::countDown));
         latch.await();
         assertThat(clusterService.state(), equalTo(originalState));
 
         // remove the alias
-        client().admin().indices().prepareAliases().removeAlias(indexName, alias).get();
+        client().admin().indices().prepareAliases(TEST_REQUEST_TIMEOUT, TEST_REQUEST_TIMEOUT).removeAlias(indexName, alias).get();
 
         // now try importing a dangling index with the same name as the alias, it should succeed.
         latch = new CountDownLatch(1);
-        dangling.allocateDangled(Arrays.asList(indexMetadata), ActionListener.wrap(latch::countDown));
+        dangling.allocateDangled(Arrays.asList(indexMetadata), ActionListener.running(latch::countDown));
         latch.await();
         assertThat(clusterService.state(), not(originalState));
-        assertNotNull(clusterService.state().getMetadata().index(alias));
+        assertNotNull(clusterService.state().getMetadata().getProject().index(alias));
     }
 
     public void testDanglingIndicesWithLaterVersion() throws Exception {
@@ -395,19 +489,18 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         final ClusterService clusterService = getInstanceFromNode(ClusterService.class);
         final ClusterState originalState = clusterService.state();
 
-        //import an index with minor version incremented by one over cluster master version, it should be ignored
+        // import an index with minor version incremented by one over cluster master version, it should be ignored
         final LocalAllocateDangledIndices dangling = getInstanceFromNode(LocalAllocateDangledIndices.class);
-        final Settings idxSettingsLater = Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED,
-                                                                Version.fromId(Version.CURRENT.id + 10000))
-                                                            .put(IndexMetadata.SETTING_INDEX_UUID, UUIDs.randomBase64UUID())
-                                                            .build();
-        final IndexMetadata indexMetadataLater = new IndexMetadata.Builder(indexNameLater)
-                                                             .settings(idxSettingsLater)
-                                                             .numberOfShards(1)
-                                                             .numberOfReplicas(0)
-                                                             .build();
+        final Settings idxSettingsLater = Settings.builder()
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.fromId(IndexVersion.current().id() + 10000))
+            .put(SETTING_INDEX_UUID, UUIDs.randomBase64UUID())
+            .build();
+        final IndexMetadata indexMetadataLater = new IndexMetadata.Builder(indexNameLater).settings(idxSettingsLater)
+            .numberOfShards(1)
+            .numberOfReplicas(0)
+            .build();
         CountDownLatch latch = new CountDownLatch(1);
-        dangling.allocateDangled(Arrays.asList(indexMetadataLater), ActionListener.wrap(latch::countDown));
+        dangling.allocateDangled(Arrays.asList(indexMetadataLater), ActionListener.running(latch::countDown));
         latch.await();
         assertThat(clusterService.state(), equalTo(originalState));
     }
@@ -426,40 +519,41 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         final String indexName = "test";
         final Index index = new Index(indexName, UUIDs.randomBase64UUID());
         final IndicesService indicesService = getIndicesService();
-        final Settings idxSettings = Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                                         .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID())
-                                         .build();
-        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName())
-                                                .settings(idxSettings)
-                                                .numberOfShards(1)
-                                                .numberOfReplicas(0)
-                                                .build();
+        final Settings idxSettings = Settings.builder()
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
+            .put(SETTING_INDEX_UUID, index.getUUID())
+            .build();
+        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName()).settings(idxSettings)
+            .numberOfShards(1)
+            .numberOfReplicas(0)
+            .build();
         final Index tombstonedIndex = new Index(indexName, UUIDs.randomBase64UUID());
         final IndexGraveyard graveyard = IndexGraveyard.builder().addTombstone(tombstonedIndex).build();
-        final Metadata metadata = Metadata.builder().put(indexMetadata, true).indexGraveyard(graveyard).build();
-        final ClusterState clusterState = new ClusterState.Builder(new ClusterName("testCluster")).metadata(metadata).build();
+        @FixForMultiProject // Use random project-id
+        final var project = ProjectMetadata.builder(ProjectId.DEFAULT).put(indexMetadata, true).indexGraveyard(graveyard).build();
+        final ClusterState clusterState = new ClusterState.Builder(new ClusterName("testCluster")).putProjectMetadata(project).build();
         // if all goes well, this won't throw an exception, otherwise, it will throw an IllegalStateException
         indicesService.verifyIndexIsDeleted(tombstonedIndex, clusterState);
     }
 
     /**
-     * Tests that teh {@link MapperService} created by {@link IndicesService#createIndexMapperService(IndexMetadata)} contains
+     * Tests that teh {@link MapperService} created by {@link IndicesService#createIndexMapperServiceForValidation(IndexMetadata)} contains
      * custom types and similarities registered by plugins
      */
     public void testStandAloneMapperServiceWithPlugins() throws IOException {
         final String indexName = "test";
         final Index index = new Index(indexName, UUIDs.randomBase64UUID());
         final IndicesService indicesService = getIndicesService();
-        final Settings idxSettings = Settings.builder().put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-            .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID())
+        final Settings idxSettings = Settings.builder()
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
+            .put(SETTING_INDEX_UUID, index.getUUID())
             .put(IndexModule.SIMILARITY_SETTINGS_PREFIX + ".test.type", "fake-similarity")
             .build();
-        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName())
-            .settings(idxSettings)
+        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName()).settings(idxSettings)
             .numberOfShards(1)
             .numberOfReplicas(0)
             .build();
-        MapperService mapperService = indicesService.createIndexMapperService(indexMetadata);
+        MapperService mapperService = indicesService.createIndexMapperServiceForValidation(indexMetadata);
         assertNotNull(mapperService.parserContext().typeParser("fake-mapper"));
         Similarity sim = mapperService.parserContext().getSimilarity("test").get();
         assertThat(sim, instanceOf(NonNegativeScoresSimilarity.class));
@@ -481,8 +575,10 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         final IndexShardState state = randomFrom(IndexShardState.values());
         final String message = "TEST - expected";
 
-        final RuntimeException expectedException =
-                randomFrom(new IllegalIndexShardStateException(shardId, state, message), new AlreadyClosedException(message));
+        final RuntimeException expectedException = randomFrom(
+            new IllegalIndexShardStateException(shardId, state, message),
+            new AlreadyClosedException(message)
+        );
 
         // this allows us to control the indices that exist
         final IndicesService mockIndicesService = mock(IndicesService.class);
@@ -499,20 +595,24 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
 
                 shardStats.add(successfulShardStats);
 
-                when(mockIndicesService.indexShardStats(mockIndicesService, shard, CommonStatsFlags.ALL)).thenReturn(successfulShardStats);
+                when(mockIndicesService.indexShardStats(eq(mockIndicesService), eq(shard), eq(CommonStatsFlags.ALL), any())).thenReturn(
+                    successfulShardStats
+                );
             } else {
-                when(mockIndicesService.indexShardStats(mockIndicesService, shard, CommonStatsFlags.ALL)).thenThrow(expectedException);
+                when(mockIndicesService.indexShardStats(eq(mockIndicesService), eq(shard), eq(CommonStatsFlags.ALL), any())).thenThrow(
+                    expectedException
+                );
             }
         }
 
-        when(mockIndicesService.iterator()).thenReturn(Collections.singleton(indexService).iterator());
-        when(indexService.iterator()).thenReturn(shards.iterator());
+        when(mockIndicesService.iterator()).thenAnswer(invocation -> Collections.singleton(indexService).iterator());
+        when(indexService.iterator()).thenAnswer(unused -> shards.iterator());
         when(indexService.index()).thenReturn(index);
 
         // real one, which has a logger defined
         final IndicesService indicesService = getIndicesService();
 
-        final Map<Index, List<IndexShardStats>> indexStats = indicesService.statsByShard(mockIndicesService, CommonStatsFlags.ALL);
+        final Map<Index, List<IndexShardStats>> indexStats = IndicesService.statsByShard(mockIndicesService, CommonStatsFlags.ALL);
 
         assertThat(indexStats.isEmpty(), equalTo(false));
         assertThat("index not defined", indexStats.containsKey(index), equalTo(true));
@@ -527,17 +627,16 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
             final String indexName = "foo-" + value;
             final Index index = new Index(indexName, UUIDs.randomBase64UUID());
             final Settings.Builder builder = Settings.builder()
-                    .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                    .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID());
+                .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
+                .put(SETTING_INDEX_UUID, index.getUUID());
             if (value != null) {
                 builder.put(FooEnginePlugin.FOO_INDEX_SETTING.getKey(), value);
             }
 
-            final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName())
-                    .settings(builder.build())
-                    .numberOfShards(1)
-                    .numberOfReplicas(0)
-                    .build();
+            final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName()).settings(builder.build())
+                .numberOfShards(1)
+                .numberOfReplicas(0)
+                .build();
             final IndexService indexService = indicesService.createIndex(indexMetadata, Collections.emptyList(), false);
             if (value != null && value) {
                 assertThat(indexService.getEngineFactory(), instanceOf(FooEnginePlugin.FooEngineFactory.class));
@@ -551,47 +650,70 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         final String indexName = "foobar";
         final Index index = new Index(indexName, UUIDs.randomBase64UUID());
         final Settings settings = Settings.builder()
-                .put(IndexMetadata.SETTING_VERSION_CREATED, Version.CURRENT)
-                .put(IndexMetadata.SETTING_INDEX_UUID, index.getUUID())
-                .put(FooEnginePlugin.FOO_INDEX_SETTING.getKey(), true)
-                .put(BarEnginePlugin.BAR_INDEX_SETTING.getKey(), true)
-                .build();
-        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName())
-                .settings(settings)
-                .numberOfShards(1)
-                .numberOfReplicas(0)
-                .build();
+            .put(IndexMetadata.SETTING_VERSION_CREATED, IndexVersion.current())
+            .put(SETTING_INDEX_UUID, index.getUUID())
+            .put(FooEnginePlugin.FOO_INDEX_SETTING.getKey(), true)
+            .put(BarEnginePlugin.BAR_INDEX_SETTING.getKey(), true)
+            .build();
+        final IndexMetadata indexMetadata = new IndexMetadata.Builder(index.getName()).settings(settings)
+            .numberOfShards(1)
+            .numberOfReplicas(0)
+            .build();
 
         final IndicesService indicesService = getIndicesService();
-        final IllegalStateException e =
-                expectThrows(IllegalStateException.class, () -> indicesService.createIndex(indexMetadata, Collections.emptyList(), false));
+        final IllegalStateException e = expectThrows(
+            IllegalStateException.class,
+            () -> indicesService.createIndex(indexMetadata, Collections.emptyList(), false)
+        );
         final String pattern =
-                ".*multiple engine factories provided for \\[foobar/.*\\]: \\[.*FooEngineFactory\\],\\[.*BarEngineFactory\\].*";
-        assertThat(e, hasToString(new RegexMatcher(pattern)));
+            ".*multiple engine factories provided for \\[foobar/.*\\]: \\[.*FooEngineFactory\\],\\[.*BarEngineFactory\\].*";
+        assertThat(e, hasToString(matchesRegex(pattern)));
     }
 
     public void testBuildAliasFilter() {
         var indicesService = getIndicesService();
-
-        Metadata.Builder mdBuilder = Metadata.builder()
-            .put(indexBuilder("test-0").state(IndexMetadata.State.OPEN)
-                .putAlias(AliasMetadata.builder("test-alias-0").filter(Strings.toString(QueryBuilders.termQuery("foo", "bar"))))
-                .putAlias(AliasMetadata.builder("test-alias-1").filter(Strings.toString(QueryBuilders.termQuery("foo", "baz"))))
-                .putAlias(AliasMetadata.builder("test-alias-non-filtering"))
+        final ProjectId projectId = randomProjectIdOrDefault();
+        final ProjectMetadata.Builder projBuilder = ProjectMetadata.builder(projectId)
+            .put(
+                indexBuilder("test-0").state(IndexMetadata.State.OPEN)
+                    .putAlias(AliasMetadata.builder("test-alias-0").filter(Strings.toString(QueryBuilders.termQuery("foo", "bar"))))
+                    .putAlias(AliasMetadata.builder("test-alias-1").filter(Strings.toString(QueryBuilders.termQuery("foo", "baz"))))
+                    .putAlias(AliasMetadata.builder("test-alias-non-filtering"))
+            )
+            .put(
+                indexBuilder("test-1").state(IndexMetadata.State.OPEN)
+                    .putAlias(AliasMetadata.builder("test-alias-0").filter(Strings.toString(QueryBuilders.termQuery("foo", "bar"))))
+                    .putAlias(AliasMetadata.builder("test-alias-1").filter(Strings.toString(QueryBuilders.termQuery("foo", "bax"))))
+                    .putAlias(AliasMetadata.builder("test-alias-non-filtering"))
             );
-        ClusterState state = ClusterState.builder(new ClusterName("_name")).metadata(mdBuilder).build();
+        final ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).putProjectMetadata(projBuilder).build();
+        final ProjectState projectState = clusterState.projectState(projectId);
         {
-            AliasFilter result = indicesService.buildAliasFilter(state, "test-0", Set.of("test-alias-0"));
+            AliasFilter result = indicesService.buildAliasFilter(projectState, "test-0", resolvedExpressions("test-alias-0"));
             assertThat(result.getAliases(), arrayContainingInAnyOrder("test-alias-0"));
             assertThat(result.getQueryBuilder(), equalTo(QueryBuilders.termQuery("foo", "bar")));
         }
         {
-            AliasFilter result = indicesService.buildAliasFilter(state, "test-0", Set.of("test-alias-1"));
+            AliasFilter result = indicesService.buildAliasFilter(projectState, "test-1", resolvedExpressions("test-alias-0"));
+            assertThat(result.getAliases(), arrayContainingInAnyOrder("test-alias-0"));
+            assertThat(result.getQueryBuilder(), equalTo(QueryBuilders.termQuery("foo", "bar")));
+        }
+        {
+            AliasFilter result = indicesService.buildAliasFilter(projectState, "test-0", resolvedExpressions("test-alias-1"));
             assertThat(result.getAliases(), arrayContainingInAnyOrder("test-alias-1"));
             assertThat(result.getQueryBuilder(), equalTo(QueryBuilders.termQuery("foo", "baz")));
         }
         {
-            AliasFilter result = indicesService.buildAliasFilter(state, "test-0", Set.of("test-alias-0", "test-alias-1"));
+            AliasFilter result = indicesService.buildAliasFilter(projectState, "test-1", resolvedExpressions("test-alias-1"));
+            assertThat(result.getAliases(), arrayContainingInAnyOrder("test-alias-1"));
+            assertThat(result.getQueryBuilder(), equalTo(QueryBuilders.termQuery("foo", "bax")));
+        }
+        {
+            AliasFilter result = indicesService.buildAliasFilter(
+                projectState,
+                "test-0",
+                resolvedExpressions("test-alias-0", "test-alias-1")
+            );
             assertThat(result.getAliases(), arrayContainingInAnyOrder("test-alias-0", "test-alias-1"));
             BoolQueryBuilder filter = (BoolQueryBuilder) result.getQueryBuilder();
             assertThat(filter.filter(), empty());
@@ -600,8 +722,33 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
             assertThat(filter.should(), containsInAnyOrder(QueryBuilders.termQuery("foo", "baz"), QueryBuilders.termQuery("foo", "bar")));
         }
         {
-            AliasFilter result =
-                indicesService.buildAliasFilter(state, "test-0", Set.of("test-alias-0", "test-alias-1", "test-alias-non-filtering"));
+            AliasFilter result = indicesService.buildAliasFilter(
+                projectState,
+                "test-1",
+                resolvedExpressions("test-alias-0", "test-alias-1")
+            );
+            assertThat(result.getAliases(), arrayContainingInAnyOrder("test-alias-0", "test-alias-1"));
+            BoolQueryBuilder filter = (BoolQueryBuilder) result.getQueryBuilder();
+            assertThat(filter.filter(), empty());
+            assertThat(filter.must(), empty());
+            assertThat(filter.mustNot(), empty());
+            assertThat(filter.should(), containsInAnyOrder(QueryBuilders.termQuery("foo", "bax"), QueryBuilders.termQuery("foo", "bar")));
+        }
+        {
+            AliasFilter result = indicesService.buildAliasFilter(
+                projectState,
+                "test-0",
+                resolvedExpressions("test-alias-0", "test-alias-1", "test-alias-non-filtering")
+            );
+            assertThat(result.getAliases(), emptyArray());
+            assertThat(result.getQueryBuilder(), nullValue());
+        }
+        {
+            AliasFilter result = indicesService.buildAliasFilter(
+                projectState,
+                "test-1",
+                resolvedExpressions("test-alias-0", "test-alias-1", "test-alias-non-filtering")
+            );
             assertThat(result.getAliases(), emptyArray());
             assertThat(result.getQueryBuilder(), nullValue());
         }
@@ -611,23 +758,37 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
         var indicesService = getIndicesService();
 
         final String dataStreamName1 = "logs-foobar";
+        final String dataStreamName2 = "logs-foobaz";
         IndexMetadata backingIndex1 = createBackingIndex(dataStreamName1, 1).build();
-        Metadata.Builder mdBuilder = Metadata.builder()
+        IndexMetadata backingIndex2 = createBackingIndex(dataStreamName2, 1).build();
+        final ProjectId projectId = randomProjectIdOrDefault();
+        final ProjectMetadata.Builder projBuilder = ProjectMetadata.builder(projectId)
             .put(backingIndex1, false)
-            .put(new DataStream(dataStreamName1, createTimestampField("@timestamp"), List.of(backingIndex1.getIndex())));
-        mdBuilder.put("logs_foo", dataStreamName1, null, Strings.toString(QueryBuilders.termQuery("foo", "bar")));
-        mdBuilder.put("logs", dataStreamName1, null, Strings.toString(QueryBuilders.termQuery("foo", "baz")));
-        mdBuilder.put("logs_bar", dataStreamName1, null, null);
-        ClusterState state = ClusterState.builder(new ClusterName("_name")).metadata(mdBuilder).build();
+            .put(backingIndex2, false)
+            .put(DataStreamTestHelper.newInstance(dataStreamName1, List.of(backingIndex1.getIndex())))
+            .put(DataStreamTestHelper.newInstance(dataStreamName2, List.of(backingIndex2.getIndex())));
+        projBuilder.put("logs_foo", dataStreamName1, null, Strings.toString(QueryBuilders.termQuery("foo", "bar")));
+        projBuilder.put("logs_foo", dataStreamName2, null, Strings.toString(QueryBuilders.termQuery("foo", "baz")));
+        projBuilder.put("logs", dataStreamName1, null, Strings.toString(QueryBuilders.termQuery("foo", "baz")));
+        projBuilder.put("logs", dataStreamName2, null, Strings.toString(QueryBuilders.termQuery("foo", "bax")));
+        projBuilder.put("logs_bar", dataStreamName1, null, null);
+        ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).putProjectMetadata(projBuilder).build();
+        ProjectState projectState = clusterState.projectState(projectId);
         {
             String index = backingIndex1.getIndex().getName();
-            AliasFilter result = indicesService.buildAliasFilter(state, index, Set.of("logs_foo"));
+            AliasFilter result = indicesService.buildAliasFilter(projectState, index, resolvedExpressions("logs_foo"));
             assertThat(result.getAliases(), arrayContainingInAnyOrder("logs_foo"));
             assertThat(result.getQueryBuilder(), equalTo(QueryBuilders.termQuery("foo", "bar")));
         }
         {
+            String index = backingIndex2.getIndex().getName();
+            AliasFilter result = indicesService.buildAliasFilter(projectState, index, resolvedExpressions("logs_foo"));
+            assertThat(result.getAliases(), arrayContainingInAnyOrder("logs_foo"));
+            assertThat(result.getQueryBuilder(), equalTo(QueryBuilders.termQuery("foo", "baz")));
+        }
+        {
             String index = backingIndex1.getIndex().getName();
-            AliasFilter result = indicesService.buildAliasFilter(state, index, Set.of("logs_foo", "logs"));
+            AliasFilter result = indicesService.buildAliasFilter(projectState, index, resolvedExpressions("logs_foo", "logs"));
             assertThat(result.getAliases(), arrayContainingInAnyOrder("logs_foo", "logs"));
             BoolQueryBuilder filter = (BoolQueryBuilder) result.getQueryBuilder();
             assertThat(filter.filter(), empty());
@@ -636,14 +797,150 @@ public class IndicesServiceTests extends ESSingleNodeTestCase {
             assertThat(filter.should(), containsInAnyOrder(QueryBuilders.termQuery("foo", "baz"), QueryBuilders.termQuery("foo", "bar")));
         }
         {
-            String index = backingIndex1.getIndex().getName();
-            AliasFilter result = indicesService.buildAliasFilter(state, index, Set.of("logs_foo", "logs", "logs_bar"));
+            String index = backingIndex2.getIndex().getName();
+            AliasFilter result = indicesService.buildAliasFilter(projectState, index, resolvedExpressions("logs_foo", "logs"));
             assertThat(result.getAliases(), arrayContainingInAnyOrder("logs_foo", "logs"));
             BoolQueryBuilder filter = (BoolQueryBuilder) result.getQueryBuilder();
             assertThat(filter.filter(), empty());
             assertThat(filter.must(), empty());
             assertThat(filter.mustNot(), empty());
-            assertThat(filter.should(), containsInAnyOrder(QueryBuilders.termQuery("foo", "baz"), QueryBuilders.termQuery("foo", "bar")));
+            assertThat(filter.should(), containsInAnyOrder(QueryBuilders.termQuery("foo", "baz"), QueryBuilders.termQuery("foo", "bax")));
         }
+        {
+            // querying an unfiltered and a filtered alias for the same data stream should drop the filters
+            String index = backingIndex1.getIndex().getName();
+            AliasFilter result = indicesService.buildAliasFilter(projectState, index, resolvedExpressions("logs_foo", "logs", "logs_bar"));
+            assertThat(result, is(AliasFilter.EMPTY));
+        }
+        {
+            // similarly, querying the data stream name and a filtered alias should drop the filter
+            String index = backingIndex1.getIndex().getName();
+            AliasFilter result = indicesService.buildAliasFilter(projectState, index, resolvedExpressions("logs", dataStreamName1));
+            assertThat(result, is(AliasFilter.EMPTY));
+        }
+    }
+
+    public void testLoadSlowLogFieldProvider() {
+        TestActionActionLoggingFieldsProvider.setFields(Map.of("key1", "value1"));
+        TestAnotherActionActionLoggingFieldsProvider.setFields(Map.of("key2", "value2"));
+
+        var indicesService = getIndicesService();
+        ActionLoggingFieldsProvider fieldProvider = indicesService.loggingFieldsProvider;
+        ActionLoggingFields fields = fieldProvider.create(new ActionLoggingFieldsContext());
+
+        // The map of fields from the two providers are merged to a single map of fields
+        assertEquals(Map.of("key1", "value1", "key2", "value2"), fields.logFields());
+
+        TestActionActionLoggingFieldsProvider.setFields(Map.of("key1", "value1"));
+        TestAnotherActionActionLoggingFieldsProvider.setFields(Map.of("key1", "value2"));
+
+        // There is an overlap of field names, since this isn't deterministic and probably a
+        // programming error (two providers provide the same field) throw an exception
+        assertThrows(IllegalStateException.class, fields::logFields);
+
+        TestActionActionLoggingFieldsProvider.setFields(Map.of("key1", "value1"));
+        TestAnotherActionActionLoggingFieldsProvider.setFields(Map.of());
+
+        // One provider has no fields
+        assertEquals(Map.of("key1", "value1"), fields.logFields());
+
+        TestActionActionLoggingFieldsProvider.setFields(Map.of());
+        TestAnotherActionActionLoggingFieldsProvider.setFields(Map.of());
+
+        // Both providers have no fields
+        assertEquals(Map.of(), fields.logFields());
+    }
+
+    public void testWithTempIndexServiceHandlesExistingIndex() throws Exception {
+        // This test makes sure that we can run withTempIndexService even if the index already exists
+        IndicesService indicesService = getIndicesService();
+        IndexMetadata indexMetadata = new IndexMetadata.Builder("test").settings(
+            indexSettings(randomIntBetween(1, 5), randomIntBetween(0, 5)).put("index.version.created", IndexVersions.V_8_10_0)
+                .put(SETTING_INDEX_UUID, randomUUID())
+        ).build();
+        IndexService createdIndexService = indicesService.createIndex(indexMetadata, List.of(), true);
+        indicesService.withTempIndexService(indexMetadata, indexService -> {
+            assertNotEquals(createdIndexService, indexService);
+            assertEquals(createdIndexService.index(), indexService.index());
+            return null;
+        });
+    }
+
+    /**
+     * Tests that the mapper service created for validation reuses the existing document mapper from the index service (if present).
+     */
+    public void testMapperServiceForValidationReusesExistingDocumentMapper() throws IOException {
+        IndicesService indicesService = getIndicesService();
+
+        IndexMetadata initialIndexMetadata = IndexMetadata.builder("test")
+            .settings(indexSettings(IndexVersion.current(), randomUUID(), 1, 0))
+            .build();
+        IndexService indexService = indicesService.createIndex(initialIndexMetadata, List.of(), randomBoolean());
+
+        IndexMetadata newIndexMetadata = IndexMetadata.builder(initialIndexMetadata)
+            .mappingVersion(initialIndexMetadata.getMappingVersion() + 1)
+            .putMapping("""
+                {
+                  "_doc":{
+                    "properties": {
+                      "@timestamp": {
+                        "type": "date"
+                      }
+                    }
+                  }
+                }""")
+            .build();
+        indexService.updateMapping(initialIndexMetadata, newIndexMetadata);
+
+        assertNotNull(indexService.mapperService());
+        DocumentMapper existingDocumentMapper = indexService.mapperService().documentMapper();
+        assertNotNull(existingDocumentMapper);
+        // Create the mapper service with the same index metadata that we used to update the mapping to ensure the document mapper is reused
+        DocumentMapper temporaryDocumentMapper = indicesService.createIndexMapperServiceForValidation(newIndexMetadata).documentMapper();
+        assertNotNull(temporaryDocumentMapper);
+        assertSame(existingDocumentMapper, temporaryDocumentMapper);
+    }
+
+    /**
+     * Tests that we only reuse the existing document mapper from the index service if the mapping is unchanged.
+     */
+    public void testMapperServiceForValidationChecksMapping() throws IOException {
+        IndicesService indicesService = getIndicesService();
+
+        IndexMetadata initialIndexMetadata = IndexMetadata.builder("test")
+            .settings(indexSettings(IndexVersion.current(), randomUUID(), 1, 0))
+            .build();
+        IndexService indexService = indicesService.createIndex(initialIndexMetadata, List.of(), randomBoolean());
+
+        IndexMetadata newIndexMetadata = IndexMetadata.builder(initialIndexMetadata)
+            .mappingVersion(initialIndexMetadata.getMappingVersion() + 1)
+            .putMapping("""
+                {
+                  "_doc":{
+                    "properties": {
+                      "@timestamp": {
+                        "type": "date"
+                      }
+                    }
+                  }
+                }""")
+            .build();
+        indexService.updateMapping(initialIndexMetadata, newIndexMetadata);
+
+        assertNotNull(indexService.mapperService());
+        DocumentMapper existingDocumentMapper = indexService.mapperService().documentMapper();
+        assertNotNull(existingDocumentMapper);
+        // Create the mapper service with the initial index metadata to ensure the document mapper is NOT reused as the mapping is different
+        DocumentMapper temporaryDocumentMapper = indicesService.createIndexMapperServiceForValidation(initialIndexMetadata)
+            .documentMapper();
+        assertNull(temporaryDocumentMapper);
+    }
+
+    private Set<ResolvedExpression> resolvedExpressions(String... expressions) {
+        return Arrays.stream(expressions).map(ResolvedExpression::new).collect(Collectors.toSet());
+    }
+
+    private IndexRemovalReason randomReason() {
+        return randomFrom(IndexRemovalReason.values());
     }
 }
