@@ -1,14 +1,14 @@
 /*
  * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
- * or more contributor license agreements. Licensed under the Elastic License
- * 2.0 and the Server Side Public License, v 1; you may not use this file except
- * in compliance with, at your election, the Elastic License 2.0 or the Server
- * Side Public License, v 1.
+ * or more contributor license agreements. Licensed under the "Elastic License
+ * 2.0", the "GNU Affero General Public License v3.0 only", and the "Server Side
+ * Public License v 1"; you may not use this file except in compliance with, at
+ * your election, the "Elastic License 2.0", the "GNU Affero General Public
+ * License v3.0 only", or the "Server Side Public License, v 1".
  */
 package org.elasticsearch.repositories.blobstore;
 
 import org.apache.lucene.util.SameThreadExecutorService;
-import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.ActionRunnable;
 import org.elasticsearch.action.support.PlainActionFuture;
@@ -18,24 +18,29 @@ import org.elasticsearch.cluster.ClusterStateApplier;
 import org.elasticsearch.cluster.ClusterStateUpdateTask;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
+import org.elasticsearch.cluster.metadata.ProjectId;
+import org.elasticsearch.cluster.metadata.ProjectMetadata;
 import org.elasticsearch.cluster.metadata.RepositoriesMetadata;
 import org.elasticsearch.cluster.metadata.RepositoryMetadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
+import org.elasticsearch.cluster.node.DiscoveryNodeUtils;
 import org.elasticsearch.cluster.node.DiscoveryNodes;
 import org.elasticsearch.cluster.service.ClusterApplierService;
 import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.blobstore.BlobContainer;
-import org.elasticsearch.common.blobstore.BlobMetadata;
 import org.elasticsearch.common.blobstore.BlobPath;
-import org.elasticsearch.core.TimeValue;
+import org.elasticsearch.common.blobstore.OperationPurpose;
+import org.elasticsearch.common.blobstore.RetryingInputStream;
+import org.elasticsearch.common.blobstore.support.BlobMetadata;
+import org.elasticsearch.common.settings.ClusterSettings;
+import org.elasticsearch.common.settings.Setting;
+import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.common.util.concurrent.ThreadContext;
 import org.elasticsearch.common.xcontent.LoggingDeprecationHandler;
-import org.elasticsearch.common.xcontent.NamedXContentRegistry;
-import org.elasticsearch.common.xcontent.XContentParser;
-import org.elasticsearch.common.xcontent.XContentType;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.snapshots.blobstore.BlobStoreIndexShardSnapshots;
-import org.elasticsearch.repositories.GetSnapshotInfoContext;
 import org.elasticsearch.repositories.IndexId;
 import org.elasticsearch.repositories.RepositoryData;
 import org.elasticsearch.repositories.ShardGeneration;
@@ -43,6 +48,9 @@ import org.elasticsearch.repositories.ShardGenerations;
 import org.elasticsearch.snapshots.SnapshotId;
 import org.elasticsearch.snapshots.SnapshotInfo;
 import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.xcontent.XContentParser;
+import org.elasticsearch.xcontent.XContentParserConfiguration;
+import org.elasticsearch.xcontent.XContentType;
 
 import java.io.DataInputStream;
 import java.io.IOException;
@@ -61,9 +69,15 @@ import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
-import static org.apache.lucene.util.LuceneTestCase.random;
-import static org.elasticsearch.test.ESTestCase.buildNewFakeTransportAddress;
+import static org.apache.lucene.tests.util.LuceneTestCase.random;
+import static org.elasticsearch.repositories.blobstore.BlobStoreRepository.MAX_HEAP_SIZE_FOR_SNAPSHOT_DELETION_SETTING;
+import static org.elasticsearch.repositories.blobstore.BlobStoreRepository.METADATA_BLOB_NAME_SUFFIX;
+import static org.elasticsearch.repositories.blobstore.BlobStoreRepository.METADATA_NAME_FORMAT;
+import static org.elasticsearch.repositories.blobstore.BlobStoreRepository.getRepositoryDataBlobName;
+import static org.elasticsearch.test.ESTestCase.randomFrom;
 import static org.elasticsearch.test.ESTestCase.randomIntBetween;
+import static org.elasticsearch.test.ESTestCase.randomValueOtherThan;
+import static org.elasticsearch.test.ESTestCase.randomValueOtherThanMany;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.hasKey;
@@ -72,8 +86,8 @@ import static org.hamcrest.Matchers.not;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.anyString;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
@@ -97,21 +111,23 @@ public final class BlobStoreTestUtil {
      * Same as {@link #assertConsistency(BlobStoreRepository)} but async so it can be used in tests that don't allow blocking.
      */
     public static PlainActionFuture<AssertionError> assertConsistencyAsync(BlobStoreRepository repository) {
-        final PlainActionFuture<AssertionError> future = PlainActionFuture.newFuture();
+        final PlainActionFuture<AssertionError> future = new PlainActionFuture<>();
         repository.threadPool().generic().execute(ActionRunnable.wrap(future, listener -> {
             try {
                 final BlobContainer blobContainer = repository.blobContainer();
                 final long latestGen;
-                try (DataInputStream inputStream = new DataInputStream(blobContainer.readBlob("index.latest"))) {
+                try (DataInputStream inputStream = new DataInputStream(blobContainer.readBlob(randomNonDataPurpose(), "index.latest"))) {
                     latestGen = inputStream.readLong();
                 } catch (NoSuchFileException e) {
                     throw new AssertionError("Could not find index.latest blob for repo [" + repository + "]");
                 }
                 assertIndexGenerations(blobContainer, latestGen);
                 final RepositoryData repositoryData;
-                try (InputStream blob = blobContainer.readBlob(BlobStoreRepository.INDEX_FILE_PREFIX + latestGen);
-                     XContentParser parser = XContentType.JSON.xContent().createParser(NamedXContentRegistry.EMPTY,
-                         LoggingDeprecationHandler.INSTANCE, blob)) {
+                try (
+                    InputStream blob = blobContainer.readBlob(randomNonDataPurpose(), getRepositoryDataBlobName(latestGen));
+                    XContentParser parser = XContentType.JSON.xContent()
+                        .createParser(XContentParserConfiguration.EMPTY.withDeprecationHandler(LoggingDeprecationHandler.INSTANCE), blob)
+                ) {
                     repositoryData = RepositoryData.snapshotsFromXContent(parser, latestGen, false);
                 }
                 assertIndexUUIDs(repository, repositoryData);
@@ -149,28 +165,34 @@ public final class BlobStoreTestUtil {
     }
 
     private static void assertIndexGenerations(BlobContainer repoRoot, long latestGen) throws IOException {
-        final long[] indexGenerations = repoRoot.listBlobsByPrefix(BlobStoreRepository.INDEX_FILE_PREFIX).keySet().stream()
+        final long[] indexGenerations = repoRoot.listBlobsByPrefix(randomPurpose(), BlobStoreRepository.INDEX_FILE_PREFIX)
+            .keySet()
+            .stream()
             .map(s -> s.replace(BlobStoreRepository.INDEX_FILE_PREFIX, ""))
-            .mapToLong(Long::parseLong).sorted().toArray();
+            .mapToLong(Long::parseLong)
+            .sorted()
+            .toArray();
         assertEquals(latestGen, indexGenerations[indexGenerations.length - 1]);
         assertTrue(indexGenerations.length <= 2);
     }
 
     private static void assertShardIndexGenerations(BlobContainer repoRoot, ShardGenerations shardGenerations) throws IOException {
-        final BlobContainer indicesContainer = repoRoot.children().get("indices");
+        final BlobContainer indicesContainer = repoRoot.children(randomPurpose()).get("indices");
         for (IndexId index : shardGenerations.indices()) {
             final List<ShardGeneration> gens = shardGenerations.getGens(index);
             if (gens.isEmpty() == false) {
-                final BlobContainer indexContainer = indicesContainer.children().get(index.getId());
-                final Map<String, BlobContainer> shardContainers = indexContainer.children();
+                final BlobContainer indexContainer = indicesContainer.children(randomPurpose()).get(index.getId());
+                final Map<String, BlobContainer> shardContainers = indexContainer.children(randomPurpose());
                 for (int i = 0; i < gens.size(); i++) {
                     final ShardGeneration generation = gens.get(i);
                     assertThat(generation, not(ShardGenerations.DELETED_SHARD_GEN));
                     if (generation != null && generation.equals(ShardGenerations.NEW_SHARD_GEN) == false) {
                         final String shardId = Integer.toString(i);
                         assertThat(shardContainers, hasKey(shardId));
-                        assertThat(shardContainers.get(shardId).listBlobsByPrefix(BlobStoreRepository.INDEX_FILE_PREFIX),
-                            hasKey(BlobStoreRepository.INDEX_FILE_PREFIX + generation));
+                        assertThat(
+                            shardContainers.get(shardId).listBlobsByPrefix(randomPurpose(), BlobStoreRepository.SNAPSHOT_INDEX_PREFIX),
+                            hasKey(BlobStoreRepository.SNAPSHOT_INDEX_PREFIX + generation)
+                        );
                     }
                 }
             }
@@ -178,53 +200,63 @@ public final class BlobStoreTestUtil {
     }
 
     private static void assertIndexUUIDs(BlobStoreRepository repository, RepositoryData repositoryData) throws IOException {
-        final List<String> expectedIndexUUIDs =
-            repositoryData.getIndices().values().stream().map(IndexId::getId).collect(Collectors.toList());
-        final BlobContainer indicesContainer = repository.blobContainer().children().get("indices");
+        final List<String> expectedIndexUUIDs = repositoryData.getIndices().values().stream().map(IndexId::getId).toList();
+        final BlobContainer indicesContainer = repository.blobContainer().children(randomPurpose()).get("indices");
         final List<String> foundIndexUUIDs;
         if (indicesContainer == null) {
             foundIndexUUIDs = Collections.emptyList();
         } else {
             // Skip Lucene MockFS extraN directory
-            foundIndexUUIDs = indicesContainer.children().keySet().stream().filter(
-                s -> s.startsWith("extra") == false).collect(Collectors.toList());
+            foundIndexUUIDs = indicesContainer.children(randomPurpose())
+                .keySet()
+                .stream()
+                .filter(s -> s.startsWith("extra") == false)
+                .collect(Collectors.toList());
         }
         assertThat(foundIndexUUIDs, containsInAnyOrder(expectedIndexUUIDs.toArray(Strings.EMPTY_ARRAY)));
         for (String indexId : foundIndexUUIDs) {
-            final Set<String> indexMetaGenerationsFound = indicesContainer.children().get(indexId)
-                .listBlobsByPrefix(BlobStoreRepository.METADATA_PREFIX).keySet().stream()
-                .map(p -> p.replace(BlobStoreRepository.METADATA_PREFIX, "").replace(".dat", ""))
+            final Set<String> indexMetaGenerationsFound = indicesContainer.children(randomPurpose())
+                .get(indexId)
+                .listBlobsByPrefix(randomPurpose(), BlobStoreRepository.METADATA_PREFIX)
+                .keySet()
+                .stream()
+                .map(p -> p.replace(BlobStoreRepository.METADATA_PREFIX, "").replace(METADATA_BLOB_NAME_SUFFIX, ""))
                 .collect(Collectors.toSet());
             final Set<String> indexMetaGenerationsExpected = new HashSet<>();
-            final IndexId idx =
-                repositoryData.getIndices().values().stream().filter(i -> i.getId().equals(indexId)).findFirst().get();
+            final IndexId idx = repositoryData.getIndices().values().stream().filter(i -> i.getId().equals(indexId)).findFirst().get();
             for (SnapshotId snapshotId : repositoryData.getSnapshots(idx)) {
                 indexMetaGenerationsExpected.add(repositoryData.indexMetaDataGenerations().indexMetaBlobId(snapshotId, idx));
             }
             // TODO: assertEquals(indexMetaGenerationsExpected, indexMetaGenerationsFound); requires cleanup functionality for
-            //       index meta generations blobs
+            // index meta generations blobs
             assertTrue(indexMetaGenerationsFound.containsAll(indexMetaGenerationsExpected));
         }
     }
 
-    private static void assertSnapshotUUIDs(BlobStoreRepository repository, RepositoryData repositoryData,
-                                            ActionListener<AssertionError> listener) throws IOException {
+    private static void assertSnapshotUUIDs(
+        BlobStoreRepository repository,
+        RepositoryData repositoryData,
+        ActionListener<AssertionError> listener
+    ) throws IOException {
         final BlobContainer repoRoot = repository.blobContainer();
         final Collection<SnapshotId> snapshotIds = repositoryData.getSnapshotIds();
-        final List<String> expectedSnapshotUUIDs = snapshotIds.stream().map(SnapshotId::getUUID).collect(Collectors.toList());
-        for (String prefix : new String[]{BlobStoreRepository.SNAPSHOT_PREFIX, BlobStoreRepository.METADATA_PREFIX}) {
-                final Collection<String> foundSnapshotUUIDs = repoRoot.listBlobs().keySet().stream().filter(p -> p.startsWith(prefix))
-                    .map(p -> p.replace(prefix, "").replace(".dat", ""))
-                    .collect(Collectors.toSet());
-                assertThat(foundSnapshotUUIDs, containsInAnyOrder(expectedSnapshotUUIDs.toArray(Strings.EMPTY_ARRAY)));
+        final List<String> expectedSnapshotUUIDs = snapshotIds.stream().map(SnapshotId::getUUID).toList();
+        for (String prefix : new String[] { BlobStoreRepository.SNAPSHOT_PREFIX, BlobStoreRepository.METADATA_PREFIX }) {
+            final Collection<String> foundSnapshotUUIDs = repoRoot.listBlobs(randomPurpose())
+                .keySet()
+                .stream()
+                .filter(p -> p.startsWith(prefix))
+                .map(p -> p.replace(prefix, "").replace(METADATA_BLOB_NAME_SUFFIX, ""))
+                .collect(Collectors.toSet());
+            assertThat(foundSnapshotUUIDs, containsInAnyOrder(expectedSnapshotUUIDs.toArray(Strings.EMPTY_ARRAY)));
         }
 
-        final BlobContainer indicesContainer = repository.getBlobContainer().children().get("indices");
+        final BlobContainer indicesContainer = repository.getBlobContainer().children(randomPurpose()).get("indices");
         final Map<String, BlobContainer> indices;
         if (indicesContainer == null) {
             indices = Collections.emptyMap();
         } else {
-            indices = indicesContainer.children();
+            indices = indicesContainer.children(randomPurpose());
         }
         if (snapshotIds.isEmpty()) {
             listener.onResponse(null);
@@ -232,53 +264,50 @@ public final class BlobStoreTestUtil {
         }
         // Assert that for each snapshot, the relevant metadata was written to index and shard folders
         final List<SnapshotInfo> snapshotInfos = Collections.synchronizedList(new ArrayList<>());
-        repository.getSnapshotInfo(
-                new GetSnapshotInfoContext(
-                        List.copyOf(snapshotIds),
-                        true,
-                        () -> false,
-                        (ctx, sni) -> snapshotInfos.add(sni),
-                        new ActionListener<>() {
-                            @Override
-                            public void onResponse(Void unused) {
-                                try {
-                                    assertSnapshotInfosConsistency(repository, repositoryData, indices, snapshotInfos);
-                                } catch (Exception e) {
-                                    listener.onResponse(new AssertionError(e));
-                                    return;
-                                } catch (AssertionError e) {
-                                    listener.onResponse(e);
-                                    return;
-                                }
-                                listener.onResponse(null);
-                            }
+        repository.getSnapshotInfo(List.copyOf(snapshotIds), true, () -> false, snapshotInfos::add, new ActionListener<>() {
+            @Override
+            public void onResponse(Void unused) {
+                try {
+                    assertSnapshotInfosConsistency(repository, repositoryData, indices, snapshotInfos);
+                } catch (Exception e) {
+                    listener.onResponse(new AssertionError(e));
+                    return;
+                } catch (AssertionError e) {
+                    listener.onResponse(e);
+                    return;
+                }
+                listener.onResponse(null);
+            }
 
-                            @Override
-                            public void onFailure(Exception e) {
-                                listener.onResponse(new AssertionError(e));
-                            }
-                        }
-                )
-        );
+            @Override
+            public void onFailure(Exception e) {
+                listener.onResponse(new AssertionError(e));
+            }
+        });
     }
 
-    private static void assertSnapshotInfosConsistency(BlobStoreRepository repository,
-                                                       RepositoryData repositoryData,
-                                                       Map<String, BlobContainer> indices,
-                                                       List<SnapshotInfo> snapshotInfos) throws IOException {
+    private static void assertSnapshotInfosConsistency(
+        BlobStoreRepository repository,
+        RepositoryData repositoryData,
+        Map<String, BlobContainer> indices,
+        List<SnapshotInfo> snapshotInfos
+    ) throws IOException {
         final Map<IndexId, Integer> maxShardCountsExpected = new HashMap<>();
         final Map<IndexId, Integer> maxShardCountsSeen = new HashMap<>();
-        for (SnapshotInfo snapshotInfo: snapshotInfos) {
+        for (SnapshotInfo snapshotInfo : snapshotInfos) {
             final SnapshotId snapshotId = snapshotInfo.snapshotId();
             for (String index : snapshotInfo.indices()) {
                 final IndexId indexId = repositoryData.resolveIndexId(index);
                 assertThat(indices, hasKey(indexId.getId()));
                 final BlobContainer indexContainer = indices.get(indexId.getId());
-                assertThat(indexContainer.listBlobs(),
-                    hasKey(String.format(Locale.ROOT, BlobStoreRepository.METADATA_NAME_FORMAT,
-                        repositoryData.indexMetaDataGenerations().indexMetaBlobId(snapshotId, indexId))));
+                assertThat(
+                    indexContainer.listBlobs(randomPurpose()),
+                    hasKey(
+                        Strings.format(METADATA_NAME_FORMAT, repositoryData.indexMetaDataGenerations().indexMetaBlobId(snapshotId, indexId))
+                    )
+                );
                 final IndexMetadata indexMetadata = repository.getSnapshotIndexMetaData(repositoryData, snapshotId, indexId);
-                for (Map.Entry<String, BlobContainer> entry : indexContainer.children().entrySet()) {
+                for (Map.Entry<String, BlobContainer> entry : indexContainer.children(randomPurpose()).entrySet()) {
                     // Skip Lucene MockFS extraN directory
                     if (entry.getKey().startsWith("extra")) {
                         continue;
@@ -286,38 +315,65 @@ public final class BlobStoreTestUtil {
                     final int shardId = Integer.parseInt(entry.getKey());
                     final int shardCount = indexMetadata.getNumberOfShards();
                     maxShardCountsExpected.compute(
-                        indexId, (i, existing) -> existing == null || existing < shardCount ? shardCount : existing);
+                        indexId,
+                        (i, existing) -> existing == null || existing < shardCount ? shardCount : existing
+                    );
                     final BlobContainer shardContainer = entry.getValue();
                     // TODO: we shouldn't be leaking empty shard directories when a shard (but not all of the index it belongs to)
-                    //       becomes unreferenced. We should fix that and remove this conditional once its fixed.
-                    if (shardContainer.listBlobs().keySet().stream().anyMatch(blob -> blob.startsWith("extra") == false)) {
+                    // becomes unreferenced. We should fix that and remove this conditional once its fixed.
+                    if (shardContainer.listBlobs(randomPurpose()).keySet().stream().anyMatch(blob -> blob.startsWith("extra") == false)) {
                         final int impliedCount = shardId - 1;
                         maxShardCountsSeen.compute(
-                            indexId, (i, existing) -> existing == null || existing < impliedCount ? impliedCount : existing);
+                            indexId,
+                            (i, existing) -> existing == null || existing < impliedCount ? impliedCount : existing
+                        );
                     }
-                    if (shardId < shardCount && snapshotInfo.shardFailures().stream().noneMatch(
-                        shardFailure -> shardFailure.index().equals(index) && shardFailure.shardId() == shardId)) {
-                        final Map<String, BlobMetadata> shardPathContents = shardContainer.listBlobs();
-                        assertThat(shardPathContents,
-                            hasKey(String.format(Locale.ROOT, BlobStoreRepository.SNAPSHOT_NAME_FORMAT, snapshotId.getUUID())));
-                        assertThat(shardPathContents.keySet().stream()
-                            .filter(name -> name.startsWith(BlobStoreRepository.INDEX_FILE_PREFIX)).count(), lessThanOrEqualTo(2L));
+                    if (shardId < shardCount
+                        && snapshotInfo.shardFailures()
+                            .stream()
+                            .noneMatch(shardFailure -> shardFailure.index().equals(index) && shardFailure.shardId() == shardId)) {
+                        final Map<String, BlobMetadata> shardPathContents = shardContainer.listBlobs(randomPurpose());
+                        assertThat(
+                            shardPathContents,
+                            hasKey(String.format(Locale.ROOT, BlobStoreRepository.SNAPSHOT_NAME_FORMAT, snapshotId.getUUID()))
+                        );
+                        assertThat(
+                            shardPathContents.keySet()
+                                .stream()
+                                .filter(name -> name.startsWith(BlobStoreRepository.SNAPSHOT_INDEX_PREFIX))
+                                .count(),
+                            lessThanOrEqualTo(2L)
+                        );
                         final BlobStoreIndexShardSnapshots blobStoreIndexShardSnapshots = repository.getBlobStoreIndexShardSnapshots(
-                                indexId, shardId, repositoryData.shardGenerations().getShardGen(indexId, shardId));
-                        assertTrue(blobStoreIndexShardSnapshots.snapshots().stream()
-                                .anyMatch(snapshotFiles -> snapshotFiles.snapshot().equals(snapshotId.getName())));
+                            indexId,
+                            shardId,
+                            repositoryData.shardGenerations().getShardGen(indexId, shardId)
+                        );
+                        assertTrue(
+                            blobStoreIndexShardSnapshots.snapshots()
+                                .stream()
+                                .anyMatch(snapshotFiles -> snapshotFiles.snapshot().equals(snapshotId.getName()))
+                        );
                     }
                 }
             }
         }
-        maxShardCountsSeen.forEach(((indexId, count) -> assertThat("Found unreferenced shard paths for index [" + indexId + "]",
-            count, lessThanOrEqualTo(maxShardCountsExpected.get(indexId)))));
+        maxShardCountsSeen.forEach(
+            ((indexId, count) -> assertThat(
+                "Found unreferenced shard paths for index [" + indexId + "]",
+                count,
+                lessThanOrEqualTo(maxShardCountsExpected.get(indexId))
+            ))
+        );
     }
 
     public static void assertBlobsByPrefix(BlobStoreRepository repository, BlobPath path, String prefix, Map<String, BlobMetadata> blobs) {
-        final PlainActionFuture<Map<String, BlobMetadata>> future = PlainActionFuture.newFuture();
-        repository.threadPool().generic().execute(
-            ActionRunnable.supply(future, () -> repository.blobStore().blobContainer(path).listBlobsByPrefix(prefix)));
+        final PlainActionFuture<Map<String, BlobMetadata>> future = new PlainActionFuture<>();
+        repository.threadPool()
+            .generic()
+            .execute(
+                ActionRunnable.supply(future, () -> repository.blobStore().blobContainer(path).listBlobsByPrefix(randomPurpose(), prefix))
+            );
         Map<String, BlobMetadata> foundBlobs = future.actionGet();
         if (blobs.isEmpty()) {
             assertThat(foundBlobs.keySet(), empty());
@@ -342,32 +398,52 @@ public final class BlobStoreTestUtil {
     /**
      * Creates a mocked {@link ClusterService} for use in {@link BlobStoreRepository} related tests that mocks out all the necessary
      * functionality to make {@link BlobStoreRepository} work. Initializes the cluster state with a {@link RepositoriesMetadata} instance
-     * that contains the given {@code metadata}.
+     * that contains the given {@code repositoryMetadata}.
      *
-     * @param metadata RepositoryMetadata to initialize the cluster state with
+     * @param repositoryMetadata RepositoryMetadata to initialize the cluster state with
      * @return Mock ClusterService
      */
-    public static ClusterService mockClusterService(RepositoryMetadata metadata) {
-        return mockClusterService(ClusterState.builder(ClusterState.EMPTY_STATE).metadata(
-            Metadata.builder().clusterUUID(UUIDs.randomBase64UUID(random())).putCustom(RepositoriesMetadata.TYPE,
-                new RepositoriesMetadata(Collections.singletonList(metadata))).build()).build());
+    public static ClusterService mockClusterService(ProjectId projectId, RepositoryMetadata repositoryMetadata) {
+        return mockClusterService(
+            ClusterState.builder(ClusterState.EMPTY_STATE)
+                .metadata(
+                    Metadata.builder(ClusterState.EMPTY_STATE.metadata())
+                        .clusterUUID(UUIDs.randomBase64UUID(random()))
+                        .put(
+                            ProjectMetadata.builder(projectId)
+                                .putCustom(
+                                    RepositoriesMetadata.TYPE,
+                                    new RepositoriesMetadata(Collections.singletonList(repositoryMetadata))
+                                )
+                                .build()
+                        )
+                        .build()
+                )
+                .build()
+        );
     }
 
     private static ClusterService mockClusterService(ClusterState initialState) {
+        final ThreadContext threadContext = new ThreadContext(Settings.EMPTY);
         final ThreadPool threadPool = mock(ThreadPool.class);
+        when(threadPool.getThreadContext()).thenReturn(threadContext);
         when(threadPool.executor(ThreadPool.Names.SNAPSHOT)).thenReturn(new SameThreadExecutorService());
+        when(threadPool.executor(ThreadPool.Names.SNAPSHOT_META)).thenReturn(new SameThreadExecutorService());
         when(threadPool.generic()).thenReturn(new SameThreadExecutorService());
         when(threadPool.info(ThreadPool.Names.SNAPSHOT)).thenReturn(
-            new ThreadPool.Info(ThreadPool.Names.SNAPSHOT, ThreadPool.ThreadPoolType.FIXED, randomIntBetween(1, 10)));
+            new ThreadPool.Info(ThreadPool.Names.SNAPSHOT, ThreadPool.ThreadPoolType.FIXED, randomIntBetween(1, 10))
+        );
         final ClusterService clusterService = mock(ClusterService.class);
         final ClusterApplierService clusterApplierService = mock(ClusterApplierService.class);
         when(clusterService.getClusterApplierService()).thenReturn(clusterApplierService);
         // Setting local node as master so it may update the repository metadata in the cluster state
-        final DiscoveryNode localNode = new DiscoveryNode("", buildNewFakeTransportAddress(), Version.CURRENT);
+        final DiscoveryNode localNode = DiscoveryNodeUtils.create("");
         when(clusterService.localNode()).thenReturn(localNode);
         final AtomicReference<ClusterState> currentState = new AtomicReference<>(
-            ClusterState.builder(initialState).nodes(
-                DiscoveryNodes.builder().add(localNode).masterNodeId(localNode.getId()).localNodeId(localNode.getId()).build()).build());
+            ClusterState.builder(initialState)
+                .nodes(DiscoveryNodes.builder().add(localNode).masterNodeId(localNode.getId()).localNodeId(localNode.getId()).build())
+                .build()
+        );
         when(clusterService.state()).then(invocationOnMock -> currentState.get());
         final List<ClusterStateApplier> appliers = new CopyOnWriteArrayList<>();
         doAnswer(invocation -> {
@@ -375,16 +451,46 @@ public final class BlobStoreTestUtil {
             final ClusterState current = currentState.get();
             final ClusterState next = task.execute(current);
             currentState.set(next);
-            appliers.forEach(applier -> applier.applyClusterState(
-                new ClusterChangedEvent((String) invocation.getArguments()[0], next, current)));
-            task.clusterStateProcessed((String) invocation.getArguments()[0], current, next);
+            appliers.forEach(
+                applier -> applier.applyClusterState(new ClusterChangedEvent((String) invocation.getArguments()[0], next, current))
+            );
+            task.clusterStateProcessed(current, next);
             return null;
-        }).when(clusterService).submitStateUpdateTask(anyString(), any(ClusterStateUpdateTask.class));
+        }).when(clusterService).submitUnbatchedStateUpdateTask(anyString(), any(ClusterStateUpdateTask.class));
         doAnswer(invocation -> {
             appliers.add((ClusterStateApplier) invocation.getArguments()[0]);
             return null;
         }).when(clusterService).addStateApplier(any(ClusterStateApplier.class));
         when(clusterApplierService.threadPool()).thenReturn(threadPool);
+        Set<Setting<?>> settingSet = new HashSet<>();
+        settingSet.add(MAX_HEAP_SIZE_FOR_SNAPSHOT_DELETION_SETTING);
+        ClusterSettings mockClusterSettings = new ClusterSettings(Settings.EMPTY, settingSet);
+        when(clusterService.getClusterSettings()).thenReturn(mockClusterSettings);
         return clusterService;
+    }
+
+    public static OperationPurpose randomPurpose() {
+        return randomFrom(OperationPurpose.values());
+    }
+
+    /**
+     * Random {@link OperationPurpose} that will be retried by {@link RetryingInputStream}
+     */
+    public static OperationPurpose randomRetryingPurpose() {
+        return randomValueOtherThanMany(
+            purpose -> purpose != OperationPurpose.REPOSITORY_ANALYSIS == false,
+            BlobStoreTestUtil::randomPurpose
+        );
+    }
+
+    /**
+     * Random {@link OperationPurpose} that will be retried a finite number of times by {@link RetryingInputStream}
+     */
+    public static OperationPurpose randomFiniteRetryingPurpose() {
+        return randomValueOtherThanMany(purpose -> purpose == OperationPurpose.INDICES, BlobStoreTestUtil::randomRetryingPurpose);
+    }
+
+    public static OperationPurpose randomNonDataPurpose() {
+        return randomValueOtherThan(OperationPurpose.SNAPSHOT_DATA, BlobStoreTestUtil::randomPurpose);
     }
 }
