@@ -15,10 +15,10 @@ import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.block.ClusterBlockException;
 import org.elasticsearch.cluster.block.ClusterBlockLevel;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
-import org.elasticsearch.cluster.metadata.IndexNameExpressionResolver;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.common.inject.Inject;
+import org.elasticsearch.common.util.concurrent.EsExecutors;
 import org.elasticsearch.index.IndexNotFoundException;
+import org.elasticsearch.injection.guice.Inject;
 import org.elasticsearch.persistent.PersistentTasksCustomMetadata;
 import org.elasticsearch.persistent.PersistentTasksService;
 import org.elasticsearch.tasks.Task;
@@ -29,7 +29,6 @@ import org.elasticsearch.xpack.core.ccr.action.PauseFollowAction;
 import org.elasticsearch.xpack.core.ccr.action.ShardFollowTask;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TransportPauseFollowAction extends AcknowledgedTransportMasterNodeAction<PauseFollowAction.Request> {
 
@@ -37,21 +36,32 @@ public class TransportPauseFollowAction extends AcknowledgedTransportMasterNodeA
 
     @Inject
     public TransportPauseFollowAction(
-            final TransportService transportService,
-            final ActionFilters actionFilters,
-            final ClusterService clusterService,
-            final ThreadPool threadPool,
-            final IndexNameExpressionResolver indexNameExpressionResolver,
-            final PersistentTasksService persistentTasksService) {
-        super(PauseFollowAction.NAME, transportService, clusterService, threadPool, actionFilters,
-            PauseFollowAction.Request::new, indexNameExpressionResolver, ThreadPool.Names.SAME);
+        final TransportService transportService,
+        final ActionFilters actionFilters,
+        final ClusterService clusterService,
+        final ThreadPool threadPool,
+        final PersistentTasksService persistentTasksService
+    ) {
+        super(
+            PauseFollowAction.NAME,
+            transportService,
+            clusterService,
+            threadPool,
+            actionFilters,
+            PauseFollowAction.Request::new,
+            EsExecutors.DIRECT_EXECUTOR_SERVICE
+        );
         this.persistentTasksService = persistentTasksService;
     }
 
     @Override
-    protected void masterOperation(Task task, PauseFollowAction.Request request,
-                                   ClusterState state, ActionListener<AcknowledgedResponse> listener) {
-        final IndexMetadata followerIMD = state.metadata().index(request.getFollowIndex());
+    protected void masterOperation(
+        Task task,
+        PauseFollowAction.Request request,
+        ClusterState state,
+        ActionListener<AcknowledgedResponse> listener
+    ) {
+        final IndexMetadata followerIMD = state.metadata().getProject().index(request.getFollowIndex());
         if (followerIMD == null) {
             listener.onFailure(new IndexNotFoundException(request.getFollowIndex()));
             return;
@@ -60,20 +70,21 @@ public class TransportPauseFollowAction extends AcknowledgedTransportMasterNodeA
             listener.onFailure(new IllegalArgumentException("index [" + request.getFollowIndex() + "] is not a follower index"));
             return;
         }
-        PersistentTasksCustomMetadata persistentTasksMetadata = state.metadata().custom(PersistentTasksCustomMetadata.TYPE);
+        PersistentTasksCustomMetadata persistentTasksMetadata = state.metadata().getProject().custom(PersistentTasksCustomMetadata.TYPE);
         if (persistentTasksMetadata == null) {
             listener.onFailure(new IllegalArgumentException("no shard follow tasks found"));
             return;
         }
 
-        List<String> shardFollowTaskIds = persistentTasksMetadata.tasks().stream()
+        List<String> shardFollowTaskIds = persistentTasksMetadata.tasks()
+            .stream()
             .filter(persistentTask -> ShardFollowTask.NAME.equals(persistentTask.getTaskName()))
             .filter(persistentTask -> {
                 ShardFollowTask shardFollowTask = (ShardFollowTask) persistentTask.getParams();
                 return shardFollowTask.getFollowShardId().getIndexName().equals(request.getFollowIndex());
             })
             .map(PersistentTasksCustomMetadata.PersistentTask::getId)
-            .collect(Collectors.toList());
+            .toList();
 
         if (shardFollowTaskIds.isEmpty()) {
             listener.onFailure(new IllegalArgumentException("no shard follow tasks for [" + request.getFollowIndex() + "]"));
@@ -84,7 +95,7 @@ public class TransportPauseFollowAction extends AcknowledgedTransportMasterNodeA
         final ResponseHandler responseHandler = new ResponseHandler(shardFollowTaskIds.size(), listener);
         for (String taskId : shardFollowTaskIds) {
             final int taskSlot = i++;
-            persistentTasksService.sendRemoveRequest(taskId, responseHandler.getActionListener(taskSlot));
+            persistentTasksService.sendRemoveRequest(taskId, request.masterNodeTimeout(), responseHandler.getActionListener(taskSlot));
         }
     }
 
