@@ -6,17 +6,17 @@
  */
 package org.elasticsearch.xpack.core.ilm;
 
-import org.elasticsearch.client.Client;
-import org.elasticsearch.common.xcontent.ParseField;
+import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
-import org.elasticsearch.common.xcontent.ConstructingObjectParser;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.common.xcontent.XContentParser;
+import org.elasticsearch.xcontent.ConstructingObjectParser;
+import org.elasticsearch.xcontent.ParseField;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentParser;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.time.Instant;
 import java.util.List;
 import java.util.Objects;
 
@@ -28,8 +28,13 @@ public class DeleteAction implements LifecycleAction {
 
     public static final ParseField DELETE_SEARCHABLE_SNAPSHOT_FIELD = new ParseField("delete_searchable_snapshot");
 
-    private static final ConstructingObjectParser<DeleteAction, Void> PARSER = new ConstructingObjectParser<>(NAME,
-        a -> new DeleteAction(a[0] == null ? true : (boolean) a[0]));
+    public static final DeleteAction WITH_SNAPSHOT_DELETE = new DeleteAction(true);
+    public static final DeleteAction NO_SNAPSHOT_DELETE = new DeleteAction(false);
+
+    private static final ConstructingObjectParser<DeleteAction, Void> PARSER = new ConstructingObjectParser<>(
+        NAME,
+        a -> (a[0] == null || (boolean) a[0]) ? WITH_SNAPSHOT_DELETE : NO_SNAPSHOT_DELETE
+    );
 
     static {
         PARSER.declareBoolean(ConstructingObjectParser.optionalConstructorArg(), DELETE_SEARCHABLE_SNAPSHOT_FIELD);
@@ -41,16 +46,12 @@ public class DeleteAction implements LifecycleAction {
 
     private final boolean deleteSearchableSnapshot;
 
-    public DeleteAction() {
-        this(true);
-    }
-
-    public DeleteAction(boolean deleteSearchableSnapshot) {
+    private DeleteAction(boolean deleteSearchableSnapshot) {
         this.deleteSearchableSnapshot = deleteSearchableSnapshot;
     }
 
-    public DeleteAction(StreamInput in) throws IOException {
-        this.deleteSearchableSnapshot = in.readBoolean();
+    public static DeleteAction readFrom(StreamInput in) throws IOException {
+        return in.readBoolean() ? WITH_SNAPSHOT_DELETE : NO_SNAPSHOT_DELETE;
     }
 
     @Override
@@ -79,18 +80,37 @@ public class DeleteAction implements LifecycleAction {
     @Override
     public List<Step> toSteps(Client client, String phase, Step.StepKey nextStepKey) {
         Step.StepKey waitForNoFollowerStepKey = new Step.StepKey(phase, NAME, WaitForNoFollowersStep.NAME);
+        Step.StepKey waitTimeSeriesEndTimePassesKey = new Step.StepKey(phase, NAME, WaitUntilTimeSeriesEndTimePassesStep.NAME);
         Step.StepKey deleteStepKey = new Step.StepKey(phase, NAME, DeleteStep.NAME);
         Step.StepKey cleanSnapshotKey = new Step.StepKey(phase, NAME, CleanupSnapshotStep.NAME);
 
         if (deleteSearchableSnapshot) {
-            WaitForNoFollowersStep waitForNoFollowersStep = new WaitForNoFollowersStep(waitForNoFollowerStepKey, cleanSnapshotKey, client);
+            WaitForNoFollowersStep waitForNoFollowersStep = new WaitForNoFollowersStep(
+                waitForNoFollowerStepKey,
+                waitTimeSeriesEndTimePassesKey,
+                client
+            );
+            WaitUntilTimeSeriesEndTimePassesStep waitUntilTimeSeriesEndTimeStep = new WaitUntilTimeSeriesEndTimePassesStep(
+                waitTimeSeriesEndTimePassesKey,
+                cleanSnapshotKey,
+                Instant::now
+            );
             CleanupSnapshotStep cleanupSnapshotStep = new CleanupSnapshotStep(cleanSnapshotKey, deleteStepKey, client);
             DeleteStep deleteStep = new DeleteStep(deleteStepKey, nextStepKey, client);
-            return Arrays.asList(waitForNoFollowersStep, cleanupSnapshotStep, deleteStep);
+            return List.of(waitForNoFollowersStep, waitUntilTimeSeriesEndTimeStep, cleanupSnapshotStep, deleteStep);
         } else {
-            WaitForNoFollowersStep waitForNoFollowersStep = new WaitForNoFollowersStep(waitForNoFollowerStepKey, deleteStepKey, client);
+            WaitForNoFollowersStep waitForNoFollowersStep = new WaitForNoFollowersStep(
+                waitForNoFollowerStepKey,
+                waitTimeSeriesEndTimePassesKey,
+                client
+            );
+            WaitUntilTimeSeriesEndTimePassesStep waitUntilTimeSeriesEndTimeStep = new WaitUntilTimeSeriesEndTimePassesStep(
+                waitTimeSeriesEndTimePassesKey,
+                deleteStepKey,
+                Instant::now
+            );
             DeleteStep deleteStep = new DeleteStep(deleteStepKey, nextStepKey, client);
-            return Arrays.asList(waitForNoFollowersStep, deleteStep);
+            return List.of(waitForNoFollowersStep, waitUntilTimeSeriesEndTimeStep, deleteStep);
         }
     }
 
