@@ -6,19 +6,17 @@
  */
 package org.elasticsearch.xpack.core.rollup.action;
 
-import org.elasticsearch.common.xcontent.ParseField;
 import org.elasticsearch.common.io.stream.StreamInput;
 import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.common.io.stream.Writeable;
-import org.elasticsearch.common.xcontent.ToXContentObject;
-import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.ParseField;
+import org.elasticsearch.xcontent.ToXContentObject;
+import org.elasticsearch.xcontent.XContentBuilder;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * Represents the rollup capabilities of a non-rollup index.  E.g. what values/aggregations
@@ -35,15 +33,12 @@ public class RollableIndexCaps implements Writeable, ToXContentObject {
 
     public RollableIndexCaps(String indexName, List<RollupJobCaps> caps) {
         this.indexName = indexName;
-        this.jobCaps = Collections.unmodifiableList(Objects.requireNonNull(caps)
-            .stream()
-            .sorted(Comparator.comparing(RollupJobCaps::getJobID))
-            .collect(Collectors.toList()));
+        this.jobCaps = caps.stream().sorted(Comparator.comparing(RollupJobCaps::getJobID)).toList();
     }
 
     public RollableIndexCaps(StreamInput in) throws IOException {
         this.indexName = in.readString();
-        this.jobCaps = in.readList(RollupJobCaps::new);
+        this.jobCaps = in.readCollectionAsList(RollupJobCaps::new);
     }
 
     public String getIndexName() {
@@ -57,14 +52,14 @@ public class RollableIndexCaps implements Writeable, ToXContentObject {
     @Override
     public void writeTo(StreamOutput out) throws IOException {
         out.writeString(indexName);
-        out.writeList(jobCaps);
+        out.writeCollection(jobCaps);
     }
 
     @Override
     public XContentBuilder toXContent(XContentBuilder builder, Params params) throws IOException {
         builder.startObject(indexName);
         {
-            builder.field(ROLLUP_JOBS.getPreferredName(), jobCaps);
+            builder.xContentList(ROLLUP_JOBS.getPreferredName(), jobCaps);
         }
         builder.endObject();
         return builder;
@@ -82,8 +77,7 @@ public class RollableIndexCaps implements Writeable, ToXContentObject {
 
         RollableIndexCaps that = (RollableIndexCaps) other;
 
-        return Objects.equals(this.jobCaps, that.jobCaps)
-            && Objects.equals(this.indexName, that.indexName);
+        return Objects.equals(this.jobCaps, that.jobCaps) && Objects.equals(this.indexName, that.indexName);
     }
 
     @Override
