@@ -15,18 +15,24 @@ import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.FailedNodeException;
 import org.elasticsearch.action.TaskOperationFailure;
 import org.elasticsearch.action.support.ActionFilters;
+import org.elasticsearch.action.support.master.AcknowledgedRequest;
+import org.elasticsearch.action.support.tasks.BaseTasksResponse;
 import org.elasticsearch.action.support.tasks.TransportTasksAction;
-import org.elasticsearch.client.Client;
+import org.elasticsearch.client.internal.Client;
+import org.elasticsearch.client.internal.ParentTaskAssigningClient;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.service.ClusterService;
-import org.elasticsearch.core.Nullable;
 import org.elasticsearch.common.Strings;
-import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.settings.Settings;
+import org.elasticsearch.core.Nullable;
+import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.index.IndexNotFoundException;
+import org.elasticsearch.injection.guice.Inject;
 import org.elasticsearch.persistent.PersistentTasksCustomMetadata;
 import org.elasticsearch.persistent.PersistentTasksCustomMetadata.Assignment;
+import org.elasticsearch.tasks.CancellableTask;
 import org.elasticsearch.tasks.Task;
+import org.elasticsearch.tasks.TaskId;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
 import org.elasticsearch.xpack.core.transform.action.GetTransformStatsAction;
@@ -40,6 +46,7 @@ import org.elasticsearch.xpack.core.transform.transforms.TransformStoredDoc;
 import org.elasticsearch.xpack.transform.TransformServices;
 import org.elasticsearch.xpack.transform.checkpoint.TransformCheckpointService;
 import org.elasticsearch.xpack.transform.persistence.TransformConfigManager;
+import org.elasticsearch.xpack.transform.transforms.TransformHealthChecker;
 import org.elasticsearch.xpack.transform.transforms.TransformNodeAssignments;
 import org.elasticsearch.xpack.transform.transforms.TransformNodes;
 import org.elasticsearch.xpack.transform.transforms.TransformTask;
@@ -58,6 +65,9 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
 
     private static final Logger logger = LogManager.getLogger(TransportGetTransformStatsAction.class);
 
+    // default timeout share to receive checkpoint info, with the default of 30s: 30s * 0.8 = 24s
+    private static final double CHECKPOINT_INFO_TIMEOUT_SHARE = 0.8;
+
     private final TransformConfigManager transformConfigManager;
     private final TransformCheckpointService transformCheckpointService;
     private final Client client;
@@ -69,24 +79,21 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
         ActionFilters actionFilters,
         ClusterService clusterService,
         TransformServices transformServices,
+        ThreadPool threadPool,
         Client client,
         Settings settings
     ) {
-        this(GetTransformStatsAction.NAME, transportService, actionFilters, clusterService, transformServices, client, settings);
-    }
-
-    protected TransportGetTransformStatsAction(
-        String name,
-        TransportService transportService,
-        ActionFilters actionFilters,
-        ClusterService clusterService,
-        TransformServices transformServices,
-        Client client,
-        Settings settings
-    ) {
-        super(name, clusterService, transportService, actionFilters, Request::new, Response::new, Response::new, ThreadPool.Names.SAME);
-        this.transformConfigManager = transformServices.getConfigManager();
-        this.transformCheckpointService = transformServices.getCheckpointService();
+        super(
+            GetTransformStatsAction.NAME,
+            clusterService,
+            transportService,
+            actionFilters,
+            Request::new,
+            Response::new,
+            threadPool.executor(ThreadPool.Names.MANAGEMENT)
+        );
+        this.transformConfigManager = transformServices.configManager();
+        this.transformCheckpointService = transformServices.checkpointService();
         this.client = client;
         this.nodeSettings = settings;
     }
@@ -101,70 +108,113 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
         List<TransformStats> responses = tasks.stream()
             .flatMap(r -> r.getTransformsStats().stream())
             .sorted(Comparator.comparing(TransformStats::getId))
-            .collect(Collectors.toList());
+            .toList();
         List<ElasticsearchException> allFailedNodeExceptions = new ArrayList<>(failedNodeExceptions);
-        allFailedNodeExceptions.addAll(tasks.stream().flatMap(r -> r.getNodeFailures().stream()).collect(Collectors.toList()));
+        tasks.stream().map(BaseTasksResponse::getNodeFailures).forEach(allFailedNodeExceptions::addAll);
         return new Response(responses, responses.size(), taskOperationFailures, allFailedNodeExceptions);
     }
 
     @Override
-    protected void taskOperation(Request request, TransformTask task, ActionListener<Response> listener) {
-        // Little extra insurance, make sure we only return transforms that aren't cancelled
-        ClusterState state = clusterService.state();
-        String nodeId = state.nodes().getLocalNode().getId();
-        if (task.isCancelled() == false) {
-            task.getCheckpointingInfo(
-                transformCheckpointService,
-                ActionListener.wrap(
-                    checkpointingInfo -> listener.onResponse(
-                        new Response(Collections.singletonList(deriveStats(task, checkpointingInfo)), 1L)
-                    ),
-                    e -> {
-                        logger.warn("Failed to retrieve checkpointing info for transform [" + task.getTransformId() + "]", e);
-                        listener.onResponse(
-                            new Response(
-                                Collections.singletonList(deriveStats(task, null)),
-                                1L,
-                                Collections.emptyList(),
-                                Collections.singletonList(new FailedNodeException(nodeId, "Failed to retrieve checkpointing info", e))
-                            )
-                        );
-                    }
-                )
-            );
-        } else {
-            listener.onResponse(new Response(Collections.emptyList(), 0L));
+    protected void taskOperation(
+        CancellableTask actionTask,
+        Request request,
+        TransformTask transformTask,
+        ActionListener<Response> listener
+    ) {
+        ClusterState clusterState = clusterService.state();
+        String nodeId = clusterState.nodes().getLocalNode().getId();
+        final TaskId parentTaskId = new TaskId(nodeId, actionTask.getId());
+
+        // If the _stats request is cancelled there is no point in continuing this work on the task level
+        if (actionTask.notifyIfCancelled(listener)) {
+            return;
         }
+        // Little extra insurance, make sure we only return transforms that aren't cancelled
+        if (transformTask.isCancelled()) {
+            listener.onResponse(new Response(Collections.emptyList()));
+            return;
+        }
+
+        if (request.isBasic()) {
+            ActionListener.completeWith(
+                listener,
+                () -> new Response(Collections.singletonList(deriveStats(transformTask, transformTask.deriveBasicCheckpointingInfo())))
+            );
+            return;
+        }
+
+        transformTask.getCheckpointingInfo(
+            transformCheckpointService,
+            new ParentTaskAssigningClient(client, parentTaskId),
+            ActionListener.wrap(
+                checkpointingInfo -> listener.onResponse(
+                    new Response(Collections.singletonList(deriveStats(transformTask, checkpointingInfo)))
+                ),
+                e -> {
+                    logger.warn("Failed to retrieve checkpointing info for transform [" + transformTask.getTransformId() + "]", e);
+                    listener.onResponse(
+                        new Response(
+                            Collections.singletonList(deriveStats(transformTask, null)),
+                            1L,
+                            Collections.emptyList(),
+                            Collections.singletonList(new FailedNodeException(nodeId, "Failed to retrieve checkpointing info", e))
+                        )
+                    );
+                }
+            ),
+            // at this point the transport already spend some time budget in `doExecute`, it is hard to tell what is left:
+            // recording the time spend would be complex and crosses machine boundaries, that's why we use a heuristic here
+            TimeValue.timeValueMillis(
+                (long) ((request.getTimeout() != null ? request.getTimeout().millis() : AcknowledgedRequest.DEFAULT_ACK_TIMEOUT.millis())
+                    * CHECKPOINT_INFO_TIMEOUT_SHARE)
+            )
+        );
     }
 
     @Override
     protected void doExecute(Task task, Request request, ActionListener<Response> finalListener) {
+        final TaskId parentTaskId = new TaskId(clusterService.localNode().getId(), task.getId());
         final ClusterState clusterState = clusterService.state();
         TransformNodes.warnIfNoTransformNodes(clusterState);
 
         transformConfigManager.expandTransformIds(
             request.getId(),
             request.getPageParams(),
+            request.getTimeout(),
             request.isAllowNoMatch(),
             ActionListener.wrap(hitsAndIds -> {
                 boolean hasAnyTransformNode = TransformNodes.hasAnyTransformNode(clusterState.getNodes());
                 boolean requiresRemote = hitsAndIds.v2().v2().stream().anyMatch(config -> config.getSource().requiresRemoteCluster());
-                if (hasAnyTransformNode && TransformNodes.redirectToAnotherNodeIfNeeded(
-                        clusterState, nodeSettings, requiresRemote, transportService, actionName, request, Response::new, finalListener)) {
+                if (hasAnyTransformNode
+                    && TransformNodes.redirectToAnotherNodeIfNeeded(
+                        clusterState,
+                        nodeSettings,
+                        requiresRemote,
+                        transportService,
+                        actionName,
+                        request,
+                        Response::new,
+                        finalListener
+                    )) {
                     return;
                 }
 
                 request.setExpandedIds(hitsAndIds.v2().v1());
-                final TransformNodeAssignments transformNodeAssignments =
-                    TransformNodes.transformTaskNodes(hitsAndIds.v2().v1(), clusterState);
+                final TransformNodeAssignments transformNodeAssignments = TransformNodes.transformTaskNodes(
+                    hitsAndIds.v2().v1(),
+                    clusterState
+                );
 
                 ActionListener<Response> doExecuteListener = ActionListener.wrap(response -> {
-                    PersistentTasksCustomMetadata tasksInProgress = clusterState.getMetadata().custom(PersistentTasksCustomMetadata.TYPE);
+                    PersistentTasksCustomMetadata tasksInProgress = clusterState.getMetadata()
+                        .getProject()
+                        .custom(PersistentTasksCustomMetadata.TYPE);
                     if (tasksInProgress != null) {
                         // Mutates underlying state object with the assigned node attributes
                         response.getTransformsStats().forEach(dtsasi -> setNodeAttributes(dtsasi, tasksInProgress, clusterState));
                     }
                     collectStatsForTransformsWithoutTasks(
+                        parentTaskId,
                         request,
                         response,
                         transformNodeAssignments.getWaitingForAssignment(),
@@ -187,34 +237,32 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
                     request.setNodes(transformNodeAssignments.getExecutorNodes().toArray(new String[0]));
                     super.doExecute(task, request, doExecuteListener);
                 } else {
-                    doExecuteListener.onResponse(new Response(Collections.emptyList(), 0L));
+                    doExecuteListener.onResponse(new Response(Collections.emptyList()));
                 }
-            },
-                e -> {
-                    // If the index to search, or the individual config is not there, just return empty
-                    if (e instanceof ResourceNotFoundException) {
-                        finalListener.onResponse(new Response(Collections.emptyList(), 0L));
-                    } else {
-                        finalListener.onFailure(e);
-                    }
+            }, e -> {
+                // If the index to search, or the individual config is not there, just return empty
+                if (e instanceof ResourceNotFoundException) {
+                    finalListener.onResponse(new Response(Collections.emptyList()));
+                } else {
+                    finalListener.onFailure(e);
                 }
-            )
+            })
         );
     }
 
     private static void setNodeAttributes(
         TransformStats transformStats,
         PersistentTasksCustomMetadata persistentTasksCustomMetadata,
-        ClusterState state
+        ClusterState clusterState
     ) {
         var pTask = persistentTasksCustomMetadata.getTask(transformStats.getId());
         if (pTask != null) {
-            transformStats.setNode(NodeAttributes.fromDiscoveryNode(state.nodes().get(pTask.getExecutorNode())));
+            transformStats.setNode(NodeAttributes.fromDiscoveryNode(clusterState.nodes().get(pTask.getExecutorNode())));
         }
     }
 
-    static TransformStats deriveStats(TransformTask task, @Nullable TransformCheckpointingInfo checkpointingInfo) {
-        TransformState transformState = task.getState();
+    static TransformStats deriveStats(TransformTask transformTask, @Nullable TransformCheckpointingInfo checkpointingInfo) {
+        TransformState transformState = transformTask.getState();
         TransformStats.State derivedState = TransformStats.State.fromComponents(
             transformState.getTaskState(),
             transformState.getIndexerState()
@@ -225,18 +273,25 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
             && derivedState.equals(TransformStats.State.FAILED) == false) {
             derivedState = TransformStats.State.STOPPING;
             reason = Strings.isNullOrEmpty(reason) ? "transform is set to stop at the next checkpoint" : reason;
+        } else if (derivedState.equals(TransformStats.State.STARTED) && transformTask.getContext().isWaitingForIndexToUnblock()) {
+            derivedState = TransformStats.State.WAITING;
+            reason = Strings.isNullOrEmpty(reason) ? "transform is paused while destination index is blocked" : reason;
+        } else if (derivedState.equals(TransformStats.State.STOPPING) && transformTask.isRetryingStartup()) {
+            derivedState = TransformStats.State.STARTED;
         }
         return new TransformStats(
-            task.getTransformId(),
+            transformTask.getTransformId(),
             derivedState,
             reason,
             null,
-            task.getStats(),
-            checkpointingInfo == null ? TransformCheckpointingInfo.EMPTY : checkpointingInfo
+            transformTask.getStats(),
+            checkpointingInfo == null ? TransformCheckpointingInfo.EMPTY : checkpointingInfo,
+            TransformHealthChecker.checkTransform(transformTask, transformState.getAuthState())
         );
     }
 
     private void collectStatsForTransformsWithoutTasks(
+        TaskId parentTaskId,
         Request request,
         Response response,
         Set<String> transformsWaitingForAssignment,
@@ -249,7 +304,7 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
             return;
         }
         Set<String> transformsWithoutTasks = new HashSet<>(request.getExpandedIds());
-        transformsWithoutTasks.removeAll(response.getTransformsStats().stream().map(TransformStats::getId).collect(Collectors.toList()));
+        response.getTransformsStats().stream().map(TransformStats::getId).forEach(transformsWithoutTasks::remove);
 
         // Small assurance that we are at least below the max. Terms search has a hard limit of 10k, we should at least be below that.
         assert transformsWithoutTasks.size() <= Request.MAX_SIZE_RETURN;
@@ -261,6 +316,8 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
             // copy the list as it might be immutable
             List<TransformStats> allStateAndStats = new ArrayList<>(response.getTransformsStats());
             addCheckpointingInfoForTransformsWithoutTasks(
+                parentTaskId,
+                request,
                 allStateAndStats,
                 statsForTransformsWithoutTasks,
                 transformsWaitingForAssignment,
@@ -290,31 +347,45 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
             }
         });
 
-        transformConfigManager.getTransformStoredDocs(transformsWithoutTasks, searchStatsListener);
+        transformConfigManager.getTransformStoredDocs(transformsWithoutTasks, request.getTimeout(), searchStatsListener);
     }
 
-    private void populateSingleStoppedTransformStat(TransformStoredDoc transform, ActionListener<TransformCheckpointingInfo> listener) {
-        transformCheckpointService.getCheckpointingInfo(
-            client,
-            transform.getId(),
-            transform.getTransformState().getCheckpoint(),
-            transform.getTransformState().getPosition(),
-            transform.getTransformState().getProgress(),
-            ActionListener.wrap(infoBuilder -> listener.onResponse(infoBuilder.build()), e -> {
-                logger.warn("Failed to retrieve checkpointing info for transform [" + transform.getId() + "]", e);
-                listener.onResponse(TransformCheckpointingInfo.EMPTY);
-            })
-        );
+    private void populateSingleStoppedTransformStat(
+        TransformStoredDoc transform,
+        TaskId parentTaskId,
+        Request request,
+        ActionListener<TransformCheckpointingInfo> listener
+    ) {
+        if (request.isBasic()) {
+            ActionListener.completeWith(
+                listener,
+                () -> TransformCheckpointService.deriveBasicCheckpointingInfo(transform.getTransformState())
+            );
+        } else {
+            transformCheckpointService.getCheckpointingInfo(
+                new ParentTaskAssigningClient(client, parentTaskId),
+                request.getTimeout(),
+                transform.getId(),
+                transform.getTransformState().getCheckpoint(),
+                transform.getTransformState().getPosition(),
+                transform.getTransformState().getProgress(),
+                ActionListener.wrap(infoBuilder -> listener.onResponse(infoBuilder.build()), e -> {
+                    logger.warn("Failed to retrieve checkpointing info for transform [" + transform.getId() + "]", e);
+                    listener.onResponse(TransformCheckpointingInfo.EMPTY);
+                })
+            );
+        }
     }
 
     private void addCheckpointingInfoForTransformsWithoutTasks(
+        TaskId parentTaskId,
+        Request request,
         List<TransformStats> allStateAndStats,
         List<TransformStoredDoc> statsForTransformsWithoutTasks,
         Set<String> transformsWaitingForAssignment,
         ClusterState clusterState,
         ActionListener<Void> listener
     ) {
-
         if (statsForTransformsWithoutTasks.isEmpty()) {
             // No work to do, but we must respond to the listener
             listener.onResponse(null);
@@ -324,40 +395,52 @@ public class TransportGetTransformStatsAction extends TransportTasksAction<Trans
         AtomicInteger numberRemaining = new AtomicInteger(statsForTransformsWithoutTasks.size());
         AtomicBoolean isExceptionReported = new AtomicBoolean(false);
 
-        statsForTransformsWithoutTasks.forEach(stat -> populateSingleStoppedTransformStat(stat, ActionListener.wrap(checkpointingInfo -> {
-            synchronized (allStateAndStats) {
-                if (transformsWaitingForAssignment.contains(stat.getId())) {
-                    Assignment assignment = TransformNodes.getAssignment(stat.getId(), clusterState);
-                    allStateAndStats.add(
-                        new TransformStats(
+        statsForTransformsWithoutTasks.forEach(
+            stat -> populateSingleStoppedTransformStat(stat, parentTaskId, request, ActionListener.wrap(checkpointingInfo -> {
+                synchronized (allStateAndStats) {
+                    if (transformsWaitingForAssignment.contains(stat.getId())) {
+                        Assignment assignment = TransformNodes.getAssignment(stat.getId(), clusterState);
+                        allStateAndStats.add(
+                            new TransformStats(
+                                stat.getId(),
+                                TransformStats.State.WAITING,
+                                assignment.getExplanation(),
+                                null,
+                                stat.getTransformStats(),
+                                checkpointingInfo,
+                                TransformHealthChecker.checkUnassignedTransform(
+                                    stat.getId(),
+                                    clusterState,
+                                    stat.getTransformState().getAuthState()
+                                )
+                            )
+                        );
+                    } else {
+                        final boolean transformPersistentTaskIsStillRunning = TransformTask.getTransformTask(
                             stat.getId(),
-                            TransformStats.State.WAITING,
-                            assignment.getExplanation(),
-                            null,
-                            stat.getTransformStats(),
-                            checkpointingInfo
-                        )
-                    );
-                } else {
-                    allStateAndStats.add(
-                        new TransformStats(
-                            stat.getId(),
-                            TransformStats.State.STOPPED,
-                            null,
-                            null,
-                            stat.getTransformStats(),
-                            checkpointingInfo
-                        )
-                    );
+                            clusterState
+                        ) != null;
+                        allStateAndStats.add(
+                            new TransformStats(
+                                stat.getId(),
+                                transformPersistentTaskIsStillRunning ? TransformStats.State.STOPPING : TransformStats.State.STOPPED,
+                                null,
+                                null,
+                                stat.getTransformStats(),
+                                checkpointingInfo,
+                                TransformHealthChecker.checkTransform(stat.getTransformState().getAuthState())
+                            )
+                        );
+                    }
                 }
-            }
-            if (numberRemaining.decrementAndGet() == 0) {
-                listener.onResponse(null);
-            }
-        }, e -> {
-            if (isExceptionReported.compareAndSet(false, true)) {
-                listener.onFailure(e);
-            }
-        })));
+                if (numberRemaining.decrementAndGet() == 0) {
+                    listener.onResponse(null);
+                }
+            }, e -> {
+                if (isExceptionReported.compareAndSet(false, true)) {
+                    listener.onFailure(e);
+                }
+            }))
+        );
     }
 }
