@@ -7,38 +7,51 @@
 
 package org.elasticsearch.xpack.transform.transforms.pivot;
 
-import org.apache.lucene.search.TotalHits;
-import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.ActionRequest;
 import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.action.ActionType;
+import org.elasticsearch.action.index.IndexRequest;
 import org.elasticsearch.action.search.SearchRequest;
 import org.elasticsearch.action.search.SearchResponse;
-import org.elasticsearch.action.search.SearchResponseSections;
 import org.elasticsearch.action.search.ShardSearchFailure;
-import org.elasticsearch.client.Client;
+import org.elasticsearch.aggregations.AggregationsPlugin;
+import org.elasticsearch.client.internal.Client;
 import org.elasticsearch.common.ValidationException;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.DeprecationHandler;
-import org.elasticsearch.common.xcontent.NamedXContentRegistry;
-import org.elasticsearch.common.xcontent.XContentParser;
-import org.elasticsearch.common.xcontent.XContentType;
-import org.elasticsearch.common.xcontent.json.JsonXContent;
+import org.elasticsearch.core.Strings;
+import org.elasticsearch.core.Tuple;
 import org.elasticsearch.index.IndexNotFoundException;
 import org.elasticsearch.license.XPackLicenseState;
-import org.elasticsearch.search.SearchHit;
 import org.elasticsearch.search.SearchHits;
 import org.elasticsearch.search.SearchModule;
+import org.elasticsearch.search.SearchResponseUtils;
+import org.elasticsearch.search.aggregations.InternalAggregations;
+import org.elasticsearch.search.aggregations.bucket.composite.CompositeAggregation;
+import org.elasticsearch.search.aggregations.bucket.composite.InternalComposite;
 import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.client.NoOpClient;
+import org.elasticsearch.threadpool.TestThreadPool;
+import org.elasticsearch.threadpool.ThreadPool;
+import org.elasticsearch.xcontent.NamedXContentRegistry;
+import org.elasticsearch.xcontent.XContentParser;
+import org.elasticsearch.xcontent.XContentParserConfiguration;
+import org.elasticsearch.xcontent.XContentType;
+import org.elasticsearch.xcontent.json.JsonXContent;
+import org.elasticsearch.xpack.core.transform.TransformConfigVersion;
+import org.elasticsearch.xpack.core.transform.TransformDeprecations;
+import org.elasticsearch.xpack.core.transform.TransformField;
 import org.elasticsearch.xpack.core.transform.transforms.SettingsConfig;
+import org.elasticsearch.xpack.core.transform.transforms.SettingsConfigTests;
 import org.elasticsearch.xpack.core.transform.transforms.SourceConfig;
+import org.elasticsearch.xpack.core.transform.transforms.TransformIndexerStats;
+import org.elasticsearch.xpack.core.transform.transforms.TransformProgress;
 import org.elasticsearch.xpack.core.transform.transforms.pivot.AggregationConfig;
 import org.elasticsearch.xpack.core.transform.transforms.pivot.AggregationConfigTests;
 import org.elasticsearch.xpack.core.transform.transforms.pivot.GroupConfig;
 import org.elasticsearch.xpack.core.transform.transforms.pivot.GroupConfigTests;
 import org.elasticsearch.xpack.core.transform.transforms.pivot.PivotConfig;
+import org.elasticsearch.xpack.core.transform.transforms.pivot.PivotConfigTests;
 import org.elasticsearch.xpack.spatial.SpatialPlugin;
 import org.elasticsearch.xpack.transform.Transform;
 import org.elasticsearch.xpack.transform.transforms.Function;
@@ -49,7 +62,9 @@ import org.junit.Before;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
@@ -57,20 +72,29 @@ import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static java.util.Collections.emptyMap;
+import static org.elasticsearch.xpack.transform.transforms.common.AbstractCompositeAggFunction.COMPOSITE_AGGREGATION_NAME;
 import static org.hamcrest.CoreMatchers.instanceOf;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.Matchers.contains;
+import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
+import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 public class PivotTests extends ESTestCase {
 
     private NamedXContentRegistry namedXContentRegistry;
+    private TestThreadPool threadPool;
     private Client client;
 
     // exclude aggregations from the analytics module as we don't have parser for it here
-    private final Set<String> externalAggregations = Collections.singleton("top_metrics");
+    private final Set<String> externalAggregations = Set.of("top_metrics", "boxplot");
 
     private final Set<String> supportedAggregations = Stream.of(AggregationType.values())
         .map(AggregationType::getName)
@@ -81,21 +105,22 @@ public class PivotTests extends ESTestCase {
     @Before
     public void registerAggregationNamedObjects() throws Exception {
         // register aggregations as NamedWriteable
-        SearchModule searchModule = new SearchModule(Settings.EMPTY, List.of(new TestSpatialPlugin()));
+        SearchModule searchModule = new SearchModule(Settings.EMPTY, List.of(new TestSpatialPlugin(), new AggregationsPlugin()));
         namedXContentRegistry = new NamedXContentRegistry(searchModule.getNamedXContents());
     }
 
     @Before
     public void setupClient() {
-        if (client != null) {
-            client.close();
+        if (threadPool != null) {
+            threadPool.close();
         }
-        client = new MyMockClient(getTestName());
+        threadPool = createThreadPool();
+        client = new MyMockClient(threadPool);
     }
 
     @After
     public void tearDownClient() {
-        client.close();
+        threadPool.close();
     }
 
     @Override
@@ -105,14 +130,14 @@ public class PivotTests extends ESTestCase {
 
     public void testValidateExistingIndex() throws Exception {
         SourceConfig source = new SourceConfig("existing_source_index");
-        Function pivot = new Pivot(getValidPivotConfig(), new SettingsConfig(), Version.CURRENT, Collections.emptySet());
+        Function pivot = new Pivot(getValidPivotConfig(), SettingsConfig.EMPTY, TransformConfigVersion.CURRENT, Collections.emptySet());
 
         assertValidTransform(client, source, pivot);
     }
 
     public void testValidateNonExistingIndex() throws Exception {
         SourceConfig source = new SourceConfig("non_existing_source_index");
-        Function pivot = new Pivot(getValidPivotConfig(), new SettingsConfig(), Version.CURRENT, Collections.emptySet());
+        Function pivot = new Pivot(getValidPivotConfig(), SettingsConfig.EMPTY, TransformConfigVersion.CURRENT, Collections.emptySet());
 
         assertInvalidTransform(client, source, pivot);
     }
@@ -122,21 +147,21 @@ public class PivotTests extends ESTestCase {
 
         Function pivot = new Pivot(
             new PivotConfig(GroupConfigTests.randomGroupConfig(), getValidAggregationConfig(), expectedPageSize),
-            new SettingsConfig(),
-            Version.CURRENT,
+            SettingsConfig.EMPTY,
+            TransformConfigVersion.CURRENT,
             Collections.emptySet()
         );
         assertThat(pivot.getInitialPageSize(), equalTo(expectedPageSize));
 
         pivot = new Pivot(
             new PivotConfig(GroupConfigTests.randomGroupConfig(), getValidAggregationConfig(), null),
-            new SettingsConfig(),
-            Version.CURRENT,
+            SettingsConfig.EMPTY,
+            TransformConfigVersion.CURRENT,
             Collections.emptySet()
         );
         assertThat(pivot.getInitialPageSize(), equalTo(Transform.DEFAULT_INITIAL_MAX_PAGE_SEARCH_SIZE));
 
-        assertWarnings("[max_page_search_size] is deprecated inside pivot please use settings instead");
+        assertWarnings(TransformDeprecations.ACTION_MAX_PAGE_SEARCH_SIZE_IS_DEPRECATED);
     }
 
     public void testSearchFailure() throws Exception {
@@ -144,7 +169,7 @@ public class PivotTests extends ESTestCase {
         // search has failures although they might just be temporary
         SourceConfig source = new SourceConfig("existing_source_index_with_failing_shards");
 
-        Function pivot = new Pivot(getValidPivotConfig(), new SettingsConfig(), Version.CURRENT, Collections.emptySet());
+        Function pivot = new Pivot(getValidPivotConfig(), SettingsConfig.EMPTY, TransformConfigVersion.CURRENT, Collections.emptySet());
 
         assertInvalidTransform(client, source, pivot);
     }
@@ -157,8 +182,8 @@ public class PivotTests extends ESTestCase {
 
             Function pivot = new Pivot(
                 getValidPivotConfig(aggregationConfig),
-                new SettingsConfig(),
-                Version.CURRENT,
+                SettingsConfig.EMPTY,
+                TransformConfigVersion.CURRENT,
                 Collections.emptySet()
             );
             assertValidTransform(client, source, pivot);
@@ -171,8 +196,8 @@ public class PivotTests extends ESTestCase {
 
             Function pivot = new Pivot(
                 getValidPivotConfig(aggregationConfig),
-                new SettingsConfig(),
-                Version.CURRENT,
+                SettingsConfig.EMPTY,
+                TransformConfigVersion.CURRENT,
                 Collections.emptySet()
             );
 
@@ -188,11 +213,24 @@ public class PivotTests extends ESTestCase {
     }
 
     public void testGetPerformanceCriticalFields() throws IOException {
-        String groupConfigJson = "{"
-            + "\"group-A\": { \"terms\": { \"field\": \"field-A\" } },"
-            + "\"group-B\": { \"terms\": { \"field\": \"field-B\" } },"
-            + "\"group-C\": { \"terms\": { \"field\": \"field-C\" } }"
-            + "}";
+        String groupConfigJson = """
+            {
+              "group-A": {
+                "terms": {
+                  "field": "field-A"
+                }
+              },
+              "group-B": {
+                "terms": {
+                  "field": "field-B"
+                }
+              },
+              "group-C": {
+                "terms": {
+                  "field": "field-C"
+                }
+              }
+            }""";
         GroupConfig groupConfig;
         try (XContentParser parser = createParser(JsonXContent.jsonXContent, groupConfigJson)) {
             groupConfig = GroupConfig.fromXContent(parser, false);
@@ -200,13 +238,147 @@ public class PivotTests extends ESTestCase {
         assertThat(groupConfig.validate(null), is(nullValue()));
 
         PivotConfig pivotConfig = new PivotConfig(groupConfig, AggregationConfigTests.randomAggregationConfig(), null);
-        Function pivot = new Pivot(pivotConfig, new SettingsConfig(), Version.CURRENT, Collections.emptySet());
+        Function pivot = new Pivot(pivotConfig, SettingsConfig.EMPTY, TransformConfigVersion.CURRENT, Collections.emptySet());
         assertThat(pivot.getPerformanceCriticalFields(), contains("field-A", "field-B", "field-C"));
     }
 
+    public void testProcessSearchResponse() {
+        Function pivot = new Pivot(
+            PivotConfigTests.randomPivotConfig(),
+            SettingsConfigTests.randomSettingsConfig(),
+            TransformConfigVersion.CURRENT,
+            Collections.emptySet()
+        ) {
+            @Override
+            public Tuple<Stream<IndexRequest>, Map<String, Object>> processSearchResponse(
+                SearchResponse searchResponse,
+                String destinationIndex,
+                String destinationPipeline,
+                Map<String, String> fieldTypeMap,
+                TransformIndexerStats stats,
+                TransformProgress progress
+            ) {
+                try {
+                    return super.processSearchResponse(
+                        searchResponse,
+                        destinationIndex,
+                        destinationPipeline,
+                        fieldTypeMap,
+                        stats,
+                        progress
+                    );
+                } finally {
+                    searchResponse.decRef();
+                }
+            }
+        };
+
+        InternalAggregations aggs = null;
+        assertThat(pivot.processSearchResponse(searchResponseFromAggs(aggs), null, null, null, null, null), is(nullValue()));
+
+        aggs = InternalAggregations.from(List.of());
+        assertThat(pivot.processSearchResponse(searchResponseFromAggs(aggs), null, null, null, null, null), is(nullValue()));
+
+        InternalComposite compositeAgg = mock(InternalComposite.class);
+        when(compositeAgg.getName()).thenReturn("_transform");
+        when(compositeAgg.getBuckets()).thenReturn(List.of());
+        when(compositeAgg.afterKey()).thenReturn(null);
+        aggs = InternalAggregations.from(List.of(compositeAgg));
+        assertThat(pivot.processSearchResponse(searchResponseFromAggs(aggs), null, null, null, null, null), is(nullValue()));
+
+        when(compositeAgg.getBuckets()).thenReturn(List.of());
+        when(compositeAgg.afterKey()).thenReturn(Map.of("key", "value"));
+        aggs = InternalAggregations.from(List.of(compositeAgg));
+        // Empty bucket list is *not* a stop condition for composite agg processing.
+        assertThat(pivot.processSearchResponse(searchResponseFromAggs(aggs), null, null, null, null, null), is(notNullValue()));
+
+        InternalComposite.InternalBucket bucket = mock(InternalComposite.InternalBucket.class);
+        List<InternalComposite.InternalBucket> buckets = List.of(bucket);
+        doReturn(buckets).when(compositeAgg).getBuckets();
+        when(compositeAgg.afterKey()).thenReturn(null);
+        aggs = InternalAggregations.from(List.of(compositeAgg));
+        assertThat(pivot.processSearchResponse(searchResponseFromAggs(aggs), null, null, null, null, null), is(nullValue()));
+    }
+
+    public void testPreviewForEmptyAggregation() throws Exception {
+        Function pivot = new Pivot(
+            PivotConfigTests.randomPivotConfig(),
+            SettingsConfigTests.randomSettingsConfig(),
+            TransformConfigVersion.CURRENT,
+            Collections.emptySet()
+        );
+
+        CountDownLatch latch = new CountDownLatch(1);
+        final AtomicReference<Exception> exceptionHolder = new AtomicReference<>();
+        final AtomicReference<List<Map<String, Object>>> responseHolder = new AtomicReference<>();
+
+        try (var threadPool = createThreadPool()) {
+            final var emptyAggregationClient = new MyMockClientWithEmptyAggregation(threadPool);
+            pivot.preview(emptyAggregationClient, null, new HashMap<>(), new SourceConfig("test"), null, 1, ActionListener.wrap(r -> {
+                responseHolder.set(r);
+                latch.countDown();
+            }, e -> {
+                exceptionHolder.set(e);
+                latch.countDown();
+            }));
+            assertTrue(latch.await(100, TimeUnit.MILLISECONDS));
+        }
+        assertThat(exceptionHolder.get(), is(nullValue()));
+        assertThat(responseHolder.get(), is(empty()));
+    }
+
+    public void testPreviewForCompositeAggregation() throws Exception {
+        Function pivot = new Pivot(
+            PivotConfigTests.randomPivotConfig(),
+            SettingsConfigTests.randomSettingsConfig(),
+            TransformConfigVersion.CURRENT,
+            Collections.emptySet()
+        ) {
+            protected Stream<Map<String, Object>> extractResults(
+                CompositeAggregation agg,
+                Map<String, String> fieldTypeMap,
+                TransformIndexerStats transformIndexerStats,
+                TransformProgress transformProgress
+            ) {
+                return Stream.of(Map.ofEntries(Map.entry(TransformField.DOCUMENT_ID_FIELD, "1234"), Map.entry("testKey", "testValue")));
+            }
+        };
+
+        CountDownLatch latch = new CountDownLatch(1);
+        final AtomicReference<Exception> exceptionHolder = new AtomicReference<>();
+        final AtomicReference<List<Map<String, Object>>> responseHolder = new AtomicReference<>();
+
+        try (var threadPool = createThreadPool()) {
+            final var compositeAggregationClient = new MyMockClientWithCompositeAggregation(threadPool);
+            pivot.preview(compositeAggregationClient, null, new HashMap<>(), new SourceConfig("test"), null, 1, ActionListener.wrap(r -> {
+                responseHolder.set(r);
+                latch.countDown();
+            }, e -> {
+                exceptionHolder.set(e);
+                latch.countDown();
+            }));
+            assertTrue(latch.await(100, TimeUnit.MILLISECONDS));
+        }
+
+        assertThat(exceptionHolder.get(), is(nullValue()));
+        assertThat(
+            responseHolder.get(),
+            containsInAnyOrder(
+                Map.ofEntries(
+                    Map.entry(TransformField.DOCUMENT_ID_FIELD, "1234"),
+                    Map.entry(TransformField.DOCUMENT_SOURCE_FIELD, Map.of("testKey", "testValue"))
+                )
+            )
+        );
+    }
+
+    private static SearchResponse searchResponseFromAggs(InternalAggregations aggs) {
+        return SearchResponseUtils.response(SearchHits.EMPTY_WITH_TOTAL_HITS).aggregations(aggs).shards(10, 5, 0).build();
+    }
+
     private class MyMockClient extends NoOpClient {
-        MyMockClient(String testName) {
-            super(testName);
+        MyMockClient(ThreadPool threadPool) {
+            super(threadPool);
         }
 
         @SuppressWarnings("unchecked")
@@ -217,8 +389,7 @@ public class PivotTests extends ESTestCase {
             ActionListener<Response> listener
         ) {
 
-            if (request instanceof SearchRequest) {
-                SearchRequest searchRequest = (SearchRequest) request;
+            if (request instanceof SearchRequest searchRequest) {
                 List<ShardSearchFailure> searchFailures = new ArrayList<>();
 
                 for (String index : searchRequest.indices()) {
@@ -231,32 +402,57 @@ public class PivotTests extends ESTestCase {
                         searchFailures.add(new ShardSearchFailure(new RuntimeException("shard failed")));
                     }
                 }
-
-                final SearchResponseSections sections = new SearchResponseSections(
-                    new SearchHits(new SearchHit[0], new TotalHits(0L, TotalHits.Relation.EQUAL_TO), 0),
-                    null,
-                    null,
-                    false,
-                    null,
-                    null,
-                    1
+                ActionListener.respondAndRelease(
+                    listener,
+                    (Response) SearchResponseUtils.response(SearchHits.EMPTY_WITH_TOTAL_HITS)
+                        .shards(10, searchFailures.isEmpty() ? 5 : 0, 0)
+                        .shardFailures(searchFailures)
+                        .build()
                 );
-                final SearchResponse response = new SearchResponse(
-                    sections,
-                    null,
-                    10,
-                    searchFailures.size() > 0 ? 0 : 5,
-                    0,
-                    0,
-                    searchFailures.toArray(new ShardSearchFailure[searchFailures.size()]),
-                    null
-                );
-
-                listener.onResponse((Response) response);
                 return;
             }
 
             super.doExecute(action, request, listener);
+        }
+    }
+
+    private class MyMockClientWithEmptyAggregation extends NoOpClient {
+        MyMockClientWithEmptyAggregation(ThreadPool threadPool) {
+            super(threadPool);
+        }
+
+        @SuppressWarnings("unchecked")
+        @Override
+        protected <Request extends ActionRequest, Response extends ActionResponse> void doExecute(
+            ActionType<Response> action,
+            Request request,
+            ActionListener<Response> listener
+        ) {
+            SearchResponse response = mock(SearchResponse.class);
+            when(response.getAggregations()).thenReturn(InternalAggregations.from(List.of()));
+            listener.onResponse((Response) response);
+        }
+    }
+
+    private class MyMockClientWithCompositeAggregation extends NoOpClient {
+        MyMockClientWithCompositeAggregation(ThreadPool threadPool) {
+            super(threadPool);
+        }
+
+        @SuppressWarnings("unchecked")
+        @Override
+        protected <Request extends ActionRequest, Response extends ActionResponse> void doExecute(
+            ActionType<Response> action,
+            Request request,
+            ActionListener<Response> listener
+        ) {
+            SearchResponse response = mock();
+            InternalComposite compositeAggregation = mock();
+            when(compositeAggregation.getName()).thenReturn(COMPOSITE_AGGREGATION_NAME);
+            InternalComposite.InternalBucket bucket = mock();
+            when(compositeAggregation.getBuckets()).thenReturn(List.of(bucket));
+            when(response.getAggregations()).thenReturn(InternalAggregations.from(List.of(compositeAggregation)));
+            listener.onResponse((Response) response);
         }
     }
 
@@ -274,68 +470,100 @@ public class PivotTests extends ESTestCase {
 
     private AggregationConfig getAggregationConfig(String agg) throws IOException {
         if (agg.equals(AggregationType.SCRIPTED_METRIC.getName())) {
-            return parseAggregations(
-                "{\"pivot_scripted_metric\": {\n"
-                    + "\"scripted_metric\": {\n"
-                    + "    \"init_script\" : \"state.transactions = []\",\n"
-                    + "    \"map_script\" : "
-                    + "        \"state.transactions.add(doc.type.value == 'sale' ? doc.amount.value : -1 * doc.amount.value)\", \n"
-                    + "    \"combine_script\" : \"double profit = 0; for (t in state.transactions) { profit += t } return profit\",\n"
-                    + "    \"reduce_script\" : \"double profit = 0; for (a in states) { profit += a } return profit\"\n"
-                    + "  }\n"
-                    + "}}"
-            );
+            return parseAggregations("""
+                {
+                  "pivot_scripted_metric": {
+                    "scripted_metric": {
+                      "init_script": "state.transactions = []",
+                      "map_script": "state.transactions.add(doc.type.value == 'sale' ? doc.amount.value : -1 * doc.amount.value)",
+                      "combine_script": "double profit = 0; for (t in state.transactions) { profit += t } return profit",
+                      "reduce_script": "double profit = 0; for (a in states) { profit += a } return profit"
+                    }
+                  }
+                }""");
         }
         if (agg.equals(AggregationType.BUCKET_SCRIPT.getName())) {
-            return parseAggregations(
-                "{\"pivot_bucket_script\":{"
-                    + "\"bucket_script\":{"
-                    + "\"buckets_path\":{\"param_1\":\"other_bucket\"},"
-                    + "\"script\":\"return params.param_1\"}}}"
-            );
+            return parseAggregations("""
+                {
+                  "pivot_bucket_script": {
+                    "bucket_script": {
+                      "buckets_path": {
+                        "param_1": "other_bucket"
+                      },
+                      "script": "return params.param_1"
+                    }
+                  }
+                }""");
         }
         if (agg.equals(AggregationType.BUCKET_SELECTOR.getName())) {
-            return parseAggregations(
-                "{\"pivot_bucket_selector\":{"
-                    + "\"bucket_selector\":{"
-                    + "\"buckets_path\":{\"param_1\":\"other_bucket\"},"
-                    + "\"script\":\"params.param_1 > 42.0\"}}}"
-            );
+            return parseAggregations("""
+                {
+                  "pivot_bucket_selector": {
+                    "bucket_selector": {
+                      "buckets_path": {
+                        "param_1": "other_bucket"
+                      },
+                      "script": "params.param_1 > 42.0"
+                    }
+                  }
+                }""");
         }
         if (agg.equals(AggregationType.WEIGHTED_AVG.getName())) {
-            return parseAggregations(
-                "{\n"
-                    + "\"pivot_weighted_avg\": {\n"
-                    + "  \"weighted_avg\": {\n"
-                    + "   \"value\": {\"field\": \"values\"},\n"
-                    + "   \"weight\": {\"field\": \"weights\"}\n"
-                    + "  }\n"
-                    + "}\n"
-                    + "}"
-            );
+            return parseAggregations("""
+                {
+                "pivot_weighted_avg": {
+                  "weighted_avg": {
+                   "value": {"field": "values"},
+                   "weight": {"field": "weights"}
+                  }
+                }
+                }""");
         }
         if (agg.equals(AggregationType.FILTER.getName())) {
-            return parseAggregations(
-                "{" + "\"pivot_filter\": {" + "  \"filter\": {" + "   \"term\": {\"field\": \"value\"}" + "  }" + "}" + "}"
-            );
+            return parseAggregations("""
+                {
+                  "pivot_filter": {
+                    "filter": {
+                      "term": {
+                        "field": "value"
+                      }
+                    }
+                  }
+                }""");
         }
         if (agg.equals(AggregationType.GEO_LINE.getName())) {
-            return parseAggregations(
-                "{\"pivot_geo_line\": {\"geo_line\": {\"point\": {\"field\": \"values\"}, \"sort\":{\"field\": \"timestamp\"}}}}"
-            );
+            return parseAggregations("""
+                {
+                  "pivot_geo_line": {
+                    "geo_line": {
+                      "point": {
+                        "field": "values"
+                      },
+                      "sort": {
+                        "field": "timestamp"
+                      }
+                    }
+                  }
+                }""");
         }
         if (agg.equals("global")) {
-            return parseAggregations("{\"pivot_global\": {\"global\": {}}}");
+            return parseAggregations("""
+                {"pivot_global": {"global": {}}}""");
         }
 
-        return parseAggregations(
-            "{\n" + "  \"pivot_" + agg + "\": {\n" + "    \"" + agg + "\": {\n" + "      \"field\": \"values\"\n" + "    }\n" + "  }" + "}"
-        );
+        return parseAggregations(Strings.format("""
+            {
+              "pivot_%s": {
+                "%s": {
+                  "field": "values"
+                }
+              }
+            }""", agg, agg));
     }
 
     private AggregationConfig parseAggregations(String json) throws IOException {
         final XContentParser parser = XContentType.JSON.xContent()
-            .createParser(xContentRegistry(), DeprecationHandler.THROW_UNSUPPORTED_OPERATION, json);
+            .createParser(XContentParserConfiguration.EMPTY.withRegistry(xContentRegistry()), json);
         // parseAggregators expects to be already inside the xcontent object
         assertThat(parser.nextToken(), equalTo(XContentParser.Token.START_OBJECT));
         return AggregationConfig.fromXContent(parser, false);
@@ -352,7 +580,7 @@ public class PivotTests extends ESTestCase {
     private static void validate(Client client, SourceConfig source, Function pivot, boolean expectValid) throws Exception {
         CountDownLatch latch = new CountDownLatch(1);
         final AtomicReference<Exception> exceptionHolder = new AtomicReference<>();
-        pivot.validateQuery(client, source, ActionListener.wrap(validity -> {
+        pivot.validateQuery(client, emptyMap(), source, null, ActionListener.wrap(validity -> {
             assertEquals(expectValid, validity);
             latch.countDown();
         }, e -> {
